save NNexus links

--- a/html/62-00-BibliographyForStatistics.html
+++ b/html/62-00-BibliographyForStatistics.html
@@ -31,7 +31,7 @@
 <span class="ltx_tag ltx_tag_enumerate">1.</span> 
 <div id="I1.i1.p1" class="ltx_para">
 <p class="ltx_p">David Freedman, Robert Pisani, Roger Purves,
-<em class="ltx_emph ltx_font_italic">Statistics</em>, 3rd ed., W. W. Norton &amp; Company, 1997.</p>
+<em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/statistic">Statistics</a></em>, 3rd ed., W. W. Norton &amp; Company, 1997.</p>
 </div>
 </li>
 <li id="I1.i2" class="ltx_item" style="list-style-type:none;">
@@ -132,20 +132,20 @@ York, 1977.</p>
 <span class="ltx_tag ltx_tag_enumerate">2.</span> 
 <div id="I4.i2.p1" class="ltx_para">
 <p class="ltx_p">Douglas C. Montgomery, Elizabeth A. Peck, G. Geoffrey Vining,
-<em class="ltx_emph ltx_font_italic">Introduction to Linear Regression Analysis</em>, 3rd ed.,
+<em class="ltx_emph ltx_font_italic">Introduction to <a class="nnexus_concept" href="http://mathworld.wolfram.com/LinearRegression.html">Linear Regression</a> Analysis</em>, 3rd ed.,
 Wiley-Interscience, 2001.</p>
 </div>
 </li>
 <li id="I4.i3" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">3.</span> 
 <div id="I4.i3.p1" class="ltx_para">
-<p class="ltx_p">Henry Scheffé, <em class="ltx_emph ltx_font_italic">The Analysis of Variance</em>, Wiley-Interscience, 1999.</p>
+<p class="ltx_p">Henry Scheffé, <em class="ltx_emph ltx_font_italic">The <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Analysis of Variance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/AnalysisofVariance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/generallinearmodel"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></em>, Wiley-Interscience, 1999.</p>
 </div>
 </li>
 <li id="I4.i4" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">4.</span> 
 <div id="I4.i4.p1" class="ltx_para">
-<p class="ltx_p">Peter McCullagh, J. A. Nelder, <em class="ltx_emph ltx_font_italic">Generalized Linear Models</em>, 2nd ed.,
+<p class="ltx_p">Peter McCullagh, J. A. Nelder, <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/generalizedlinearmodel">Generalized Linear Models</a></em>, 2nd ed.,
 Monographs on Statistics and Applied Probability 37, Chapman &amp;
 Hall/CRC, 1999.</p>
 </div>
@@ -185,7 +185,7 @@ Statistical Analysis</em>, 3rd ed., Wiley-Interscience, 2003</p>
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">bibliography for statistics</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/bibliographyforstatistics">bibliography for statistics</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
@@ -220,7 +220,7 @@ Statistical Analysis</em>, 3rd ed., Wiley-Interscience, 2003</p>
 <td class="ltx_td ltx_align_left ltx_border_r">Bibliography</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l">Classification</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></th>
 <td class="ltx_td ltx_align_left ltx_border_b ltx_border_r">msc 62-00</td>
 </tr>
 </tbody>
