--- a/html/62-00-Covariance.html
+++ b/html/62-00-Covariance.html
@@ -20,7 +20,7 @@
 <br class="ltx_break">
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">The <em class="ltx_emph ltx_font_italic">covariance</em> of two random variables <math id="p2.m1" class="ltx_Math" alttext="X_{1}" display="inline"><msub><mi>X</mi><mn>1</mn></msub></math> and <math id="p2.m2" class="ltx_Math" alttext="X_{2}" display="inline"><msub><mi>X</mi><mn>2</mn></msub></math> with mean (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/ExpectedValue</span>) <math id="p2.m3" class="ltx_Math" alttext="\mu_{1}" display="inline"><msub><mi>μ</mi><mn>1</mn></msub></math> and <math id="p2.m4" class="ltx_Math" alttext="\mu_{2}" display="inline"><msub><mi>μ</mi><mn>2</mn></msub></math> respectively is defined as</p>
+<p class="ltx_p">The <em class="ltx_emph ltx_font_italic"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">covariance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Covariance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/covariance"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></em> of two <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">random variables</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/RandomVariable.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/randomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="p2.m1" class="ltx_Math" alttext="X_{1}" display="inline"><msub><mi>X</mi><mn>1</mn></msub></math> and <math id="p2.m2" class="ltx_Math" alttext="X_{2}" display="inline"><msub><mi>X</mi><mn>2</mn></msub></math> with mean (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/ExpectedValue</span>) <math id="p2.m3" class="ltx_Math" alttext="\mu_{1}" display="inline"><msub><mi>μ</mi><mn>1</mn></msub></math> and <math id="p2.m4" class="ltx_Math" alttext="\mu_{2}" display="inline"><msub><mi>μ</mi><mn>2</mn></msub></math> respectively is defined as</p>
 </div>
 <div id="p3" class="ltx_para">
 <table id="S0.E1" class="ltx_equation ltx_eqn_table">
@@ -34,13 +34,13 @@
 </table>
 </div>
 <div id="p4" class="ltx_para">
-<p class="ltx_p">The covariance of a random variable <math id="p4.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> with itself is simply the variance, <math id="p4.m2" class="ltx_Math" alttext="E[(X-\mu)^{2}]" display="inline"><mrow><mi>E</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><msup><mrow><mo stretchy="false">(</mo><mrow><mi>X</mi><mo>-</mo><mi>μ</mi></mrow><mo stretchy="false">)</mo></mrow><mn>2</mn></msup><mo stretchy="false">]</mo></mrow></mrow></math>.</p>
+<p class="ltx_p">The covariance of a random variable <math id="p4.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> with itself is simply the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">variance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Variance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/variance"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, <math id="p4.m2" class="ltx_Math" alttext="E[(X-\mu)^{2}]" display="inline"><mrow><mi>E</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><msup><mrow><mo stretchy="false">(</mo><mrow><mi>X</mi><mo>-</mo><mi>μ</mi></mrow><mo stretchy="false">)</mo></mrow><mn>2</mn></msup><mo stretchy="false">]</mo></mrow></mrow></math>.</p>
 </div>
 <div id="p5" class="ltx_para">
-<p class="ltx_p">Covariance captures a measure of the correlation of two variables. Positive covariance indicates that as <math id="p5.m1" class="ltx_Math" alttext="X_{1}" display="inline"><msub><mi>X</mi><mn>1</mn></msub></math> increases, so does <math id="p5.m2" class="ltx_Math" alttext="X_{2}" display="inline"><msub><mi>X</mi><mn>2</mn></msub></math>. Negative covariance indicates <math id="p5.m3" class="ltx_Math" alttext="X_{1}" display="inline"><msub><mi>X</mi><mn>1</mn></msub></math> decreases as <math id="p5.m4" class="ltx_Math" alttext="X_{2}" display="inline"><msub><mi>X</mi><mn>2</mn></msub></math> increases and vice versa. Zero covariance can indicate that <math id="p5.m5" class="ltx_Math" alttext="X_{1}" display="inline"><msub><mi>X</mi><mn>1</mn></msub></math> and <math id="p5.m6" class="ltx_Math" alttext="X_{2}" display="inline"><msub><mi>X</mi><mn>2</mn></msub></math> are uncorrelated.</p>
+<p class="ltx_p">Covariance captures a <a class="nnexus_concept" href="http://planetmath.org/measure">measure</a> of the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">correlation</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Correlation.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/polarity"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of two <a class="nnexus_concept" href="http://planetmath.org/variable">variables</a>. <a class="nnexus_concept" href="http://planetmath.org/positive">Positive</a> covariance indicates that as <math id="p5.m1" class="ltx_Math" alttext="X_{1}" display="inline"><msub><mi>X</mi><mn>1</mn></msub></math> increases, so does <math id="p5.m2" class="ltx_Math" alttext="X_{2}" display="inline"><msub><mi>X</mi><mn>2</mn></msub></math>. Negative covariance indicates <math id="p5.m3" class="ltx_Math" alttext="X_{1}" display="inline"><msub><mi>X</mi><mn>1</mn></msub></math> decreases as <math id="p5.m4" class="ltx_Math" alttext="X_{2}" display="inline"><msub><mi>X</mi><mn>2</mn></msub></math> increases and vice versa. Zero covariance can indicate that <math id="p5.m5" class="ltx_Math" alttext="X_{1}" display="inline"><msub><mi>X</mi><mn>1</mn></msub></math> and <math id="p5.m6" class="ltx_Math" alttext="X_{2}" display="inline"><msub><mi>X</mi><mn>2</mn></msub></math> are uncorrelated.</p>
 </div>
 <div id="p6" class="ltx_para">
-<p class="ltx_p">The <em class="ltx_emph ltx_font_italic">correlation coefficient</em> provides a normalized view of correlation based on covariance:</p>
+<p class="ltx_p">The <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://mathworld.wolfram.com/CorrelationCoefficient.html">correlation coefficient</a></em> provides a normalized view of correlation based on covariance:</p>
 </div>
 <div id="p7" class="ltx_para">
 <table id="S0.E2" class="ltx_equation ltx_eqn_table">
@@ -58,7 +58,7 @@
 <p class="ltx_p"><math id="p8.m1" class="ltx_Math" alttext="\mathrm{corr}(X,Y)" display="inline"><mrow><mi>corr</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><mi>Y</mi><mo stretchy="false">)</mo></mrow></mrow></math> ranges from -1 (for negatively correlated variables) through zero (for uncorrelated variables) to +1 (for positively correlated variables).</p>
 </div>
 <div id="p9" class="ltx_para">
-<p class="ltx_p">While if <math id="p9.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> and <math id="p9.m2" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> are independent we have <math id="p9.m3" class="ltx_Math" alttext="\mathrm{corr}(X,Y)=0" display="inline"><mrow><mrow><mi>corr</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><mi>Y</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mn>0</mn></mrow></math>, the latter does not imply the former.
+<p class="ltx_p">While if <math id="p9.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> and <math id="p9.m2" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> are <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">independent</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/projectivebasis"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/independent"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> we have <math id="p9.m3" class="ltx_Math" alttext="\mathrm{corr}(X,Y)=0" display="inline"><mrow><mrow><mi>corr</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><mi>Y</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mn>0</mn></mrow></math>, the latter does not imply the former.
 </p>
 <table class="ltx_tabular ltx_align_right ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
@@ -67,7 +67,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">covariance</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">Covariance</td>
 </tr>
 <tr class="ltx_tr">
@@ -96,7 +96,7 @@
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
