--- a/html/62-00-GeometricRandomVariable.html
+++ b/html/62-00-GeometricRandomVariable.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">A <span class="ltx_text ltx_font_bold">geometric random variable</span> with parameter <math id="p1.m1" class="ltx_Math" alttext="p\in(0,1]" display="inline"><mrow><mi>p</mi><mo>∈</mo><mrow><mo stretchy="false">(</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy="false">]</mo></mrow></mrow></math> is one whose density distribution function is given by</p>
+<p class="ltx_p">A <span class="ltx_text ltx_font_bold"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">geometric random variable</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/geometricdistribution"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/geometricrandomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></span> with <a class="nnexus_concept" href="http://planetmath.org/parametre">parameter</a> <math id="p1.m1" class="ltx_Math" alttext="p\in(0,1]" display="inline"><mrow><mi>p</mi><mo>∈</mo><mrow><mo stretchy="false">(</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy="false">]</mo></mrow></mrow></math> is one whose <a class="nnexus_concept" href="http://planetmath.org/densityfunction">density</a> <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">distribution function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/DistributionFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/distributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> is given by</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -43,13 +43,13 @@
 <li id="I1.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">2.</span> 
 <div id="I1.i2.p1" class="ltx_para">
-<p class="ltx_p">The expected value of a geometric random variable is given by <math id="I1.i2.p1.m1" class="ltx_Math" alttext="E[X]=\frac{1-p}{p}" display="inline"><mrow><mrow><mi>E</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow><mo>=</mo><mfrac><mrow><mn>1</mn><mo>-</mo><mi>p</mi></mrow><mi>p</mi></mfrac></mrow></math>, and the variance by <math id="I1.i2.p1.m2" class="ltx_Math" alttext="Var[X]=\frac{1-p}{p^{2}}" display="inline"><mrow><mrow><mi>V</mi><mo>⁢</mo><mi>a</mi><mo>⁢</mo><mi>r</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow><mo>=</mo><mfrac><mrow><mn>1</mn><mo>-</mo><mi>p</mi></mrow><msup><mi>p</mi><mn>2</mn></msup></mfrac></mrow></math></p>
+<p class="ltx_p">The <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">expected value</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ExpectedValue.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/expectedvalue"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of a geometric random variable is given by <math id="I1.i2.p1.m1" class="ltx_Math" alttext="E[X]=\frac{1-p}{p}" display="inline"><mrow><mrow><mi>E</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow><mo>=</mo><mfrac><mrow><mn>1</mn><mo>-</mo><mi>p</mi></mrow><mi>p</mi></mfrac></mrow></math>, and the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">variance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Variance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/variance"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> by <math id="I1.i2.p1.m2" class="ltx_Math" alttext="Var[X]=\frac{1-p}{p^{2}}" display="inline"><mrow><mrow><mi>V</mi><mo>⁢</mo><mi>a</mi><mo>⁢</mo><mi>r</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow><mo>=</mo><mfrac><mrow><mn>1</mn><mo>-</mo><mi>p</mi></mrow><msup><mi>p</mi><mn>2</mn></msup></mfrac></mrow></math></p>
 </div>
 </li>
 <li id="I1.i3" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">3.</span> 
 <div id="I1.i3.p1" class="ltx_para">
-<p class="ltx_p">The moment generating function of a geometric random variable is given by <math id="I1.i3.p1.m1" class="ltx_Math" alttext="M_{X}(t)=\frac{p}{1-(1-p)e^{t}}" display="inline"><mrow><mrow><msub><mi>M</mi><mi>X</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mfrac><mi>p</mi><mrow><mn>1</mn><mo>-</mo><mrow><mrow><mo stretchy="false">(</mo><mrow><mn>1</mn><mo>-</mo><mi>p</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><msup><mi>e</mi><mi>t</mi></msup></mrow></mrow></mfrac></mrow></math>.</p>
+<p class="ltx_p">The <a class="nnexus_concept" href="http://planetmath.org/momentgeneratingfunction">moment generating function</a> of a geometric random variable is given by <math id="I1.i3.p1.m1" class="ltx_Math" alttext="M_{X}(t)=\frac{p}{1-(1-p)e^{t}}" display="inline"><mrow><mrow><msub><mi>M</mi><mi>X</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mfrac><mi>p</mi><mrow><mn>1</mn><mo>-</mo><mrow><mrow><mo stretchy="false">(</mo><mrow><mn>1</mn><mo>-</mo><mi>p</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><msup><mi>e</mi><mi>t</mi></msup></mrow></mrow></mfrac></mrow></math>.</p>
 </div>
 </li>
 </ol>
@@ -60,7 +60,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">geometric random variable</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">GeometricRandomVariable</td>
 </tr>
 <tr class="ltx_tr">
@@ -89,7 +89,7 @@
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
@@ -109,7 +109,7 @@
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l">Synonym</th>
-<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r">geometric distribution</td>
+<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r"><a class="nnexus_concept" href="http://mathworld.wolfram.com/GeometricDistribution.html">geometric distribution</a></td>
 </tr>
 </tbody>
 </table>
