--- a/html/62-00-RecursiveZstatistic.html
+++ b/html/62-00-RecursiveZstatistic.html
@@ -18,8 +18,8 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">In respones to: Consider a standard Z-statistic used in hypothesis testing. One of the variables needed to compute the Z-statistic is the number of observations. The problem is that with each additional observation one has to recompute the Z-statistic from scratch. It seems like there is no recursive formulation, e.g. a representation such as
-Z(n) = Z(n-1) + new piece of information. Is there perhaps an approximate recursive formulation? Any other thoughts?
+<p class="ltx_p">In respones to: Consider a standard Z-statistic used in <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">hypothesis testing</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/HypothesisTesting.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/hypothesistesting"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>. One of the <a class="nnexus_concept" href="http://planetmath.org/variable">variables</a> needed to compute the Z-statistic is the number of <a class="nnexus_concept" href="http://planetmath.org/datatypesinstatistics">observations</a>. The problem is that with each additional observation one has to recompute the Z-statistic from scratch. It seems like there is no recursive formulation, e.g. a representation such as
+Z(n) = Z(n-1) + new piece of <a class="nnexus_concept" href="http://planetmath.org/fisherinformationmatrix">information</a>. Is there perhaps an approximate recursive formulation? Any other thoughts?
 Thanks.</p>
 </div>
 <div id="p2" class="ltx_para">
@@ -33,11 +33,11 @@ Thanks.</p>
 </p>
 </div>
 <div id="p5" class="ltx_para">
-<p class="ltx_p">We reject this hypothesis if <math id="p5.m1" class="ltx_Math" alttext="\overline{x}" display="inline"><mover accent="true"><mi>x</mi><mo>¯</mo></mover></math> is either greater than or lower than a critical value.
+<p class="ltx_p">We reject this <a class="nnexus_concept" href="http://planetmath.org/hypothesis">hypothesis</a> if <math id="p5.m1" class="ltx_Math" alttext="\overline{x}" display="inline"><mover accent="true"><mi>x</mi><mo>¯</mo></mover></math> is either greater than or lower than a critical value.
 Assuming the critical values do not change all you have to update is <math id="p5.m2" class="ltx_Math" alttext="Z_{0}" display="inline"><msub><mi>Z</mi><mn>0</mn></msub></math>.</p>
 </div>
 <div id="p6" class="ltx_para">
-<p class="ltx_p">The test statistic is:</p>
+<p class="ltx_p">The <a class="nnexus_concept" href="http://mathworld.wolfram.com/TestStatistic.html">test statistic</a> is:</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -52,8 +52,8 @@ Assuming the critical values do not change all you have to update is <math id="p
 using <math id="p7.m4" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>, <math id="p7.m5" class="ltx_Math" alttext="\overline{X}" display="inline"><mover accent="true"><mi>X</mi><mo>¯</mo></mover></math>, and <math id="p7.m6" class="ltx_Math" alttext="X_{n+1}" display="inline"><msub><mi>X</mi><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></msub></math>, then recalculate <math id="p7.m7" class="ltx_Math" alttext="Z_{0}" display="inline"><msub><mi>Z</mi><mn>0</mn></msub></math>.</p>
 </div>
 <div id="p8" class="ltx_para">
-<p class="ltx_p">Now if you do not know <math id="p8.m1" class="ltx_Math" alttext="\sigma" display="inline"><mi>σ</mi></math>, and your sample size is large enough to use the Normal distribution, you have
-to update your sample variance, <math id="p8.m2" class="ltx_Math" alttext="S^{2}" display="inline"><msup><mi>S</mi><mn>2</mn></msup></math>. If your sample size is not large enough and you are using the t-distribution then
+<p class="ltx_p">Now if you do not know <math id="p8.m1" class="ltx_Math" alttext="\sigma" display="inline"><mi>σ</mi></math>, and your sample size is large enough to use the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Normal distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/NormalDistribution.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/normalrandomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, you have
+to update your <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">sample variance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/SampleVariance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/statistic"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, <math id="p8.m2" class="ltx_Math" alttext="S^{2}" display="inline"><msup><mi>S</mi><mn>2</mn></msup></math>. If your sample size is not large enough and you are using the <a class="nnexus_concept" href="http://planetmath.org/tdistribution">t-distribution</a> then
 your critical values will change when <math id="p8.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> changes.</p>
 </div>
 <div id="p9" class="ltx_para">
@@ -65,10 +65,10 @@ so you can update <math id="p9.m4" class="ltx_Math" alttext="S" display="inline"
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Recursive Z-statistic</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/recursivezstatistic">Recursive Z-statistic</a></td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">RecursiveZstatistic</td>
 </tr>
 <tr class="ltx_tr">
@@ -97,10 +97,10 @@ so you can update <math id="p9.m4" class="ltx_Math" alttext="S" display="inline"
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l">Classification</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></th>
 <td class="ltx_td ltx_align_left ltx_border_b ltx_border_r">msc 62-00</td>
 </tr>
 </tbody>
