--- a/html/62-00-Variance.html
+++ b/html/62-00-Variance.html
@@ -23,7 +23,7 @@
 <h2 class="ltx_title ltx_title_subsection">Definition</h2>
 
 <div id="S0.SSx1.p1" class="ltx_para">
-<p class="ltx_p">The <em class="ltx_emph ltx_font_italic">variance</em> of a real-valued random variable <math id="S0.SSx1.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is</p>
+<p class="ltx_p">The <em class="ltx_emph ltx_font_italic"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">variance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Variance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/variance"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></em> of a real-valued <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">random variable</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/RandomVariable.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/randomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="S0.SSx1.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -32,18 +32,18 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">provided that both expectations <math id="S0.SSx1.p1.m2" class="ltx_Math" alttext="\mathbb{E}X" display="inline"><mrow><mi>𝔼</mi><mo>⁢</mo><mi>X</mi></mrow></math> and <math id="S0.SSx1.p1.m3" class="ltx_Math" alttext="\mathbb{E}[(X-m)^{2}]" display="inline"><mrow><mi>𝔼</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><msup><mrow><mo stretchy="false">(</mo><mrow><mi>X</mi><mo>-</mo><mi>m</mi></mrow><mo stretchy="false">)</mo></mrow><mn>2</mn></msup><mo stretchy="false">]</mo></mrow></mrow></math> exist.</p>
+<p class="ltx_p">provided that both <a class="nnexus_concept" href="http://planetmath.org/expectedvalue">expectations</a> <math id="S0.SSx1.p1.m2" class="ltx_Math" alttext="\mathbb{E}X" display="inline"><mrow><mi>𝔼</mi><mo>⁢</mo><mi>X</mi></mrow></math> and <math id="S0.SSx1.p1.m3" class="ltx_Math" alttext="\mathbb{E}[(X-m)^{2}]" display="inline"><mrow><mi>𝔼</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><msup><mrow><mo stretchy="false">(</mo><mrow><mi>X</mi><mo>-</mo><mi>m</mi></mrow><mo stretchy="false">)</mo></mrow><mn>2</mn></msup><mo stretchy="false">]</mo></mrow></mrow></math> exist.</p>
 </div>
 <div id="S0.SSx1.p2" class="ltx_para">
 <p class="ltx_p">The variance of <math id="S0.SSx1.p2.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is often denoted by <math id="S0.SSx1.p2.m2" class="ltx_Math" alttext="\sigma^{2}(X)" display="inline"><mrow><msup><mi>σ</mi><mn>2</mn></msup><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow></mrow></math>, <math id="S0.SSx1.p2.m3" class="ltx_Math" alttext="\sigma^{2}_{X}" display="inline"><msubsup><mi>σ</mi><mi>X</mi><mn>2</mn></msubsup></math>,
 or simply <math id="S0.SSx1.p2.m4" class="ltx_Math" alttext="\sigma^{2}" display="inline"><msup><mi>σ</mi><mn>2</mn></msup></math>.
-The exponent on <math id="S0.SSx1.p2.m5" class="ltx_Math" alttext="\sigma" display="inline"><mi>σ</mi></math> is put there so that the number
+The <a class="nnexus_concept" href="http://planetmath.org/exponent">exponent</a> on <math id="S0.SSx1.p2.m5" class="ltx_Math" alttext="\sigma" display="inline"><mi>σ</mi></math> is put there so that the number
 <math id="S0.SSx1.p2.m6" class="ltx_Math" alttext="\sigma=\sqrt{\sigma^{2}}" display="inline"><mrow><mi>σ</mi><mo>=</mo><msqrt><msup><mi>σ</mi><mn>2</mn></msup></msqrt></mrow></math>
 is measured in the same units as the random variable <math id="S0.SSx1.p2.m7" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>
 itself.</p>
 </div>
 <div id="S0.SSx1.p3" class="ltx_para">
-<p class="ltx_p">The quantity <math id="S0.SSx1.p3.m1" class="ltx_Math" alttext="\sigma=\sqrt{\operatorname{Var}X}" display="inline"><mrow><mi>σ</mi><mo>=</mo><msqrt><mrow><mi>Var</mi><mo>⁡</mo><mi>X</mi></mrow></msqrt></mrow></math> is called the <em class="ltx_emph ltx_font_italic">standard deviation</em>
+<p class="ltx_p">The quantity <math id="S0.SSx1.p3.m1" class="ltx_Math" alttext="\sigma=\sqrt{\operatorname{Var}X}" display="inline"><mrow><mi>σ</mi><mo>=</mo><msqrt><mrow><mi>Var</mi><mo>⁡</mo><mi>X</mi></mrow></msqrt></mrow></math> is called the <em class="ltx_emph ltx_font_italic"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">standard deviation</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/StandardDeviation.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/standarddeviation"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></em>
 of <math id="S0.SSx1.p3.m2" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>;
 because of the compatibility of the measuring units,
 standard deviation is usually the quantity that is quoted
@@ -54,19 +54,19 @@ to describe an emprical probability distribution, rather than the variance.</p>
 <h2 class="ltx_title ltx_title_subsection">Usage</h2>
 
 <div id="S0.SSx2.p1" class="ltx_para">
-<p class="ltx_p">The variance is a measure of the dispersion or variation
+<p class="ltx_p">The variance is a <a class="nnexus_concept" href="http://planetmath.org/measure">measure</a> of the dispersion or variation
 of a random variable
 about its mean <math id="S0.SSx2.p1.m1" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math>.</p>
 </div>
 <div id="S0.SSx2.p2" class="ltx_para">
 <p class="ltx_p">It is not always the best measure of dispersion for all random variables,
 but compared to other measures,
-such as the absolute mean deviation, <math id="S0.SSx2.p2.m1" class="ltx_Math" alttext="\mathbb{E}[\lvert X-m\rvert]" display="inline"><mrow><mi>𝔼</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mrow><mo fence="true" stretchy="false">|</mo><mrow><mi>X</mi><mo>-</mo><mi>m</mi></mrow><mo fence="true" stretchy="false">|</mo></mrow><mo stretchy="false">]</mo></mrow></mrow></math>,
+such as the absolute <a class="nnexus_concept" href="http://mathworld.wolfram.com/MeanDeviation.html">mean deviation</a>, <math id="S0.SSx2.p2.m1" class="ltx_Math" alttext="\mathbb{E}[\lvert X-m\rvert]" display="inline"><mrow><mi>𝔼</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mrow><mo fence="true" stretchy="false">|</mo><mrow><mi>X</mi><mo>-</mo><mi>m</mi></mrow><mo fence="true" stretchy="false">|</mo></mrow><mo stretchy="false">]</mo></mrow></mrow></math>,
 the variance is the most tractable analytically.</p>
 </div>
 <div id="S0.SSx2.p3" class="ltx_para">
 <p class="ltx_p">The variance is closely related to the <math id="S0.SSx2.p3.m1" class="ltx_Math" alttext="\mathbf{L}^{2}" display="inline"><msup><mi>𝐋</mi><mn>2</mn></msup></math> norm for
-random variables over a probability space.</p>
+random variables over a <a class="nnexus_concept" href="http://mathworld.wolfram.com/ProbabilitySpace.html">probability space</a>.</p>
 </div>
 </section>
 <section id="S0.SSx3" class="ltx_subsection">
@@ -87,14 +87,14 @@ the square of the first moment:</p>
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">This formula is often used to calculate variance analytically.</p>
+<p class="ltx_p">This <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">formula</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Formula.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/logicallanguage"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/firstorderlanguage"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> is often used to calculate variance analytically.</p>
 </div>
 </li>
 <li id="I1.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">2.</span> 
 <div id="I1.i2.p1" class="ltx_para">
-<p class="ltx_p">Variance is not a linear function. It scales quadratically,
-and is not affected by shifts in the mean of the distribution:</p>
+<p class="ltx_p">Variance is not a <a class="nnexus_concept" href="http://mathworld.wolfram.com/LinearFunction.html">linear function</a>. It scales quadratically,
+and is not affected by shifts in the mean of the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/distributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/probabilitydistributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>:</p>
 <table id="S0.Ex3" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -132,8 +132,8 @@ the minimum of expected squared deviation of a random variable from any point:</
 <span class="ltx_tag ltx_tag_enumerate">5.</span> 
 <div id="I1.i5.p1" class="ltx_para">
 <p class="ltx_p">For any two random variables <math id="I1.i5.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> and <math id="I1.i5.p1.m2" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> whose variances exist,
-the variance of the linear combination <math id="I1.i5.p1.m3" class="ltx_Math" alttext="aX+bY" display="inline"><mrow><mrow><mi>a</mi><mo>⁢</mo><mi>X</mi></mrow><mo>+</mo><mrow><mi>b</mi><mo>⁢</mo><mi>Y</mi></mrow></mrow></math>
-can be expressed in terms of their covariance:</p>
+the variance of the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">linear combination</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/LinearCombination.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/linearcombination"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="I1.i5.p1.m3" class="ltx_Math" alttext="aX+bY" display="inline"><mrow><mrow><mi>a</mi><mo>⁢</mo><mi>X</mi></mrow><mo>+</mo><mrow><mi>b</mi><mo>⁢</mo><mi>Y</mi></mrow></mrow></math>
+can be expressed in terms of their <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">covariance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Covariance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/covariance"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>:</p>
 <table id="S0.Ex5" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -150,9 +150,9 @@ and <math id="I1.i5.p1.m5" class="ltx_Math" alttext="a,b\in\mathbb{R}" display="
 <li id="I1.i6" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">6.</span> 
 <div id="I1.i6.p1" class="ltx_para">
-<p class="ltx_p">For a random variable <math id="I1.i6.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>, with actual observations <math id="I1.i6.p1.m2" class="ltx_Math" alttext="x_{1},\ldots,x_{n}" display="inline"><mrow><msub><mi>x</mi><mn>1</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>x</mi><mi>n</mi></msub></mrow></math>,
+<p class="ltx_p">For a random variable <math id="I1.i6.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>, with actual <a class="nnexus_concept" href="http://planetmath.org/datatypesinstatistics">observations</a> <math id="I1.i6.p1.m2" class="ltx_Math" alttext="x_{1},\ldots,x_{n}" display="inline"><mrow><msub><mi>x</mi><mn>1</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>x</mi><mi>n</mi></msub></mrow></math>,
 its variance is often estimated
-empirically with the <em class="ltx_emph ltx_font_italic">sample variance</em>:</p>
+empirically with the <em class="ltx_emph ltx_font_italic"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">sample variance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/SampleVariance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/statistic"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></em>:</p>
 <table id="S0.Ex6" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
