--- a/html/62-01-ProbabilityProblem.html
+++ b/html/62-01-ProbabilityProblem.html
@@ -21,7 +21,7 @@
 <p class="ltx_p">This is in response to the following request:</p>
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">A parent particle divides into 0,1,or 2 particles with probabilities 1/4,1/2,1/4.it disappears after splitting.let Xn denotes the number of particles in n-th generations with X0=1.find P(X2¿0) and the probabilities that X1=2 given that X2=1.</p>
+<p class="ltx_p">A parent particle divides into 0,1,or 2 particles with <a class="nnexus_concept" href="http://mathworld.wolfram.com/Probability.html">probabilities</a> 1/4,1/2,1/4.it disappears after splitting.let Xn denotes the number of particles in n-th generations with X0=1.find P(X2¿0) and the probabilities that X1=2 given that X2=1.</p>
 </div>
 <div id="p3" class="ltx_para">
 <p class="ltx_p">http://planetmath.org/?op=getobj;from=requests;id=927</p>
@@ -70,7 +70,7 @@
 <p class="ltx_p">Using your values I get 3/32.</p>
 </div>
 <div id="p10" class="ltx_para">
-<p class="ltx_p">2) From the definition of conditional probability</p>
+<p class="ltx_p">2) From the definition of <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">conditional probability</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ConditionalProbability.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/conditionalprobability"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></p>
 <table id="S0.Ex4" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -118,7 +118,7 @@ To get to <math id="p12.m1" class="ltx_Math" alttext="X_{2}=1" display="inline">
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">probability problem</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/probabilityproblem">probability problem</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
