--- a/html/62-01-StatisticsOnPlanetMath.html
+++ b/html/62-01-StatisticsOnPlanetMath.html
@@ -18,22 +18,22 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">This entry is supposed to become a textbook on statistics – or
+<p class="ltx_p">This entry is supposed to become a textbook on <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">statistics</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Statistic.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://mathworld.wolfram.com/Statistics.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/statistic"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> – or
 at least a guide to the statistics-related entries on PlanetMath.
-It will refer to related entries (e.g. from probability) that
+It will refer to related entries (e.g. from <a class="nnexus_concept" href="http://mathworld.wolfram.com/Probability.html">probability</a>) that
 are not listed in the same MSC.</p>
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">(This is currently a stub article. See also Textbook projects on PlanetMath.)
+<p class="ltx_p">(This is currently a stub article. See also <a class="nnexus_concept" href="http://planetmath.org/textbookprojectsonplanetmath">Textbook projects on PlanetMath</a>.)
 </p>
 <table class="ltx_tabular ltx_align_right ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">statistics on PlanetMath</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/statisticsonplanetmath">statistics on PlanetMath</a></td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">StatisticsOnPlanetMath</td>
 </tr>
 <tr class="ltx_tr">
