--- a/html/62-07-LehmerMean.html
+++ b/html/62-07-LehmerMean.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">Let <math id="p1.m1" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math> be a real number.  <em class="ltx_emph ltx_font_italic">Lehmer mean</em> of the positive numbers <math id="p1.m2" class="ltx_Math" alttext="a_{1},\,\ldots,\,a_{n}" display="inline"><mrow><msub><mi>a</mi><mn>1</mn></msub><mo rspace="4.2pt">,</mo><mi mathvariant="normal">…</mi><mo rspace="4.2pt">,</mo><msub><mi>a</mi><mi>n</mi></msub></mrow></math> is defined as</p>
+<p class="ltx_p">Let <math id="p1.m1" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math> be a <a class="nnexus_concept" href="http://planetmath.org/realnumber">real number</a>.  <em class="ltx_emph ltx_font_italic"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Lehmer mean</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/LehmerMean.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/lehmermean"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></em> of the positive numbers <math id="p1.m2" class="ltx_Math" alttext="a_{1},\,\ldots,\,a_{n}" display="inline"><mrow><msub><mi>a</mi><mn>1</mn></msub><mo rspace="4.2pt">,</mo><mi mathvariant="normal">…</mi><mo rspace="4.2pt">,</mo><msub><mi>a</mi><mi>n</mi></msub></mrow></math> is defined as</p>
 <table id="S0.EGx1" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tbody id="S0.E1"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -29,7 +29,7 @@
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(1)</span></td>
 </tr></tbody>
 </table>
-<p class="ltx_p">This definition fulfils both requirements set for means (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/Mean3</span>).  In the case of Lehmer mean of two positive numbers <math id="p1.m3" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> and <math id="p1.m4" class="ltx_Math" alttext="b" display="inline"><mi>b</mi></math> we see for  <math id="p1.m5" class="ltx_Math" alttext="a\leqq b" display="inline"><mrow><mi>a</mi><mo>≦</mo><mi>b</mi></mrow></math>  that</p>
+<p class="ltx_p">This <a class="nnexus_concept" href="http://planetmath.org/definition">definition</a> fulfils both requirements set for means (<span class="ltx_text ltx_font_typewriter">http://<a class="nnexus_concept" href="http://planetmath.org/planetmath">planetmath</a>.org/Mean3</span>).  In the case of Lehmer mean of two positive numbers <math id="p1.m3" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> and <math id="p1.m4" class="ltx_Math" alttext="b" display="inline"><mi>b</mi></math> we see for  <math id="p1.m5" class="ltx_Math" alttext="a\leqq b" display="inline"><mrow><mi>a</mi><mo>≦</mo><mi>b</mi></mrow></math>  that</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -42,7 +42,7 @@
 </table>
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">The Lehmer mean of certain numbers is the greater the greater is the parametre <math id="p2.m1" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math>, i.e.</p>
+<p class="ltx_p">The Lehmer mean of certain numbers is the <a class="nnexus_concept" href="http://mathworld.wolfram.com/Greater.html">greater</a> the greater is the <a class="nnexus_concept" href="http://planetmath.org/parametre">parametre</a> <math id="p2.m1" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math>, i.e.</p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -52,7 +52,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">This turns out from the nonnegativeness of the partial derivative of <math id="p2.m2" class="ltx_Math" alttext="L_{p}" display="inline"><msub><mi>L</mi><mi>p</mi></msub></math> with respect to <math id="p2.m3" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math>; in the case  <math id="p2.m4" class="ltx_Math" alttext="n=2" display="inline"><mrow><mi>n</mi><mo>=</mo><mn>2</mn></mrow></math>  it writes</p>
+<p class="ltx_p">This turns out from the nonnegativeness of the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">partial derivative</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/PartialDerivative.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/partialderivative"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of <math id="p2.m2" class="ltx_Math" alttext="L_{p}" display="inline"><msub><mi>L</mi><mi>p</mi></msub></math> with respect to <math id="p2.m3" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math>; in the case  <math id="p2.m4" class="ltx_Math" alttext="n=2" display="inline"><mrow><mi>n</mi><mo>=</mo><mn>2</mn></mrow></math>  it writes</p>
 <table id="S0.Ex3" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -62,33 +62,33 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">Thus in the below list containing special cases of Lehmer mean, the  is the least and the contraharmonic the greatest (cf. the comparison of Pythagorean means).</p>
+<p class="ltx_p">Thus in the below list containing special cases of Lehmer mean, the  is the least and the contraharmonic the greatest (cf. the <a class="nnexus_concept" href="http://planetmath.org/comparisonofpythagoreanmeans">comparison of Pythagorean means</a>).</p>
 </div>
 <div id="p3" class="ltx_para">
-<p class="ltx_p">E.g. for two arguments <math id="p3.m1" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> and <math id="p3.m2" class="ltx_Math" alttext="b" display="inline"><mi>b</mi></math>, one has</p>
+<p class="ltx_p">E.g. for two <a class="nnexus_concept" href="http://mathworld.wolfram.com/Argument.html">arguments</a> <math id="p3.m1" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> and <math id="p3.m2" class="ltx_Math" alttext="b" display="inline"><mi>b</mi></math>, one has</p>
 <ul id="I1" class="ltx_itemize">
 <li id="I1.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I1.i1.p1" class="ltx_para">
-<p class="ltx_p"><math id="I1.i1.p1.m1" class="ltx_Math" alttext="\displaystyle L_{0}(a,\,b)\,=\,\frac{2ab}{a\!+\!b}" display="inline"><mrow><mrow><msub><mi>L</mi><mn>0</mn></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>a</mi><mo rspace="4.2pt">,</mo><mi>b</mi><mo rspace="4.2pt" stretchy="false">)</mo></mrow></mrow><mo rspace="4.2pt">=</mo><mstyle displaystyle="true"><mfrac><mrow><mn>2</mn><mo>⁢</mo><mi>a</mi><mo>⁢</mo><mi>b</mi></mrow><mrow><mpadded width="-1.7pt"><mi>a</mi></mpadded><mo rspace="0.8pt">+</mo><mi>b</mi></mrow></mfrac></mstyle></mrow></math>,  harmonic mean,</p>
+<p class="ltx_p"><math id="I1.i1.p1.m1" class="ltx_Math" alttext="\displaystyle L_{0}(a,\,b)\,=\,\frac{2ab}{a\!+\!b}" display="inline"><mrow><mrow><msub><mi>L</mi><mn>0</mn></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>a</mi><mo rspace="4.2pt">,</mo><mi>b</mi><mo rspace="4.2pt" stretchy="false">)</mo></mrow></mrow><mo rspace="4.2pt">=</mo><mstyle displaystyle="true"><mfrac><mrow><mn>2</mn><mo>⁢</mo><mi>a</mi><mo>⁢</mo><mi>b</mi></mrow><mrow><mpadded width="-1.7pt"><mi>a</mi></mpadded><mo rspace="0.8pt">+</mo><mi>b</mi></mrow></mfrac></mstyle></mrow></math>,  <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">harmonic mean</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/HarmonicMean.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/harmonicmean"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>,</p>
 </div>
 </li>
 <li id="I1.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I1.i2.p1" class="ltx_para">
-<p class="ltx_p"><math id="I1.i2.p1.m1" class="ltx_Math" alttext="\displaystyle L_{1/2}(a,\,b)\,=\,\sqrt{ab}" display="inline"><mrow><mrow><msub><mi>L</mi><mrow><mn>1</mn><mo>/</mo><mn>2</mn></mrow></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>a</mi><mo rspace="4.2pt">,</mo><mi>b</mi><mo rspace="4.2pt" stretchy="false">)</mo></mrow></mrow><mo rspace="4.2pt">=</mo><msqrt><mrow><mi>a</mi><mo>⁢</mo><mi>b</mi></mrow></msqrt></mrow></math>,  geometric mean,</p>
+<p class="ltx_p"><math id="I1.i2.p1.m1" class="ltx_Math" alttext="\displaystyle L_{1/2}(a,\,b)\,=\,\sqrt{ab}" display="inline"><mrow><mrow><msub><mi>L</mi><mrow><mn>1</mn><mo>/</mo><mn>2</mn></mrow></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>a</mi><mo rspace="4.2pt">,</mo><mi>b</mi><mo rspace="4.2pt" stretchy="false">)</mo></mrow></mrow><mo rspace="4.2pt">=</mo><msqrt><mrow><mi>a</mi><mo>⁢</mo><mi>b</mi></mrow></msqrt></mrow></math>,  <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">geometric mean</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/GeometricMean.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/geometricmean"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>,</p>
 </div>
 </li>
 <li id="I1.i3" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I1.i3.p1" class="ltx_para">
-<p class="ltx_p"><math id="I1.i3.p1.m1" class="ltx_Math" alttext="\displaystyle L_{1}(a,\,b)\,=\,\frac{a\!+\!b}{2}" display="inline"><mrow><mrow><msub><mi>L</mi><mn>1</mn></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>a</mi><mo rspace="4.2pt">,</mo><mi>b</mi><mo rspace="4.2pt" stretchy="false">)</mo></mrow></mrow><mo rspace="4.2pt">=</mo><mstyle displaystyle="true"><mfrac><mrow><mpadded width="-1.7pt"><mi>a</mi></mpadded><mo rspace="0.8pt">+</mo><mi>b</mi></mrow><mn>2</mn></mfrac></mstyle></mrow></math>,  arithmetic mean,</p>
+<p class="ltx_p"><math id="I1.i3.p1.m1" class="ltx_Math" alttext="\displaystyle L_{1}(a,\,b)\,=\,\frac{a\!+\!b}{2}" display="inline"><mrow><mrow><msub><mi>L</mi><mn>1</mn></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>a</mi><mo rspace="4.2pt">,</mo><mi>b</mi><mo rspace="4.2pt" stretchy="false">)</mo></mrow></mrow><mo rspace="4.2pt">=</mo><mstyle displaystyle="true"><mfrac><mrow><mpadded width="-1.7pt"><mi>a</mi></mpadded><mo rspace="0.8pt">+</mo><mi>b</mi></mrow><mn>2</mn></mfrac></mstyle></mrow></math>,  <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">arithmetic mean</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ArithmeticMean.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/arithmeticmean"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>,</p>
 </div>
 </li>
 <li id="I1.i4" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I1.i4.p1" class="ltx_para">
-<p class="ltx_p"><math id="I1.i4.p1.m1" class="ltx_Math" alttext="\displaystyle L_{2}(a,\,b)\,=\,\frac{a^{2}\!+\!b^{2}}{a\!+\!b}" display="inline"><mrow><mrow><msub><mi>L</mi><mn>2</mn></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>a</mi><mo rspace="4.2pt">,</mo><mi>b</mi><mo rspace="4.2pt" stretchy="false">)</mo></mrow></mrow><mo rspace="4.2pt">=</mo><mstyle displaystyle="true"><mfrac><mrow><mpadded width="-1.7pt"><msup><mi>a</mi><mn>2</mn></msup></mpadded><mo rspace="0.8pt">+</mo><msup><mi>b</mi><mn>2</mn></msup></mrow><mrow><mpadded width="-1.7pt"><mi>a</mi></mpadded><mo rspace="0.8pt">+</mo><mi>b</mi></mrow></mfrac></mstyle></mrow></math>,  contraharmonic mean.</p>
+<p class="ltx_p"><math id="I1.i4.p1.m1" class="ltx_Math" alttext="\displaystyle L_{2}(a,\,b)\,=\,\frac{a^{2}\!+\!b^{2}}{a\!+\!b}" display="inline"><mrow><mrow><msub><mi>L</mi><mn>2</mn></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>a</mi><mo rspace="4.2pt">,</mo><mi>b</mi><mo rspace="4.2pt" stretchy="false">)</mo></mrow></mrow><mo rspace="4.2pt">=</mo><mstyle displaystyle="true"><mfrac><mrow><mpadded width="-1.7pt"><msup><mi>a</mi><mn>2</mn></msup></mpadded><mo rspace="0.8pt">+</mo><msup><mi>b</mi><mn>2</mn></msup></mrow><mrow><mpadded width="-1.7pt"><mi>a</mi></mpadded><mo rspace="0.8pt">+</mo><mi>b</mi></mrow></mfrac></mstyle></mrow></math>,  <a class="nnexus_concept" href="http://planetmath.org/contraharmonicproportion">contraharmonic mean</a>.</p>
 </div>
 </li>
 </ul>
@@ -134,7 +134,7 @@ n}\},\quad\lim_{p\to+\infty}L_{p}(a_{1},\,\ldots,\,a_{n})\;=\;\max\{a_{1},\,%
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Lehmer mean</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">LehmerMean</td>
 </tr>
 <tr class="ltx_tr">
