--- a/html/62-07-OccamsRazor.html
+++ b/html/62-07-OccamsRazor.html
@@ -20,14 +20,14 @@
 <br class="ltx_break">
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">The following example in statistics illustrates the principle of <em class="ltx_emph ltx_font_italic">Occam’s razor</em>. See <span class="ltx_text ltx_font_typewriter">http://en.wikipedia.org/wiki/Occam's_Razor</span>Article on Occam’s Razor on Wikipedia for a thorough discussion, mathematical or not, of this principle, which is also known as the <em class="ltx_emph ltx_font_italic">principle of parsimony</em>.</p>
+<p class="ltx_p">The following example in <a class="nnexus_concept" href="http://planetmath.org/statistic">statistics</a> illustrates the principle of <em class="ltx_emph ltx_font_italic">Occam’s razor</em>. See <span class="ltx_text ltx_font_typewriter">http://en.wikipedia.org/wiki/Occam's_Razor</span>Article on Occam’s Razor on Wikipedia for a thorough discussion, mathematical or not, of this principle, which is also known as the <em class="ltx_emph ltx_font_italic">principle of parsimony</em>.</p>
 </div>
 <div id="p3" class="ltx_para">
 <p class="ltx_p"><span class="ltx_text ltx_font_bold">Example in statistics:</span>
 </p>
 </div>
 <div id="p4" class="ltx_para">
-<p class="ltx_p">Given the following ten pairs of hypothetical observations of continuous response variable <math id="p4.m1" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> and continuous explanatory variable <math id="p4.m2" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>:</p>
+<p class="ltx_p">Given the following ten pairs of hypothetical <a class="nnexus_concept" href="http://planetmath.org/datatypesinstatistics">observations</a> of <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">continuous</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Continuous.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/continuous"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> response variable <math id="p4.m1" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> and continuous explanatory variable <math id="p4.m2" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>:</p>
 <table class="ltx_tabular ltx_centering ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
@@ -35,7 +35,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Occam’s razor</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">OccamsRazor</td>
 </tr>
 <tr class="ltx_tr">
@@ -64,7 +64,7 @@
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
@@ -80,7 +80,7 @@
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Synonym</th>
-<td class="ltx_td ltx_align_left ltx_border_r">law of parsimony</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/occamsrazor">law of parsimony</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t"><span class="ltx_ERROR undefined">\@unrecurse</span></th>
