--- a/html/62-07-Percentile.html
+++ b/html/62-07-Percentile.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">Given a distribution function <math id="p1.m1" class="ltx_Math" alttext="F_{X}" display="inline"><msub><mi>F</mi><mi>X</mi></msub></math> of a random variable <math id="p1.m2" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>, on a probability space <math id="p1.m3" class="ltx_Math" alttext="(\Omega,B,P)" display="inline"><mrow><mo stretchy="false">(</mo><mi mathvariant="normal">Ω</mi><mo>,</mo><mi>B</mi><mo>,</mo><mi>P</mi><mo stretchy="false">)</mo></mrow></math> a <em class="ltx_emph ltx_font_italic"><math id="p1.m4" class="ltx_Math" alttext="p^{\text{th}}" display="inline"><msup><mi>p</mi><mtext>𝑡ℎ</mtext></msup></math>-percentile</em> of <math id="p1.m5" class="ltx_Math" alttext="F_{X}" display="inline"><msub><mi>F</mi><mi>X</mi></msub></math> for a given real number <math id="p1.m6" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math>, is a real number <math id="p1.m7" class="ltx_Math" alttext="r" display="inline"><mi>r</mi></math> such that</p>
+<p class="ltx_p">Given a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">distribution function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/DistributionFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/distributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="p1.m1" class="ltx_Math" alttext="F_{X}" display="inline"><msub><mi>F</mi><mi>X</mi></msub></math> of a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">random variable</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/RandomVariable.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/randomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="p1.m2" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>, on a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">probability space</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ProbabilitySpace.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/measure"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="p1.m3" class="ltx_Math" alttext="(\Omega,B,P)" display="inline"><mrow><mo stretchy="false">(</mo><mi mathvariant="normal">Ω</mi><mo>,</mo><mi>B</mi><mo>,</mo><mi>P</mi><mo stretchy="false">)</mo></mrow></math> a <em class="ltx_emph ltx_font_italic"><math id="p1.m4" class="ltx_Math" alttext="p^{\text{th}}" display="inline"><msup><mi>p</mi><mtext>𝑡ℎ</mtext></msup></math>-<a class="nnexus_concept" href="http://mathworld.wolfram.com/Percentile.html">percentile</a></em> of <math id="p1.m5" class="ltx_Math" alttext="F_{X}" display="inline"><msub><mi>F</mi><mi>X</mi></msub></math> for a given real number <math id="p1.m6" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math>, is a real number <math id="p1.m7" class="ltx_Math" alttext="r" display="inline"><mi>r</mi></math> such that</p>
 <ol id="I1" class="ltx_enumerate">
 <li id="I1.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">1.</span> 
@@ -40,7 +40,7 @@
 <li id="I2.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I2.i1.p1" class="ltx_para">
-<p class="ltx_p">The most common percentiles of a distribution function are the median (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/MedianOfADistribution</span>) (the <math id="I2.i1.p1.m1" class="ltx_Math" alttext="50^{\text{th}}" display="inline"><msup><mn>50</mn><mtext>th</mtext></msup></math>-percentile or the second quartile), the <em class="ltx_emph ltx_font_italic">lower quartile</em> (the <math id="I2.i1.p1.m2" class="ltx_Math" alttext="25^{\text{th}}" display="inline"><msup><mn>25</mn><mtext>th</mtext></msup></math>-percentile or the first quartile), and the <em class="ltx_emph ltx_font_italic">upper quartile</em> (the <math id="I2.i1.p1.m3" class="ltx_Math" alttext="75^{\text{th}}" display="inline"><msup><mn>75</mn><mtext>th</mtext></msup></math>-percentile or the third quartile).</p>
+<p class="ltx_p">The most common percentiles of a distribution function are the median (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/MedianOfADistribution</span>) (the <math id="I2.i1.p1.m1" class="ltx_Math" alttext="50^{\text{th}}" display="inline"><msup><mn>50</mn><mtext>th</mtext></msup></math>-percentile or the <a class="nnexus_concept" href="http://planetmath.org/medianofadistribution">second quartile</a>), the <em class="ltx_emph ltx_font_italic">lower <a class="nnexus_concept" href="http://mathworld.wolfram.com/Quartile.html">quartile</a></em> (the <math id="I2.i1.p1.m2" class="ltx_Math" alttext="25^{\text{th}}" display="inline"><msup><mn>25</mn><mtext>th</mtext></msup></math>-percentile or the first quartile), and the <em class="ltx_emph ltx_font_italic">upper quartile</em> (the <math id="I2.i1.p1.m3" class="ltx_Math" alttext="75^{\text{th}}" display="inline"><msup><mn>75</mn><mtext>th</mtext></msup></math>-percentile or the third quartile).</p>
 </div>
 </li>
 <li id="I2.i2" class="ltx_item" style="list-style-type:none;">
@@ -52,7 +52,7 @@
 <li id="I2.i3" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I2.i3.p1" class="ltx_para">
-<p class="ltx_p">The interval between the first quartile and the third quartile is called the <em class="ltx_emph ltx_font_italic">interquartile range</em>, or <em class="ltx_emph ltx_font_italic">IQR</em> for short. Sometimes, the difference between the first and third quartiles is also called the IQR. Like standard deviation, IQR is a measure of dispersion. However, IQR is a more robust statistic.</p>
+<p class="ltx_p">The interval between the first quartile and the third quartile is called the <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://mathworld.wolfram.com/InterquartileRange.html">interquartile range</a></em>, or <em class="ltx_emph ltx_font_italic">IQR</em> for short. Sometimes, the <a class="nnexus_concept" href="http://planetmath.org/difference">difference</a> between the first and third quartiles is also called the IQR. Like <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">standard deviation</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/StandardDeviation.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/standarddeviation"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, IQR is a measure of dispersion. However, IQR is a more robust statistic.</p>
 </div>
 </li>
 </ul>
@@ -63,7 +63,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">percentile</td>
 </tr>
 <tr class="ltx_tr">
-<td class="ltx_td ltx_align_left ltx_border_l">Canonical name</td>
+<td class="ltx_td ltx_align_left ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</td>
 <td class="ltx_td ltx_align_left ltx_border_r">Percentile</td>
 </tr>
 <tr class="ltx_tr">
@@ -92,7 +92,7 @@
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l">Entry type</td>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l">Classification</td>
