--- a/html/62A01-StatisticalModel.html
+++ b/html/62A01-StatisticalModel.html
@@ -18,8 +18,8 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">Let <math id="p1.m1" class="ltx_Math" alttext="\textbf{X}=(X_{1},\ldots,X_{n})" display="inline"><mrow><mtext>𝐗</mtext><mo>=</mo><mrow><mo stretchy="false">(</mo><msub><mi>X</mi><mn>1</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>X</mi><mi>n</mi></msub><mo stretchy="false">)</mo></mrow></mrow></math> be a random vector with a given realization
-<math id="p1.m2" class="ltx_Math" alttext="\textbf{X}(\omega)=(x_{1},\ldots,x_{n})" display="inline"><mrow><mrow><mtext>𝐗</mtext><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>ω</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mo stretchy="false">(</mo><msub><mi>x</mi><mn>1</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>x</mi><mi>n</mi></msub><mo stretchy="false">)</mo></mrow></mrow></math>, where <math id="p1.m3" class="ltx_Math" alttext="\omega" display="inline"><mi>ω</mi></math> is the outcome (of an observation or an experiment) in the sample space <math id="p1.m4" class="ltx_Math" alttext="\Omega" display="inline"><mi mathvariant="normal">Ω</mi></math>. A <em class="ltx_emph ltx_font_italic">statistical model</em> <math id="p1.m5" class="ltx_Math" alttext="\mathcal{P}" display="inline"><mi class="ltx_font_mathcaligraphic">𝒫</mi></math> based on <span class="ltx_text ltx_markedasmath ltx_font_bold">X</span> is a set of probability distribution functions of <span class="ltx_text ltx_markedasmath ltx_font_bold">X</span>:</p>
+<p class="ltx_p">Let <math id="p1.m1" class="ltx_Math" alttext="\textbf{X}=(X_{1},\ldots,X_{n})" display="inline"><mrow><mtext>𝐗</mtext><mo>=</mo><mrow><mo stretchy="false">(</mo><msub><mi>X</mi><mn>1</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>X</mi><mi>n</mi></msub><mo stretchy="false">)</mo></mrow></mrow></math> be a <a class="nnexus_concept" href="http://planetmath.org/randomvector">random vector</a> with a given realization
+<math id="p1.m2" class="ltx_Math" alttext="\textbf{X}(\omega)=(x_{1},\ldots,x_{n})" display="inline"><mrow><mrow><mtext>𝐗</mtext><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>ω</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mo stretchy="false">(</mo><msub><mi>x</mi><mn>1</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>x</mi><mi>n</mi></msub><mo stretchy="false">)</mo></mrow></mrow></math>, where <math id="p1.m3" class="ltx_Math" alttext="\omega" display="inline"><mi>ω</mi></math> is the outcome (of an <a class="nnexus_concept" href="http://planetmath.org/datatypesinstatistics">observation</a> or an experiment) in the <a class="nnexus_concept" href="http://mathworld.wolfram.com/SampleSpace.html">sample space</a> <math id="p1.m4" class="ltx_Math" alttext="\Omega" display="inline"><mi mathvariant="normal">Ω</mi></math>. A <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/statisticalmodel">statistical model</a></em> <math id="p1.m5" class="ltx_Math" alttext="\mathcal{P}" display="inline"><mi class="ltx_font_mathcaligraphic">𝒫</mi></math> based on <span class="ltx_text ltx_markedasmath ltx_font_bold">X</span> is a set of <a class="nnexus_concept" href="http://planetmath.org/probabilitydistributionfunction">probability distribution functions</a> of <span class="ltx_text ltx_markedasmath ltx_font_bold">X</span>:</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -28,7 +28,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">If it is known in advance that this family of distributions comes from a set of continuous distributions, the statistical model <math id="p1.m8" class="ltx_Math" alttext="\mathcal{P}" display="inline"><mi class="ltx_font_mathcaligraphic">𝒫</mi></math> can be equivalently defined as a set of probability density functions:</p>
+<p class="ltx_p">If it is known in advance that this family of <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">distributions</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/1.16#SS1.p5"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://planetmath.org/distributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> comes from a set of <a class="nnexus_concept" href="http://mathworld.wolfram.com/ContinuousDistribution.html">continuous distributions</a>, the statistical model <math id="p1.m8" class="ltx_Math" alttext="\mathcal{P}" display="inline"><mi class="ltx_font_mathcaligraphic">𝒫</mi></math> can be equivalently defined as a set of <a class="nnexus_concept" href="http://mathworld.wolfram.com/ProbabilityDensityFunction.html">probability density functions</a>:</p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -39,7 +39,7 @@
 </table>
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">As an example, a coin is tossed <math id="p2.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> times and the results are observed. The probability of landing a head during one toss is <math id="p2.m2" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math>. Assume that each toss is independent of one another. If <math id="p2.m3" class="ltx_Math" alttext="\textbf{X}=(X_{1},\ldots,X_{n})" display="inline"><mrow><mtext>𝐗</mtext><mo>=</mo><mrow><mo stretchy="false">(</mo><msub><mi>X</mi><mn>1</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>X</mi><mi>n</mi></msub><mo stretchy="false">)</mo></mrow></mrow></math> is defined to be the vector of the <math id="p2.m4" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> ordered outcomes, then a statistical model based on <span class="ltx_text ltx_markedasmath ltx_font_bold">X</span> can be a family of Bernoulli distributions</p>
+<p class="ltx_p">As an example, a coin is tossed <math id="p2.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> times and the results are observed. The <a class="nnexus_concept" href="http://mathworld.wolfram.com/Probability.html">probability</a> of landing a head during one toss is <math id="p2.m2" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math>. Assume that each toss is <a class="nnexus_concept" href="http://planetmath.org/independent">independent</a> of one another. If <math id="p2.m3" class="ltx_Math" alttext="\textbf{X}=(X_{1},\ldots,X_{n})" display="inline"><mrow><mtext>𝐗</mtext><mo>=</mo><mrow><mo stretchy="false">(</mo><msub><mi>X</mi><mn>1</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>X</mi><mi>n</mi></msub><mo stretchy="false">)</mo></mrow></mrow></math> is defined to be the vector of the <math id="p2.m4" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> ordered outcomes, then a statistical model based on <span class="ltx_text ltx_markedasmath ltx_font_bold">X</span> can be a family of <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Bernoulli distributions</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/BernoulliDistribution.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/bernoullirandomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></p>
 <table id="S0.Ex3" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -51,7 +51,7 @@
 <p class="ltx_p">where <math id="p2.m6" class="ltx_Math" alttext="X_{i}(\omega)=x_{i}" display="inline"><mrow><mrow><msub><mi>X</mi><mi>i</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>ω</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><msub><mi>x</mi><mi>i</mi></msub></mrow></math> and <math id="p2.m7" class="ltx_Math" alttext="x_{i}=1" display="inline"><mrow><msub><mi>x</mi><mi>i</mi></msub><mo>=</mo><mn>1</mn></mrow></math> if <math id="p2.m8" class="ltx_Math" alttext="\omega" display="inline"><mi>ω</mi></math> is the outcome that the <math id="p2.m9" class="ltx_Math" alttext="i" display="inline"><mi>i</mi></math>th toss lands a head and <math id="p2.m10" class="ltx_Math" alttext="x_{i}=0" display="inline"><mrow><msub><mi>x</mi><mi>i</mi></msub><mo>=</mo><mn>0</mn></mrow></math> if <math id="p2.m11" class="ltx_Math" alttext="\omega" display="inline"><mi>ω</mi></math> is the outcome that the <math id="p2.m12" class="ltx_Math" alttext="i" display="inline"><mi>i</mi></math>th toss lands a tail.</p>
 </div>
 <div id="p3" class="ltx_para">
-<p class="ltx_p">Next, suppose <math id="p3.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is the number of tosses where a head is observed, then a statistical model based on <math id="p3.m2" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> can be a family binomial distributions:</p>
+<p class="ltx_p">Next, suppose <math id="p3.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is the number of tosses where a head is observed, then a statistical model based on <math id="p3.m2" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> can be a family <a class="nnexus_concept" href="http://mathworld.wolfram.com/BinomialDistribution.html">binomial distributions</a>:</p>
 <table id="S0.Ex4" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -63,7 +63,7 @@
 <p class="ltx_p">where <math id="p3.m3" class="ltx_Math" alttext="X(\omega)=x" display="inline"><mrow><mrow><mi>X</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>ω</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mi>x</mi></mrow></math>, where <math id="p3.m4" class="ltx_Math" alttext="\omega" display="inline"><mi>ω</mi></math> is the outcome that <math id="p3.m5" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math> heads (out of <math id="p3.m6" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> tosses) are observed.</p>
 </div>
 <div id="p4" class="ltx_para">
-<p class="ltx_p">A statistical model is usually <em class="ltx_emph ltx_font_italic">parameterized</em> by a function, called a <em class="ltx_emph ltx_font_italic">parameterization</em></p>
+<p class="ltx_p">A statistical model is usually <em class="ltx_emph ltx_font_italic">parameterized</em> by a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Function.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/function"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, called a <em class="ltx_emph ltx_font_italic">parameterization</em></p>
 <table id="S0.Ex5" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -73,7 +73,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">where <math id="p4.m1" class="ltx_Math" alttext="\Theta" display="inline"><mi mathvariant="normal">Θ</mi></math> is called a <em class="ltx_emph ltx_font_italic">parameter space</em>. <math id="p4.m2" class="ltx_Math" alttext="\Theta" display="inline"><mi mathvariant="normal">Θ</mi></math> is usually a subset of <math id="p4.m3" class="ltx_Math" alttext="\mathbb{R}^{n}" display="inline"><msup><mi>ℝ</mi><mi>n</mi></msup></math>. However, it can also be a function space.</p>
+<p class="ltx_p">where <math id="p4.m1" class="ltx_Math" alttext="\Theta" display="inline"><mi mathvariant="normal">Θ</mi></math> is called a <em class="ltx_emph ltx_font_italic">parameter space</em>. <math id="p4.m2" class="ltx_Math" alttext="\Theta" display="inline"><mi mathvariant="normal">Θ</mi></math> is usually a subset of <math id="p4.m3" class="ltx_Math" alttext="\mathbb{R}^{n}" display="inline"><msup><mi>ℝ</mi><mi>n</mi></msup></math>. However, it can also be a <a class="nnexus_concept" href="http://mathworld.wolfram.com/FunctionSpace.html">function space</a>.</p>
 </div>
 <div id="p5" class="ltx_para">
 <p class="ltx_p">In the first part of the above example, the statistical model is parameterized by</p>
@@ -87,7 +87,7 @@
 </table>
 </div>
 <div id="p6" class="ltx_para">
-<p class="ltx_p">If the parameterization is a one-to-one function, it is called an <em class="ltx_emph ltx_font_italic">identifiable parameterization</em> and <math id="p6.m1" class="ltx_Math" alttext="\theta" display="inline"><mi>θ</mi></math> is called a <em class="ltx_emph ltx_font_italic">parameter</em>. The <math id="p6.m2" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math> in the above example is a parameter.
+<p class="ltx_p">If the parameterization is a one-to-one function, it is called an <em class="ltx_emph ltx_font_italic">identifiable parameterization</em> and <math id="p6.m1" class="ltx_Math" alttext="\theta" display="inline"><mi>θ</mi></math> is called a <em class="ltx_emph ltx_font_italic"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">parameter</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Parameter.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/parametre"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></em>. The <math id="p6.m2" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math> in the above example is a parameter.
 </p>
 <table class="ltx_tabular ltx_align_right ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
@@ -96,7 +96,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">statistical model</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">StatisticalModel</td>
 </tr>
 <tr class="ltx_tr">
@@ -125,7 +125,7 @@
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
