--- a/html/62D05-ClusterSampling.html
+++ b/html/62D05-ClusterSampling.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">Cluster sampling is a method for sampling from a population <math id="p1.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math>, in which the smallest units in <math id="p1.m2" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> are first grouped into bigger units, called <em class="ltx_emph ltx_font_italic">clusters</em>, or <em class="ltx_emph ltx_font_italic">primary sampling units</em>, then a sampling procedure is performed based on these clusters. The units within each cluster are called the <em class="ltx_emph ltx_font_italic">secondary sampling units</em>. For example, when an advertisements are sent out to a sample of
+<p class="ltx_p"><a class="nnexus_concept" href="http://planetmath.org/clustersampling">Cluster sampling</a> is a method for sampling from a <a class="nnexus_concept" href="http://mathworld.wolfram.com/Population.html">population</a> <math id="p1.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math>, in which the smallest units in <math id="p1.m2" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> are first grouped into bigger units, called <em class="ltx_emph ltx_font_italic">clusters</em>, or <em class="ltx_emph ltx_font_italic">primary sampling units</em>, then a sampling procedure is performed based on these clusters. The units within each cluster are called the <em class="ltx_emph ltx_font_italic">secondary sampling units</em>. For example, when an advertisements are sent out to a sample of
 potential customers from a population, it is advisable to first group these potential customers into households, before any sample is drawn, so as to avoid any household receiving more than one ad. There are in general two types of cluster sampling:</p>
 <ol id="I1" class="ltx_enumerate">
 <li id="I1.i1" class="ltx_item" style="list-style-type:none;">
@@ -41,7 +41,7 @@ potential customers from a population, it is advisable to first group these pote
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">cluster sampling</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">ClusterSampling</td>
 </tr>
 <tr class="ltx_tr">
@@ -70,7 +70,7 @@ potential customers from a population, it is advisable to first group these pote
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
