--- a/html/62D05-SimpleRandomSample.html
+++ b/html/62D05-SimpleRandomSample.html
@@ -18,8 +18,8 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">A sample <math id="p1.m1" class="ltx_Math" alttext="S" display="inline"><mi>S</mi></math> of size <math id="p1.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> from a population <math id="p1.m3" class="ltx_Math" alttext="U" display="inline"><mi>U</mi></math> of size <math id="p1.m4" class="ltx_Math" alttext="N" display="inline"><mi>N</mi></math> is called
-a <em class="ltx_emph ltx_font_italic">simple random sample</em> if</p>
+<p class="ltx_p">A sample <math id="p1.m1" class="ltx_Math" alttext="S" display="inline"><mi>S</mi></math> of size <math id="p1.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> from a <a class="nnexus_concept" href="http://mathworld.wolfram.com/Population.html">population</a> <math id="p1.m3" class="ltx_Math" alttext="U" display="inline"><mi>U</mi></math> of size <math id="p1.m4" class="ltx_Math" alttext="N" display="inline"><mi>N</mi></math> is called
+a <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/simplerandomsample">simple random sample</a></em> if</p>
 <ol id="I1" class="ltx_enumerate">
 <li id="I1.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">1.</span> 
@@ -30,7 +30,7 @@ a <em class="ltx_emph ltx_font_italic">simple random sample</em> if</p>
 <li id="I1.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">2.</span> 
 <div id="I1.i2.p1" class="ltx_para">
-<p class="ltx_p">the probability of picking this sample is equal to the
+<p class="ltx_p">the <a class="nnexus_concept" href="http://mathworld.wolfram.com/Probability.html">probability</a> of picking this sample is equal to the
 probability of picking any other sample of size <math id="I1.i2.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> from the same
 population <math id="I1.i2.p1.m2" class="ltx_Math" alttext="U" display="inline"><mi>U</mi></math>.</p>
 </div>
@@ -51,15 +51,15 @@ representing the items sampled in a simple random sample of size
 <li id="I2.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I2.i1.p1" class="ltx_para">
-<p class="ltx_p">The sample mean <math id="I2.i1.p1.m1" class="ltx_Math" alttext="\overline{x}=\frac{1}{n}\sum_{i=1}^{n}x_{i}" display="inline"><mrow><mover accent="true"><mi>x</mi><mo>¯</mo></mover><mo>=</mo><mrow><mfrac><mn>1</mn><mi>n</mi></mfrac><mo>⁢</mo><mrow><msubsup><mo largeop="true" symmetric="true">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mi>n</mi></msubsup><msub><mi>x</mi><mi>i</mi></msub></mrow></mrow></mrow></math> is an
-unbiased estimator of the true population mean <math id="I2.i1.p1.m2" class="ltx_Math" alttext="\mu" display="inline"><mi>μ</mi></math>.</p>
+<p class="ltx_p">The <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">sample mean</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/SampleMean.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/statistic"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="I2.i1.p1.m1" class="ltx_Math" alttext="\overline{x}=\frac{1}{n}\sum_{i=1}^{n}x_{i}" display="inline"><mrow><mover accent="true"><mi>x</mi><mo>¯</mo></mover><mo>=</mo><mrow><mfrac><mn>1</mn><mi>n</mi></mfrac><mo>⁢</mo><mrow><msubsup><mo largeop="true" symmetric="true">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mi>n</mi></msubsup><msub><mi>x</mi><mi>i</mi></msub></mrow></mrow></mrow></math> is an
+<a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">unbiased estimator</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/UnbiasedEstimator.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/bias"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of the true <a class="nnexus_concept" href="http://mathworld.wolfram.com/PopulationMean.html">population mean</a> <math id="I2.i1.p1.m2" class="ltx_Math" alttext="\mu" display="inline"><mi>μ</mi></math>.</p>
 </div>
 </li>
 <li id="I2.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I2.i2.p1" class="ltx_para">
-<p class="ltx_p">The sample variance <math id="I2.i2.p1.m1" class="ltx_Math" alttext="s^{2}=\frac{1}{n-1}\sum_{i=1}^{n}(x_{i}-\overline{x})^{2}" display="inline"><mrow><msup><mi>s</mi><mn>2</mn></msup><mo>=</mo><mrow><mfrac><mn>1</mn><mrow><mi>n</mi><mo>-</mo><mn>1</mn></mrow></mfrac><mo>⁢</mo><mrow><msubsup><mo largeop="true" symmetric="true">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mi>n</mi></msubsup><msup><mrow><mo stretchy="false">(</mo><mrow><msub><mi>x</mi><mi>i</mi></msub><mo>-</mo><mover accent="true"><mi>x</mi><mo>¯</mo></mover></mrow><mo stretchy="false">)</mo></mrow><mn>2</mn></msup></mrow></mrow></mrow></math> is an unbiased estimator of
-<math id="I2.i2.p1.m2" class="ltx_Math" alttext="S^{2}" display="inline"><msup><mi>S</mi><mn>2</mn></msup></math>, where <math id="I2.i2.p1.m3" class="ltx_Math" alttext="(\frac{N-1}{N})S^{2}=\sigma^{2}" display="inline"><mrow><mrow><mrow><mo stretchy="false">(</mo><mfrac><mrow><mi>N</mi><mo>-</mo><mn>1</mn></mrow><mi>N</mi></mfrac><mo stretchy="false">)</mo></mrow><mo>⁢</mo><msup><mi>S</mi><mn>2</mn></msup></mrow><mo>=</mo><msup><mi>σ</mi><mn>2</mn></msup></mrow></math> is the true variance of
+<p class="ltx_p">The <a class="nnexus_concept" href="http://mathworld.wolfram.com/SampleVariance.html">sample variance</a> <math id="I2.i2.p1.m1" class="ltx_Math" alttext="s^{2}=\frac{1}{n-1}\sum_{i=1}^{n}(x_{i}-\overline{x})^{2}" display="inline"><mrow><msup><mi>s</mi><mn>2</mn></msup><mo>=</mo><mrow><mfrac><mn>1</mn><mrow><mi>n</mi><mo>-</mo><mn>1</mn></mrow></mfrac><mo>⁢</mo><mrow><msubsup><mo largeop="true" symmetric="true">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mi>n</mi></msubsup><msup><mrow><mo stretchy="false">(</mo><mrow><msub><mi>x</mi><mi>i</mi></msub><mo>-</mo><mover accent="true"><mi>x</mi><mo>¯</mo></mover></mrow><mo stretchy="false">)</mo></mrow><mn>2</mn></msup></mrow></mrow></mrow></math> is an unbiased estimator of
+<math id="I2.i2.p1.m2" class="ltx_Math" alttext="S^{2}" display="inline"><msup><mi>S</mi><mn>2</mn></msup></math>, where <math id="I2.i2.p1.m3" class="ltx_Math" alttext="(\frac{N-1}{N})S^{2}=\sigma^{2}" display="inline"><mrow><mrow><mrow><mo stretchy="false">(</mo><mfrac><mrow><mi>N</mi><mo>-</mo><mn>1</mn></mrow><mi>N</mi></mfrac><mo stretchy="false">)</mo></mrow><mo>⁢</mo><msup><mi>S</mi><mn>2</mn></msup></mrow><mo>=</mo><msup><mi>σ</mi><mn>2</mn></msup></mrow></math> is the true <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">variance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Variance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/variance"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of
 the population given by</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
@@ -86,7 +86,7 @@ mean <math id="I2.i3.p1.m2" class="ltx_Math" alttext="\mu" display="inline"><mi>
 </table>
 <p class="ltx_p">The larger the sample size,
 the smaller the deviation from the true population mean. When
-<math id="I2.i3.p1.m3" class="ltx_Math" alttext="n=1" display="inline"><mrow><mi>n</mi><mo>=</mo><mn>1</mn></mrow></math>, the variance is the same as the true population variance.</p>
+<math id="I2.i3.p1.m3" class="ltx_Math" alttext="n=1" display="inline"><mrow><mi>n</mi><mo>=</mo><mn>1</mn></mrow></math>, the variance is the same as the true <a class="nnexus_concept" href="http://mathworld.wolfram.com/PopulationVariance.html">population variance</a>.</p>
 </div>
 </li>
 </ul>
