--- a/html/62E15-ProofOfVarianceOfTheHypergeometricDistribution.html
+++ b/html/62E15-ProofOfVarianceOfTheHypergeometricDistribution.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">We will first prove a useful property of binomial coefficients. We know</p>
+<p class="ltx_p">We will first prove a useful property of <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">binomial coefficients</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/BinomialCoefficient.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/binomialcoefficient"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>. We know</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -38,7 +38,7 @@
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(1)</span></td>
 </tr>
 </table>
-<p class="ltx_p">The variance <math id="p1.m1" class="ltx_Math" alttext="\operatorname{Var}[X]" display="inline"><mrow><mi>Var</mi><mo>⁡</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow></math> of <math id="p1.m2" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is given by:</p>
+<p class="ltx_p">The <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">variance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Variance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/variance"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="p1.m1" class="ltx_Math" alttext="\operatorname{Var}[X]" display="inline"><mrow><mi>Var</mi><mo>⁡</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow></math> of <math id="p1.m2" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is given by:</p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -75,7 +75,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">The second of these sums is the expected value of the hypergeometric distribution, the third sum is <math id="p1.m3" class="ltx_Math" alttext="1" display="inline"><mn>1</mn></math> as it sums up all probabilities in the distribution. So we have:</p>
+<p class="ltx_p">The second of these sums is the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">expected value</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ExpectedValue.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/expectedvalue"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">hypergeometric distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/HypergeometricDistribution.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/hypergeometricrandomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, the third sum is <math id="p1.m3" class="ltx_Math" alttext="1" display="inline"><mn>1</mn></math> as it sums up all <a class="nnexus_concept" href="http://mathworld.wolfram.com/Probability.html">probabilities</a> in the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/distributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/probabilitydistributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>. So we have:</p>
 <table id="S0.Ex6" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -186,7 +186,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r">Proof</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l">Classification</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></th>
 <td class="ltx_td ltx_align_left ltx_border_b ltx_border_r">msc 62E15</td>
 </tr>
 </tbody>
