--- a/html/62E15-SumsOfNormalRandomVariablesNeedNotBeNormal.html
+++ b/html/62E15-SumsOfNormalRandomVariablesNeedNotBeNormal.html
@@ -20,7 +20,7 @@
 <br class="ltx_break">
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">A common misconception among students of probability theory is the belief that the sum of two normally distributed (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/NormalRandomVariable</span>) random variables is itself normally distributed. By constructing a counterexample, we show this to be false.</p>
+<p class="ltx_p">A common misconception among students of probability theory is the belief that the sum of two normally distributed (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/NormalRandomVariable</span>) <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">random variables</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/RandomVariable.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/randomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> is itself normally distributed. By constructing a counterexample, we show this to be false.</p>
 </div>
 <div id="p3" class="ltx_para">
 <p class="ltx_p">It is however well known that the sum of normally distributed variables <math id="p3.m1" class="ltx_Math" alttext="X,Y" display="inline"><mrow><mi>X</mi><mo>,</mo><mi>Y</mi></mrow></math> will be normal under either of the following situations.</p>
@@ -28,7 +28,7 @@
 <li id="I1.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I1.i1.p1" class="ltx_para">
-<p class="ltx_p"><math id="I1.i1.p1.m1" class="ltx_Math" alttext="X,Y" display="inline"><mrow><mi>X</mi><mo>,</mo><mi>Y</mi></mrow></math> are independent.</p>
+<p class="ltx_p"><math id="I1.i1.p1.m1" class="ltx_Math" alttext="X,Y" display="inline"><mrow><mi>X</mi><mo>,</mo><mi>Y</mi></mrow></math> are <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">independent</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/projectivebasis"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/independent"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>.</p>
 </div>
 </li>
 <li id="I1.i2" class="ltx_item" style="list-style-type:none;">
@@ -38,10 +38,10 @@
 </div>
 </li>
 </ul>
-<p class="ltx_p">The statement that the sum of two independent normal random variables is itself normal is a very useful and often used property. Furthermore, when working with normal variables which are not independent, it is common to suppose that they are in fact joint normal. This can lead to the belief that this property holds always.</p>
+<p class="ltx_p">The statement that the sum of two independent <a class="nnexus_concept" href="http://planetmath.org/normalrandomvariable">normal random variables</a> is itself normal is a very useful and often used property. Furthermore, when working with normal variables which are not independent, it is common to suppose that they are in fact joint normal. This can lead to the belief that this property holds always.</p>
 </div>
 <div id="p4" class="ltx_para">
-<p class="ltx_p">Another common fallacy, which our example shows to be false, is that normal random variables are independent if and only if their covariance, defined by</p>
+<p class="ltx_p">Another common <a class="nnexus_concept" href="http://mathworld.wolfram.com/Fallacy.html">fallacy</a>, which our example shows to be false, is that normal random variables are independent if and only if their <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">covariance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Covariance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/covariance"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, defined by</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -50,7 +50,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">is zero. While it is certainly true that independent variables have zero covariance, the converse statement does not hold. Again, it is often supposed that they are joint normal, in which case a zero covariance will indeed imply independence.</p>
+<p class="ltx_p">is zero. While it is certainly true that independent variables have zero covariance, the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">converse</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Converse.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/converse"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> statement does not hold. Again, it is often supposed that they are joint normal, in which case a zero covariance will indeed imply independence.</p>
 </div>
 <div id="p5" class="ltx_para">
 <p class="ltx_p">We construct a pair of random variables <math id="p5.m1" class="ltx_Math" alttext="X,Y" display="inline"><mrow><mi>X</mi><mo>,</mo><mi>Y</mi></mrow></math> satisfying the following.</p>
@@ -58,7 +58,7 @@
 <li id="I2.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">1.</span> 
 <div id="I2.i1.p1" class="ltx_para">
-<p class="ltx_p"><math id="I2.i1.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> and <math id="I2.i1.p1.m2" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> each have the standard normal distribution.</p>
+<p class="ltx_p"><math id="I2.i1.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> and <math id="I2.i1.p1.m2" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> each have the <a class="nnexus_concept" href="http://mathworld.wolfram.com/StandardNormalDistribution.html">standard normal distribution</a>.</p>
 </div>
 </li>
 <li id="I2.i2" class="ltx_item" style="list-style-type:none;">
@@ -74,7 +74,7 @@
 </div>
 </li>
 </ol>
-<p class="ltx_p">We start with a pair of independent random variables <math id="p5.m2" class="ltx_Math" alttext="X,\epsilon" display="inline"><mrow><mi>X</mi><mo>,</mo><mi>ϵ</mi></mrow></math> where <math id="p5.m3" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> has the standard normal distribution and <math id="p5.m4" class="ltx_Math" alttext="\epsilon" display="inline"><mi>ϵ</mi></math> takes the values <math id="p5.m5" class="ltx_Math" alttext="1,-1" display="inline"><mrow><mn>1</mn><mo>,</mo><mrow><mo>-</mo><mn>1</mn></mrow></mrow></math>, each with a probability of <math id="p5.m6" class="ltx_Math" alttext="1/2" display="inline"><mrow><mn>1</mn><mo>/</mo><mn>2</mn></mrow></math>.
+<p class="ltx_p">We start with a pair of independent random variables <math id="p5.m2" class="ltx_Math" alttext="X,\epsilon" display="inline"><mrow><mi>X</mi><mo>,</mo><mi>ϵ</mi></mrow></math> where <math id="p5.m3" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> has the standard normal distribution and <math id="p5.m4" class="ltx_Math" alttext="\epsilon" display="inline"><mi>ϵ</mi></math> takes the values <math id="p5.m5" class="ltx_Math" alttext="1,-1" display="inline"><mrow><mn>1</mn><mo>,</mo><mrow><mo>-</mo><mn>1</mn></mrow></mrow></math>, each with a <a class="nnexus_concept" href="http://mathworld.wolfram.com/Probability.html">probability</a> of <math id="p5.m6" class="ltx_Math" alttext="1/2" display="inline"><mrow><mn>1</mn><mo>/</mo><mn>2</mn></mrow></math>.
 Then set,</p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
 
@@ -85,7 +85,7 @@ Then set,</p>
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">If <math id="p5.m7" class="ltx_Math" alttext="S" display="inline"><mi>S</mi></math> is any measurable subset of the real numbers, the symmetry of the normal distribution implies that <math id="p5.m8" class="ltx_Math" alttext="\mathbb{P}(X\in S)" display="inline"><mrow><mi>ℙ</mi><mrow><mo stretchy="false">(</mo><mi>X</mi><mo>∈</mo><mi>S</mi><mo stretchy="false">)</mo></mrow></mrow></math> is equal to <math id="p5.m9" class="ltx_Math" alttext="\mathbb{P}(-X\in S)" display="inline"><mrow><mi>ℙ</mi><mrow><mo stretchy="false">(</mo><mo>-</mo><mi>X</mi><mo>∈</mo><mi>S</mi><mo stretchy="false">)</mo></mrow></mrow></math>. Then, by the independence of <math id="p5.m10" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> and <math id="p5.m11" class="ltx_Math" alttext="\epsilon" display="inline"><mi>ϵ</mi></math>, the distribution of <math id="p5.m12" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> conditional on <math id="p5.m13" class="ltx_Math" alttext="\epsilon=1" display="inline"><mrow><mi>ϵ</mi><mo>=</mo><mn>1</mn></mrow></math> is given by,</p>
+<p class="ltx_p">If <math id="p5.m7" class="ltx_Math" alttext="S" display="inline"><mi>S</mi></math> is any measurable subset of the real numbers, the <a class="nnexus_concept" href="http://planetmath.org/symmetricrelation">symmetry</a> of the <a class="nnexus_concept" href="http://mathworld.wolfram.com/NormalDistribution.html">normal distribution</a> implies that <math id="p5.m8" class="ltx_Math" alttext="\mathbb{P}(X\in S)" display="inline"><mrow><mi>ℙ</mi><mrow><mo stretchy="false">(</mo><mi>X</mi><mo>∈</mo><mi>S</mi><mo stretchy="false">)</mo></mrow></mrow></math> is equal to <math id="p5.m9" class="ltx_Math" alttext="\mathbb{P}(-X\in S)" display="inline"><mrow><mi>ℙ</mi><mrow><mo stretchy="false">(</mo><mo>-</mo><mi>X</mi><mo>∈</mo><mi>S</mi><mo stretchy="false">)</mo></mrow></mrow></math>. Then, by the independence of <math id="p5.m10" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> and <math id="p5.m11" class="ltx_Math" alttext="\epsilon" display="inline"><mi>ϵ</mi></math>, the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/distributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/probabilitydistributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of <math id="p5.m12" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">conditional</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Conditional.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/logicalimplication"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/derivedbooleanoperations"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> on <math id="p5.m13" class="ltx_Math" alttext="\epsilon=1" display="inline"><mrow><mi>ϵ</mi><mo>=</mo><mn>1</mn></mrow></math> is given by,</p>
 <table id="S0.Ex3" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -98,7 +98,7 @@ Then set,</p>
 </tr>
 </table>
 <p class="ltx_p">It can similarly be shown that <math id="p5.m14" class="ltx_Math" alttext="\mathbb{P}(Y\in S\mid\epsilon=-1)" display="inline"><mrow><mi>ℙ</mi><mrow><mo stretchy="false">(</mo><mi>Y</mi><mo>∈</mo><mi>S</mi><mo>∣</mo><mi>ϵ</mi><mo>=</mo><mo>-</mo><mn>1</mn><mo stretchy="false">)</mo></mrow></mrow></math> is equal to <math id="p5.m15" class="ltx_Math" alttext="\mathbb{P}(X\in S)" display="inline"><mrow><mi>ℙ</mi><mrow><mo stretchy="false">(</mo><mi>X</mi><mo>∈</mo><mi>S</mi><mo stretchy="false">)</mo></mrow></mrow></math>.
-So, <math id="p5.m16" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> has the same distribution as <math id="p5.m17" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> and is normal with mean zero and variance one.</p>
+So, <math id="p5.m16" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> has the same distribution as <math id="p5.m17" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> and is normal with mean zero and <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">variance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Variance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/variance"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> one.</p>
 </div>
 <div id="p6" class="ltx_para">
 <p class="ltx_p">Using the fact that <math id="p6.m1" class="ltx_Math" alttext="\epsilon" display="inline"><mi>ϵ</mi></math> has zero mean and is independent of <math id="p6.m2" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>, it is easily shown that the covariance of <math id="p6.m3" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> and <math id="p6.m4" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> is zero.</p>
@@ -116,7 +116,7 @@ E}\left[-1_{\{|X|&gt;1\}}\epsilon X^{2}\right]\\
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">As <math id="p6.m5" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> and <math id="p6.m6" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> have zero covariance and each have variance equal to <math id="p6.m7" class="ltx_Math" alttext="1" display="inline"><mn>1</mn></math>, the sum <math id="p6.m8" class="ltx_Math" alttext="X+Y" display="inline"><mrow><mi>X</mi><mo>+</mo><mi>Y</mi></mrow></math> will have variance equal to <math id="p6.m9" class="ltx_Math" alttext="2" display="inline"><mn>2</mn></math>. Also, the sum satisfies</p>
+<p class="ltx_p">As <math id="p6.m5" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> and <math id="p6.m6" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> have zero covariance and each have variance equal to <math id="p6.m7" class="ltx_Math" alttext="1" display="inline"><mn>1</mn></math>, the sum <math id="p6.m8" class="ltx_Math" alttext="X+Y" display="inline"><mrow><mi>X</mi><mo>+</mo><mi>Y</mi></mrow></math> will have variance equal to <math id="p6.m9" class="ltx_Math" alttext="2" display="inline"><mn>2</mn></math>. Also, the sum <a class="nnexus_concept" href="http://planetmath.org/satisfactionrelation">satisfies</a></p>
 <table id="S0.Ex5" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -126,7 +126,7 @@ E}\left[-1_{\{|X|&gt;1\}}\epsilon X^{2}\right]\\
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">In particular, this shows that <math id="p6.m10" class="ltx_Math" alttext="\mathbb{P}(|X+Y|&gt;2)=0" display="inline"><mrow><mi>ℙ</mi><mrow><mo stretchy="false">(</mo><mo stretchy="false">|</mo><mi>X</mi><mo>+</mo><mi>Y</mi><mo stretchy="false">|</mo><mo>&gt;</mo><mn>2</mn><mo stretchy="false">)</mo></mrow><mo>=</mo><mn>0</mn></mrow></math>. However, normal random variables with nonzero variance always have a positive probability of being greater than any given real number. So, <math id="p6.m11" class="ltx_Math" alttext="X+Y" display="inline"><mrow><mi>X</mi><mo>+</mo><mi>Y</mi></mrow></math> is not normally distributed.</p>
+<p class="ltx_p">In particular, this shows that <math id="p6.m10" class="ltx_Math" alttext="\mathbb{P}(|X+Y|&gt;2)=0" display="inline"><mrow><mi>ℙ</mi><mrow><mo stretchy="false">(</mo><mo stretchy="false">|</mo><mi>X</mi><mo>+</mo><mi>Y</mi><mo stretchy="false">|</mo><mo>&gt;</mo><mn>2</mn><mo stretchy="false">)</mo></mrow><mo>=</mo><mn>0</mn></mrow></math>. However, normal random variables with nonzero variance always have a <a class="nnexus_concept" href="http://planetmath.org/positive">positive</a> probability of being greater than any given real number. So, <math id="p6.m11" class="ltx_Math" alttext="X+Y" display="inline"><mrow><mi>X</mi><mo>+</mo><mi>Y</mi></mrow></math> is not normally distributed.</p>
 </div>
 <div id="p7" class="ltx_para">
 <p class="ltx_p">This also shows that, despite having zero covariance, <math id="p7.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> and <math id="p7.m2" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> are not independent. If they were, then the fact that sums of independent normals are normal would imply that <math id="p7.m3" class="ltx_Math" alttext="X+Y" display="inline"><mrow><mi>X</mi><mo>+</mo><mi>Y</mi></mrow></math> is normal, contradicting what we have just demonstrated.</p>
@@ -136,7 +136,7 @@ E}\left[-1_{\{|X|&gt;1\}}\epsilon X^{2}\right]\\
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">sums of normal random variables need not be normal</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/sumsofnormalrandomvariablesneednotbenormal">sums of normal random variables need not be normal</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
@@ -171,7 +171,7 @@ E}\left[-1_{\{|X|&gt;1\}}\epsilon X^{2}\right]\\
 <td class="ltx_td ltx_align_left ltx_border_r">Example</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></th>
 <td class="ltx_td ltx_align_left ltx_border_r">msc 62E15</td>
 </tr>
 <tr class="ltx_tr">
