--- a/html/62F03-ChisquaredStatistic.html
+++ b/html/62F03-ChisquaredStatistic.html
@@ -20,18 +20,18 @@
 <br class="ltx_break">
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">Let <math id="p2.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> be a discrete random variable with <math id="p2.m2" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math> possible outcomes
-<math id="p2.m3" class="ltx_Math" alttext="x_{1},\ldots,x_{m}" display="inline"><mrow><msub><mi>x</mi><mn>1</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>x</mi><mi>m</mi></msub></mrow></math> with probability of each outcome
+<p class="ltx_p">Let <math id="p2.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> be a <a class="nnexus_concept" href="http://planetmath.org/randomvariable">discrete random variable</a> with <math id="p2.m2" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math> possible outcomes
+<math id="p2.m3" class="ltx_Math" alttext="x_{1},\ldots,x_{m}" display="inline"><mrow><msub><mi>x</mi><mn>1</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>x</mi><mi>m</mi></msub></mrow></math> with <a class="nnexus_concept" href="http://mathworld.wolfram.com/Probability.html">probability</a> of each outcome
 <math id="p2.m4" class="ltx_Math" alttext="\operatorname{P}(X=x_{i})=p_{i}" display="inline"><mrow><mrow><mi mathvariant="normal">P</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mrow><mi>X</mi><mo>=</mo><msub><mi>x</mi><mi>i</mi></msub></mrow><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><msub><mi>p</mi><mi>i</mi></msub></mrow></math>.
 
 <br class="ltx_break">
-<br class="ltx_break"><math id="p2.m5" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> independent observations are obtained where each observation has
-the same distribution as <math id="p2.m6" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>. Bin the observations into <math id="p2.m7" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math> groups,
+<br class="ltx_break"><math id="p2.m5" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> <a class="nnexus_concept" href="http://planetmath.org/independent">independent</a> <a class="nnexus_concept" href="http://planetmath.org/datatypesinstatistics">observations</a> are obtained where each observation has
+the same <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/distributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/probabilitydistributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> as <math id="p2.m6" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>. Bin the observations into <math id="p2.m7" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math> groups,
 so that each group contains all observations having the same outcome
 <math id="p2.m8" class="ltx_Math" alttext="x_{i}" display="inline"><msub><mi>x</mi><mi>i</mi></msub></math>. Next, count the number of observations in each group to get
 <math id="p2.m9" class="ltx_Math" alttext="n_{1},\ldots,n_{k}" display="inline"><mrow><msub><mi>n</mi><mn>1</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>n</mi><mi>k</mi></msub></mrow></math> corresponding to the outcomes <math id="p2.m10" class="ltx_Math" alttext="x_{1},\ldots,x_{k}" display="inline"><mrow><msub><mi>x</mi><mn>1</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>x</mi><mi>k</mi></msub></mrow></math>, so
 that <math id="p2.m11" class="ltx_Math" alttext="n=\sum n_{i}" display="inline"><mrow><mi>n</mi><mo>=</mo><mrow><mo largeop="true" symmetric="true">∑</mo><msub><mi>n</mi><mi>i</mi></msub></mrow></mrow></math>. It is desired to find out how close the actual
-number of outcomes <math id="p2.m12" class="ltx_Math" alttext="n_{i}" display="inline"><msub><mi>n</mi><mi>i</mi></msub></math> are to their expected values <math id="p2.m13" class="ltx_Math" alttext="np_{i}" display="inline"><mrow><mi>n</mi><mo>⁢</mo><msub><mi>p</mi><mi>i</mi></msub></mrow></math>.
+number of outcomes <math id="p2.m12" class="ltx_Math" alttext="n_{i}" display="inline"><msub><mi>n</mi><mi>i</mi></msub></math> are to their <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">expected values</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ExpectedValue.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/expectedvalue"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="p2.m13" class="ltx_Math" alttext="np_{i}" display="inline"><mrow><mi>n</mi><mo>⁢</mo><msub><mi>p</mi><mi>i</mi></msub></mrow></math>.
 
 <br class="ltx_break">
 <br class="ltx_break">Intuitively, this “closeness” depends on how big the sample is,
@@ -46,22 +46,22 @@ expected, for all categories. The value</p>
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(1)</span></td>
 </tr></tbody>
 </table>
-<p class="ltx_p">called the <math id="p2.m14" class="ltx_Math" alttext="\chi^{2}" display="inline"><msup><mi>χ</mi><mn>2</mn></msup></math> <em class="ltx_emph ltx_font_italic">statistic</em>, or the <em class="ltx_emph ltx_font_italic">chi-squared
-statistic</em>, is such a measure of “closeness”. It is also known as
+<p class="ltx_p">called the <math id="p2.m14" class="ltx_Math" alttext="\chi^{2}" display="inline"><msup><mi>χ</mi><mn>2</mn></msup></math> <em class="ltx_emph ltx_font_italic"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">statistic</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Statistic.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://mathworld.wolfram.com/Statistics.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/statistic"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></em>, or the <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/chisquaredstatistic">chi-squared
+statistic</a></em>, is such a <a class="nnexus_concept" href="http://planetmath.org/measure">measure</a> of “closeness”. It is also known as
 the <em class="ltx_emph ltx_font_italic">Pearson-chi-squared</em> statistic, in honor of the English
 statistician Karl Pearson, who showed that (1) has approximately a
-chi-squared distribution (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/ChiSquaredRandomVariable</span>) with
-<math id="p2.m15" class="ltx_Math" alttext="m-1" display="inline"><mrow><mi>m</mi><mo>-</mo><mn>1</mn></mrow></math> degrees of freedom. The degree of freedom depends on the
-number of free variables in <math id="p2.m16" class="ltx_Math" alttext="\chi^{2}" display="inline"><msup><mi>χ</mi><mn>2</mn></msup></math>, and is not always <math id="p2.m17" class="ltx_Math" alttext="m-1" display="inline"><mrow><mi>m</mi><mo>-</mo><mn>1</mn></mrow></math>, as we
+<a class="nnexus_concept" href="http://mathworld.wolfram.com/Chi-SquaredDistribution.html">chi-squared distribution</a> (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/ChiSquaredRandomVariable</span>) with
+<math id="p2.m15" class="ltx_Math" alttext="m-1" display="inline"><mrow><mi>m</mi><mo>-</mo><mn>1</mn></mrow></math> <a class="nnexus_concept" href="http://planetmath.org/degreesoffreedom">degrees of freedom</a>. The degree of freedom depends on the
+number of <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">free variables</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/FreeVariable.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/freeandboundvariables"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/combinatorylogic"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> in <math id="p2.m16" class="ltx_Math" alttext="\chi^{2}" display="inline"><msup><mi>χ</mi><mn>2</mn></msup></math>, and is not always <math id="p2.m17" class="ltx_Math" alttext="m-1" display="inline"><mrow><mi>m</mi><mo>-</mo><mn>1</mn></mrow></math>, as we
 will see in Example <math id="p2.m18" class="ltx_Math" alttext="3" display="inline"><mn>3</mn></math>.
 
 <br class="ltx_break">
-<br class="ltx_break">Usually, <math id="p2.m19" class="ltx_Math" alttext="\chi^{2}" display="inline"><msup><mi>χ</mi><mn>2</mn></msup></math> statistic is utilized in hypothesis testing, where
-the null hypothesis specifies that the actual equals the expected. A
+<br class="ltx_break">Usually, <math id="p2.m19" class="ltx_Math" alttext="\chi^{2}" display="inline"><msup><mi>χ</mi><mn>2</mn></msup></math> statistic is utilized in <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">hypothesis testing</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/HypothesisTesting.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/hypothesistesting"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, where
+the <a class="nnexus_concept" href="http://mathworld.wolfram.com/NullHypothesis.html">null hypothesis</a> specifies that the actual equals the expected. A
 large value of <math id="p2.m20" class="ltx_Math" alttext="\chi^{2}" display="inline"><msup><mi>χ</mi><mn>2</mn></msup></math> means either the deviations from the
 expectations are large or the sample is small, and therefore, either
 the null hypothesis should be rejected or there is not enough
-information to give a meaningful interpretation. How large of a
+<a class="nnexus_concept" href="http://planetmath.org/fisherinformationmatrix">information</a> to give a meaningful <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">interpretation</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Interpretation.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/structure"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/truthvaluesemanticsforclassicalpropositionallogic"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>. How large of a
 deviation, compared to the sample size, is enough to reject the null
 hypothesis depends on the degree of freedom of chi-squared
 distribution of <math id="p2.m21" class="ltx_Math" alttext="\chi^{2}" display="inline"><msup><mi>χ</mi><mn>2</mn></msup></math> and the specified critical values.
@@ -74,7 +74,7 @@ distribution of <math id="p2.m21" class="ltx_Math" alttext="\chi^{2}" display="i
 <div id="I1.i1.p1" class="ltx_para">
 <p class="ltx_p">Suppose a coin is tossed 10 times and 7 heads are observed.
 We would like to know if the coin is fair based on the
-observations. We have the following hypothesis:</p>
+observations. We have the following <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">hypothesis</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Hypothesis.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/deduction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>:</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -93,7 +93,7 @@ according to <math id="I1.i1.p1.m1" class="ltx_Math" alttext="H_{0}" display="in
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">Checking the table of critical values of chi-squared distributions,
+<p class="ltx_p">Checking the <a class="nnexus_concept" href="http://planetmath.org/tableofcriticalvaluesofchisquareddistributions">table of critical values of chi-squared distributions</a>,
 we see that at degree of freedom <math id="I1.i1.p1.m2" class="ltx_Math" alttext="=1" display="inline"><mrow><mi></mi><mo>=</mo><mn>1</mn></mrow></math>, there is a 0.100 chance that the
 <math id="I1.i1.p1.m3" class="ltx_Math" alttext="\chi^{2}" display="inline"><msup><mi>χ</mi><mn>2</mn></msup></math> value is higher than 2.706. Since <math id="I1.i1.p1.m4" class="ltx_Math" alttext="1.600&lt;2.706" display="inline"><mrow><mn>1.600</mn><mo>&lt;</mo><mn>2.706</mn></mrow></math>, we may
 not want to reject the null hypothesis. However, we may not want
@@ -114,7 +114,7 @@ Using the same null hypothesis as above,</p>
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">Even at p-value <math id="I1.i2.p1.m1" class="ltx_Math" alttext="=0.005" display="inline"><mrow><mi></mi><mo>=</mo><mn>0.005</mn></mrow></math>, the corresponding critical value of 7.879
+<p class="ltx_p">Even at <a class="nnexus_concept" href="http://mathworld.wolfram.com/P-Value.html">p-value</a> <math id="I1.i2.p1.m1" class="ltx_Math" alttext="=0.005" display="inline"><mrow><mi></mi><mo>=</mo><mn>0.005</mn></mrow></math>, the corresponding critical value of 7.879
 is quite a bit smaller than 16. So we will reject the null
 hypothesis even at confidence level 99.5%(<math id="I1.i2.p1.m2" class="ltx_Math" alttext="=1-" display="inline"><mrow><mi></mi><mo>=</mo><mrow><mn>1</mn><mo>-</mo></mrow></mrow></math>p-value).</p>
 </div>
@@ -123,7 +123,7 @@ hypothesis even at confidence level 99.5%(<math id="I1.i2.p1.m2" class="ltx_Math
 <span class="ltx_tag ltx_tag_enumerate">3.</span> 
 <div id="I1.i3.p1" class="ltx_para">
 <p class="ltx_p"><math id="I1.i3.p1.m1" class="ltx_Math" alttext="\chi^{2}" display="inline"><msup><mi>χ</mi><mn>2</mn></msup></math> statistic can be used in non-parametric situations as
-well, particularly, in contingency tables. Three dice of varying
+well, particularly, in <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">contingency tables</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ContingencyTable.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/contingencytable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>. Three dice of varying
 sizes are each tossed 100 times and the top faces are recorded. The
 results of the count of each possible value of the top face, for
 each die is summarized in the following table:</p>
@@ -239,7 +239,7 @@ null hypothesis, we have the following table of “expected count”:</p>
 </tr>
 </tbody>
 </table>
-<p class="ltx_p">For each die, we can compute the <math id="I1.i3.p1.m11" class="ltx_Math" alttext="\chi^{2}" display="inline"><msup><mi>χ</mi><mn>2</mn></msup></math>. For instance, for the
+<p class="ltx_p">For each die, we can compute the <math id="I1.i3.p1.m11" class="ltx_Math" alttext="\chi^{2}" display="inline"><msup><mi>χ</mi><mn>2</mn></msup></math>. For <a class="nnexus_concept" href="http://planetmath.org/substitutionsinpropositionallogic">instance</a>, for the
 first die,</p>
 <table id="S0.EGx2" class="ltx_equationgroup ltx_eqn_eqnarray ltx_eqn_table">
 
