--- a/html/62H05-JacobiDeterminant.html
+++ b/html/62H05-JacobiDeterminant.html
@@ -31,7 +31,7 @@
 </table>
 </div>
 <div id="p3" class="ltx_para">
-<p class="ltx_p">be a function of <math id="p3.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> variables, and let</p>
+<p class="ltx_p">be a function of <math id="p3.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> <a class="nnexus_concept" href="http://planetmath.org/variable">variables</a>, and let</p>
 </div>
 <div id="p4" class="ltx_para">
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
@@ -70,7 +70,7 @@
 </table>
 </div>
 <div id="p9" class="ltx_para">
-<p class="ltx_p"><math id="p9.m1" class="ltx_Math" alttext="\Omega" display="inline"><mi mathvariant="normal">Ω</mi></math> is an integration region, and one integrates over all <math id="p9.m2" class="ltx_Math" alttext="x\in\Omega" display="inline"><mrow><mi>x</mi><mo>∈</mo><mi mathvariant="normal">Ω</mi></mrow></math>, or equivalently, all <math id="p9.m3" class="ltx_Math" alttext="u\in u(\Omega)" display="inline"><mrow><mi>u</mi><mo>∈</mo><mrow><mi>u</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi mathvariant="normal">Ω</mi><mo stretchy="false">)</mo></mrow></mrow></mrow></math>. <math id="p9.m4" class="ltx_Math" alttext="dx/du=(du/dx)^{-1}" display="inline"><mrow><mrow><mrow><mrow><mi>d</mi><mo>⁢</mo><mi>x</mi></mrow><mo>/</mo><mi>d</mi></mrow><mo>⁢</mo><mi>u</mi></mrow><mo>=</mo><msup><mrow><mo stretchy="false">(</mo><mrow><mrow><mrow><mi>d</mi><mo>⁢</mo><mi>u</mi></mrow><mo>/</mo><mi>d</mi></mrow><mo>⁢</mo><mi>x</mi></mrow><mo stretchy="false">)</mo></mrow><mrow><mo>-</mo><mn>1</mn></mrow></msup></mrow></math> is the Jacobi matrix and</p>
+<p class="ltx_p"><math id="p9.m1" class="ltx_Math" alttext="\Omega" display="inline"><mi mathvariant="normal">Ω</mi></math> is an integration region, and one <a class="nnexus_concept" href="http://planetmath.org/integralsign">integrates</a> over all <math id="p9.m2" class="ltx_Math" alttext="x\in\Omega" display="inline"><mrow><mi>x</mi><mo>∈</mo><mi mathvariant="normal">Ω</mi></mrow></math>, or equivalently, all <math id="p9.m3" class="ltx_Math" alttext="u\in u(\Omega)" display="inline"><mrow><mi>u</mi><mo>∈</mo><mrow><mi>u</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi mathvariant="normal">Ω</mi><mo stretchy="false">)</mo></mrow></mrow></mrow></math>. <math id="p9.m4" class="ltx_Math" alttext="dx/du=(du/dx)^{-1}" display="inline"><mrow><mrow><mrow><mrow><mi>d</mi><mo>⁢</mo><mi>x</mi></mrow><mo>/</mo><mi>d</mi></mrow><mo>⁢</mo><mi>u</mi></mrow><mo>=</mo><msup><mrow><mo stretchy="false">(</mo><mrow><mrow><mrow><mi>d</mi><mo>⁢</mo><mi>u</mi></mrow><mo>/</mo><mi>d</mi></mrow><mo>⁢</mo><mi>x</mi></mrow><mo stretchy="false">)</mo></mrow><mrow><mo>-</mo><mn>1</mn></mrow></msup></mrow></math> is the Jacobi matrix and</p>
 </div>
 <div id="p10" class="ltx_para">
 <table id="S0.Ex5" class="ltx_equation ltx_eqn_table">
@@ -83,7 +83,7 @@
 </table>
 </div>
 <div id="p11" class="ltx_para">
-<p class="ltx_p">is the absolute value of the <em class="ltx_emph ltx_font_italic">Jacobi determinant</em> or <em class="ltx_emph ltx_font_italic">Jacobian</em>.
+<p class="ltx_p">is the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">absolute value</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/valuation"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/absolutevalue"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of the <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/jacobideterminant">Jacobi determinant</a></em> or <em class="ltx_emph ltx_font_italic">Jacobian</em>.
 </p>
 </div>
 <div id="p12" class="ltx_para">
@@ -114,7 +114,7 @@ u_{1}=\rho\cos\varphi&amp;u_{2}=\rho\sin\varphi\end{array}" display="block"><mta
 </table>
 </div>
 <div id="p16" class="ltx_para">
-<p class="ltx_p">Then by the chain rule and definition of the Jacobi matrix,</p>
+<p class="ltx_p">Then by the chain rule and <a class="nnexus_concept" href="http://planetmath.org/definition">definition</a> of the Jacobi matrix,</p>
 </div>
 <div id="p17" class="ltx_para">
 <table id="S0.EGx1" class="ltx_equationgroup ltx_eqn_eqnarray ltx_eqn_table">
@@ -191,7 +191,7 @@ u_{1}=\rho\cos\varphi&amp;u_{2}=\rho\sin\varphi\end{array}" display="block"><mta
 </table>
 </div>
 <div id="p22" class="ltx_para">
-<p class="ltx_p">This shows that if <math id="p22.m1" class="ltx_Math" alttext="x_{1}" display="inline"><msub><mi>x</mi><mn>1</mn></msub></math> and <math id="p22.m2" class="ltx_Math" alttext="x_{2}" display="inline"><msub><mi>x</mi><mn>2</mn></msub></math> are independent random variables with uniform distributions between 0 and 1, then <math id="p22.m3" class="ltx_Math" alttext="u_{1}" display="inline"><msub><mi>u</mi><mn>1</mn></msub></math> and <math id="p22.m4" class="ltx_Math" alttext="u_{2}" display="inline"><msub><mi>u</mi><mn>2</mn></msub></math> as defined above are independent random variables with standard normal distributions.</p>
+<p class="ltx_p">This shows that if <math id="p22.m1" class="ltx_Math" alttext="x_{1}" display="inline"><msub><mi>x</mi><mn>1</mn></msub></math> and <math id="p22.m2" class="ltx_Math" alttext="x_{2}" display="inline"><msub><mi>x</mi><mn>2</mn></msub></math> are <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">independent</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/projectivebasis"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/independent"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">random variables</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/RandomVariable.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/randomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> with <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">uniform distributions</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/UniformDistribution.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/uniformcontinuousrandomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> between 0 and 1, then <math id="p22.m3" class="ltx_Math" alttext="u_{1}" display="inline"><msub><mi>u</mi><mn>1</mn></msub></math> and <math id="p22.m4" class="ltx_Math" alttext="u_{2}" display="inline"><msub><mi>u</mi><mn>2</mn></msub></math> as defined above are independent random variables with <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">standard normal distributions</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/StandardNormalDistribution.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/normalrandomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>.</p>
 </div>
 <div id="p23" class="ltx_para">
 <p class="ltx_p"><span class="ltx_text ltx_font_bold">References</span></p>
@@ -213,7 +213,7 @@ u_{1}=\rho\cos\varphi&amp;u_{2}=\rho\sin\varphi\end{array}" display="block"><mta
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Jacobi determinant</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">JacobiDeterminant</td>
 </tr>
 <tr class="ltx_tr">
@@ -245,7 +245,7 @@ u_{1}=\rho\cos\varphi&amp;u_{2}=\rho\sin\varphi\end{array}" display="block"><mta
 <td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></th>
 <td class="ltx_td ltx_align_left ltx_border_r">msc 62H05</td>
 </tr>
 <tr class="ltx_tr">
