--- a/html/62H10-MultivariateGammaFunctioncomplexvalued.html
+++ b/html/62H10-MultivariateGammaFunctioncomplexvalued.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">The complex multivariate gamma function is defined as</p>
+<p class="ltx_p">The <a class="nnexus_concept" href="http://planetmath.org/complex">complex</a> <a class="nnexus_concept" href="http://dlmf.nist.gov/35.3#i">multivariate gamma function</a> is defined as</p>
 <table id="S0.E1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -29,7 +29,7 @@
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(1)</span></td>
 </tr>
 </table>
-<p class="ltx_p">where <math id="p1.m1" class="ltx_Math" alttext="\mathfrak{A}" display="inline"><mi>𝔄</mi></math> is the set of all <math id="p1.m2" class="ltx_Math" alttext="m\times m" display="inline"><mrow><mi>m</mi><mo>×</mo><mi>m</mi></mrow></math> positive, complex-valued Hermitian matrices, i.e.</p>
+<p class="ltx_p">where <math id="p1.m1" class="ltx_Math" alttext="\mathfrak{A}" display="inline"><mi>𝔄</mi></math> is the set of all <math id="p1.m2" class="ltx_Math" alttext="m\times m" display="inline"><mrow><mi>m</mi><mo>×</mo><mi>m</mi></mrow></math> positive, complex-valued <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Hermitian matrices</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/HermitianMatrix.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/hermitianmatrix"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, i.e.</p>
 <table id="S0.E2" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -39,7 +39,7 @@
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(2)</span></td>
 </tr>
 </table>
-<p class="ltx_p">It can also be expressed in terms of the gamma function as follows</p>
+<p class="ltx_p">It can also be expressed in terms of the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">gamma function</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/5#PT2"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://dlmf.nist.gov/5.2#E1"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://mathworld.wolfram.com/GammaFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/gammafunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> as follows</p>
 <table id="S0.E3" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -54,7 +54,7 @@
 <h2 class="ltx_title ltx_title_subsection">Reference</h2>
 
 <div id="S0.SSx1.p1" class="ltx_para">
-<p class="ltx_p">A. T. James,“Distributions of matrix variates and latent roots derived from normal samples,” <span class="ltx_text ltx_font_italic">Ann. Math. Statist.</span>, vol. 35, pp. 475-501, 1964.
+<p class="ltx_p">A. T. James,“<a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Distributions</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/1.16#SS1.p5"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://planetmath.org/distributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/probabilitydistributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of <a class="nnexus_concept" href="http://mathworld.wolfram.com/MatrixVariate.html">matrix variates</a> and latent roots derived from normal samples,” <span class="ltx_text ltx_font_italic">Ann. Math. Statist.</span>, vol. 35, pp. 475-501, 1964.
 </p>
 <table class="ltx_tabular ltx_align_right ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
@@ -100,7 +100,7 @@
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l">Defines</th>
-<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r">gamma function (multivariate complex)</td>
+<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r">gamma function (<a class="nnexus_concept" href="http://mathworld.wolfram.com/Multivariate.html">multivariate</a> complex)</td>
 </tr>
 </tbody>
 </table>
