--- a/html/62H10-MultivariateGammaFunctionrealvalued.html
+++ b/html/62H10-MultivariateGammaFunctionrealvalued.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">The real-valued multivariate gamma function is defined by</p>
+<p class="ltx_p">The real-valued <a class="nnexus_concept" href="http://dlmf.nist.gov/35.3#i">multivariate gamma function</a> is defined by</p>
 <table id="S0.E1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -31,7 +31,7 @@
 </table>
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">where <math id="p2.m1" class="ltx_Math" alttext="\mathfrak{S}" display="inline"><mi>𝔖</mi></math> is the set of all <math id="p2.m2" class="ltx_Math" alttext="m\times m" display="inline"><mrow><mi>m</mi><mo>×</mo><mi>m</mi></mrow></math> real, positive definite symmetric matrices, i.e.</p>
+<p class="ltx_p">where <math id="p2.m1" class="ltx_Math" alttext="\mathfrak{S}" display="inline"><mi>𝔖</mi></math> is the set of all <math id="p2.m2" class="ltx_Math" alttext="m\times m" display="inline"><mrow><mi>m</mi><mo>×</mo><mi>m</mi></mrow></math> real, <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">positive definite</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/positivedefiniteform"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/positivedefinite"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">symmetric matrices</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/SymmetricMatrix.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/symmetricmatrix"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, i.e.</p>
 <table id="S0.E2" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -42,7 +42,7 @@
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(2)</span></td>
 </tr>
 </table>
-<p class="ltx_p">The real-valued multivariate gamma function can also be expressed in terms of the gamma function as follows</p>
+<p class="ltx_p">The real-valued multivariate gamma function can also be expressed in terms of the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">gamma function</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/5#PT2"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://dlmf.nist.gov/5.2#E1"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://mathworld.wolfram.com/GammaFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/gammafunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> as follows</p>
 </div>
 <div id="p3" class="ltx_para">
 <table id="S0.E3" class="ltx_equation ltx_eqn_table">
@@ -60,7 +60,7 @@
 <h2 class="ltx_title ltx_title_subsection">Reference</h2>
 
 <div id="S0.SSx1.p1" class="ltx_para">
-<p class="ltx_p">A. T. James, “Distributions of matrix variates and latent roots derived from normal samples,” <span class="ltx_text ltx_font_italic">Ann. Math. Statist.</span>, vol. 35, pp. 475-501, 1964.
+<p class="ltx_p">A. T. James, “<a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Distributions</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/1.16#SS1.p5"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://planetmath.org/distributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/probabilitydistributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of <a class="nnexus_concept" href="http://mathworld.wolfram.com/MatrixVariate.html">matrix variates</a> and latent roots derived from normal samples,” <span class="ltx_text ltx_font_italic">Ann. Math. Statist.</span>, vol. 35, pp. 475-501, 1964.
 </p>
 <table class="ltx_tabular ltx_align_right ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
@@ -106,7 +106,7 @@
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l">Defines</th>
-<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r">gamma function (multivariate real)</td>
+<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r">gamma function (<a class="nnexus_concept" href="http://mathworld.wolfram.com/Multivariate.html">multivariate</a> real)</td>
 </tr>
 </tbody>
 </table>
