--- a/html/62H17-ContingencyTable.html
+++ b/html/62H17-ContingencyTable.html
@@ -20,19 +20,19 @@
 <br class="ltx_break">
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">Given a random sample of <math id="p2.m1" class="ltx_Math" alttext="N" display="inline"><mi>N</mi></math> observations <math id="p2.m2" class="ltx_Math" alttext="\textbf{Z}_{i}=(Y_{i},X_{i1},\ldots,X_{ik})" display="inline"><mrow><msub><mtext>𝐙</mtext><mi>i</mi></msub><mo>=</mo><mrow><mo stretchy="false">(</mo><msub><mi>Y</mi><mi>i</mi></msub><mo>,</mo><msub><mi>X</mi><mrow><mi>i</mi><mo>⁢</mo><mn>1</mn></mrow></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>X</mi><mrow><mi>i</mi><mo>⁢</mo><mi>k</mi></mrow></msub><mo stretchy="false">)</mo></mrow></mrow></math> where
+<p class="ltx_p">Given a random sample of <math id="p2.m1" class="ltx_Math" alttext="N" display="inline"><mi>N</mi></math> <a class="nnexus_concept" href="http://planetmath.org/datatypesinstatistics">observations</a> <math id="p2.m2" class="ltx_Math" alttext="\textbf{Z}_{i}=(Y_{i},X_{i1},\ldots,X_{ik})" display="inline"><mrow><msub><mtext>𝐙</mtext><mi>i</mi></msub><mo>=</mo><mrow><mo stretchy="false">(</mo><msub><mi>Y</mi><mi>i</mi></msub><mo>,</mo><msub><mi>X</mi><mrow><mi>i</mi><mo>⁢</mo><mn>1</mn></mrow></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>X</mi><mrow><mi>i</mi><mo>⁢</mo><mi>k</mi></mrow></msub><mo stretchy="false">)</mo></mrow></mrow></math> where
 </p>
 <ol id="I1" class="ltx_enumerate">
 <li id="I1.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">1.</span> 
 <div id="I1.i1.p1" class="ltx_para">
-<p class="ltx_p">the response variables <math id="I1.i1.p1.m1" class="ltx_Math" alttext="Y_{i}" display="inline"><msub><mi>Y</mi><mi>i</mi></msub></math> are identically distributed as <math id="I1.i1.p1.m2" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math></p>
+<p class="ltx_p">the response variables <math id="I1.i1.p1.m1" class="ltx_Math" alttext="Y_{i}" display="inline"><msub><mi>Y</mi><mi>i</mi></msub></math> are <a class="nnexus_concept" href="http://planetmath.org/independentidenticallydistributed">identically distributed</a> as <math id="I1.i1.p1.m2" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math></p>
 </div>
 </li>
 <li id="I1.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">2.</span> 
 <div id="I1.i2.p1" class="ltx_para">
-<p class="ltx_p"><math id="I1.i2.p1.m1" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> is categorical in nature (coming from a multinomial distribution)</p>
+<p class="ltx_p"><math id="I1.i2.p1.m1" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> is categorical in nature (coming from a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">multinomial distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/MultinomialDistribution.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/multinomialdistribution"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>)</p>
 </div>
 </li>
 <li id="I1.i3" class="ltx_item" style="list-style-type:none;">
@@ -42,10 +42,10 @@
 </div>
 </li>
 </ol>
-<p class="ltx_p">Then we can analyze the data by forming a <em class="ltx_emph ltx_font_italic">contingency table</em>. The table is customarily formed by labeling the categories for the response across the top, and then the combinations of the levels for each explanatory variable down the left-most columns. Then the cells are filled with counts or frequencies of occurrences corresponding to the specific explanatory variable level combination to the left and the response to the top.</p>
+<p class="ltx_p">Then we can analyze the data by forming a <em class="ltx_emph ltx_font_italic"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">contingency table</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ContingencyTable.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/contingencytable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></em>. The table is customarily formed by <a class="nnexus_concept" href="http://planetmath.org/labeledgraph">labeling</a> the categories for the response across the top, and then the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">combinations</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Combination.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/combinatorylogic"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/binomialcoefficient"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of the levels for each explanatory variable down the left-most columns. Then the cells are filled with counts or frequencies of <a class="nnexus_concept" href="http://planetmath.org/word">occurrences</a> corresponding to the specific explanatory variable level combination to the left and the response to the top.</p>
 </div>
 <div id="p3" class="ltx_para">
-<p class="ltx_p">The simplest example of a contingency table is where the response variable <math id="p3.m1" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> comes from a binomial distribution (with two possible responses <math id="p3.m2" class="ltx_Math" alttext="r_{1}" display="inline"><msub><mi>r</mi><mn>1</mn></msub></math> and <math id="p3.m3" class="ltx_Math" alttext="r_{2}" display="inline"><msub><mi>r</mi><mn>2</mn></msub></math>) and there is only one explanatory variable <math id="p3.m4" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>, which has only two levels, <math id="p3.m5" class="ltx_Math" alttext="A_{1}" display="inline"><msub><mi>A</mi><mn>1</mn></msub></math> and <math id="p3.m6" class="ltx_Math" alttext="A_{2}" display="inline"><msub><mi>A</mi><mn>2</mn></msub></math>. This is an instance of a <em class="ltx_emph ltx_font_italic">2 way contingency table</em>:</p>
+<p class="ltx_p">The simplest example of a contingency table is where the response variable <math id="p3.m1" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> comes from a <a class="nnexus_concept" href="http://mathworld.wolfram.com/BinomialDistribution.html">binomial distribution</a> (with two possible responses <math id="p3.m2" class="ltx_Math" alttext="r_{1}" display="inline"><msub><mi>r</mi><mn>1</mn></msub></math> and <math id="p3.m3" class="ltx_Math" alttext="r_{2}" display="inline"><msub><mi>r</mi><mn>2</mn></msub></math>) and there is only one explanatory variable <math id="p3.m4" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>, which has only two levels, <math id="p3.m5" class="ltx_Math" alttext="A_{1}" display="inline"><msub><mi>A</mi><mn>1</mn></msub></math> and <math id="p3.m6" class="ltx_Math" alttext="A_{2}" display="inline"><msub><mi>A</mi><mn>2</mn></msub></math>. This is an <a class="nnexus_concept" href="http://planetmath.org/substitutionsinpropositionallogic">instance</a> of a <em class="ltx_emph ltx_font_italic">2 way contingency table</em>:</p>
 <table class="ltx_tabular ltx_centering ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
@@ -85,7 +85,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></th>
 <td class="ltx_td ltx_align_left ltx_border_r">msc 62H17</td>
 </tr>
 <tr class="ltx_tr">
