--- a/html/62H20-OddsRatio.html
+++ b/html/62H20-OddsRatio.html
@@ -33,15 +33,15 @@
 as likely as that of landing a tail.</p>
 </div>
 <div id="p3" class="ltx_para">
-<p class="ltx_p">In a <math id="p3.m1" class="ltx_Math" alttext="2\times 2" display="inline"><mrow><mn>2</mn><mo>×</mo><mn>2</mn></mrow></math> contingency table, with a dichotomous explanatory variable <math id="p3.m2" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> having levels 1 and 2, and a binary response variable <math id="p3.m3" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> with success and failure as two possible levels of outcomes:</p>
+<p class="ltx_p">In a <math id="p3.m1" class="ltx_Math" alttext="2\times 2" display="inline"><mrow><mn>2</mn><mo>×</mo><mn>2</mn></mrow></math> <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">contingency table</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ContingencyTable.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/contingencytable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, with a <a class="nnexus_concept" href="http://planetmath.org/datatypesinstatistics">dichotomous</a> explanatory variable <math id="p3.m2" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> having levels 1 and 2, and a binary response variable <math id="p3.m3" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> with success and failure as two possible levels of outcomes:</p>
 <table class="ltx_tabular ltx_centering ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">odds ratio</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/oddsratio">odds ratio</a></td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">OddsRatio</td>
 </tr>
 <tr class="ltx_tr">
@@ -70,7 +70,7 @@ as likely as that of landing a tail.</p>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
