--- a/html/62H99-FisherInformationMatrix.html
+++ b/html/62H99-FisherInformationMatrix.html
@@ -20,7 +20,7 @@
 <br class="ltx_break">
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">Given a statistical model <math id="p2.m1" class="ltx_Math" alttext="\{f_{\textbf{X}}(\boldsymbol{x}\mid\boldsymbol{\theta})\}" display="inline"><mrow><mo stretchy="false">{</mo><msub><mi>f</mi><mtext>𝐗</mtext></msub><mrow><mo stretchy="false">(</mo><mi>𝒙</mi><mo>∣</mo><mi>𝜽</mi><mo stretchy="false">)</mo></mrow><mo stretchy="false">}</mo></mrow></math> of a random vector <span class="ltx_text ltx_markedasmath ltx_font_bold">X</span>, the <em class="ltx_emph ltx_font_italic">Fisher information matrix</em>, <math id="p2.m3" class="ltx_Math" alttext="I" display="inline"><mi>I</mi></math>, is the variance of the score function <math id="p2.m4" class="ltx_Math" alttext="U" display="inline"><mi>U</mi></math>. So,</p>
+<p class="ltx_p">Given a <a class="nnexus_concept" href="http://planetmath.org/statisticalmodel">statistical model</a> <math id="p2.m1" class="ltx_Math" alttext="\{f_{\textbf{X}}(\boldsymbol{x}\mid\boldsymbol{\theta})\}" display="inline"><mrow><mo stretchy="false">{</mo><msub><mi>f</mi><mtext>𝐗</mtext></msub><mrow><mo stretchy="false">(</mo><mi>𝒙</mi><mo>∣</mo><mi>𝜽</mi><mo stretchy="false">)</mo></mrow><mo stretchy="false">}</mo></mrow></math> of a <a class="nnexus_concept" href="http://planetmath.org/randomvector">random vector</a> <span class="ltx_text ltx_markedasmath ltx_font_bold">X</span>, the <em class="ltx_emph ltx_font_italic"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Fisher information matrix</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/FisherInformationMatrix.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/fisherinformationmatrix"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></em>, <math id="p2.m3" class="ltx_Math" alttext="I" display="inline"><mi>I</mi></math>, is the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">variance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Variance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/variance"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">score function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ScoreFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/scorefunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="p2.m4" class="ltx_Math" alttext="U" display="inline"><mi>U</mi></math>. So,</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -29,7 +29,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">If there is only one parameter involved, then <math id="p2.m5" class="ltx_Math" alttext="I" display="inline"><mi>I</mi></math> is simply called the <em class="ltx_emph ltx_font_italic">Fisher information</em> or <em class="ltx_emph ltx_font_italic">information</em> of <math id="p2.m6" class="ltx_Math" alttext="f_{\textbf{X}}(\boldsymbol{x}\mid\theta)" display="inline"><mrow><msub><mi>f</mi><mtext>𝐗</mtext></msub><mrow><mo stretchy="false">(</mo><mi>𝒙</mi><mo>∣</mo><mi>θ</mi><mo stretchy="false">)</mo></mrow></mrow></math>.</p>
+<p class="ltx_p">If there is only one parameter involved, then <math id="p2.m5" class="ltx_Math" alttext="I" display="inline"><mi>I</mi></math> is simply called the <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://mathworld.wolfram.com/FisherInformation.html">Fisher information</a></em> or <em class="ltx_emph ltx_font_italic">information</em> of <math id="p2.m6" class="ltx_Math" alttext="f_{\textbf{X}}(\boldsymbol{x}\mid\theta)" display="inline"><mrow><msub><mi>f</mi><mtext>𝐗</mtext></msub><mrow><mo stretchy="false">(</mo><mi>𝒙</mi><mo>∣</mo><mi>θ</mi><mo stretchy="false">)</mo></mrow></mrow></math>.</p>
 </div>
 <div id="p3" class="ltx_para">
 <p class="ltx_p"><span class="ltx_text ltx_font_bold">Remarks</span></p>
@@ -37,7 +37,7 @@
 <li id="I1.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I1.i1.p1" class="ltx_para">
-<p class="ltx_p">If <math id="I1.i1.p1.m1" class="ltx_Math" alttext="f_{\textbf{X}}(\boldsymbol{x}\mid\boldsymbol{\theta})" display="inline"><mrow><msub><mi>f</mi><mtext>𝐗</mtext></msub><mrow><mo stretchy="false">(</mo><mi>𝒙</mi><mo>∣</mo><mi>𝜽</mi><mo stretchy="false">)</mo></mrow></mrow></math> belongs to the exponential family, <math id="I1.i1.p1.m2" class="ltx_Math" alttext="I=\operatorname{E}\big{[}U^{\operatorname{T}}U\big{]}" display="inline"><mrow><mi>I</mi><mo>=</mo><mrow><mi mathvariant="normal">E</mi><mo>⁡</mo><mrow><mo maxsize="120%" minsize="120%">[</mo><mrow><msup><mi>U</mi><mi mathvariant="normal">T</mi></msup><mo>⁢</mo><mi>U</mi></mrow><mo maxsize="120%" minsize="120%">]</mo></mrow></mrow></mrow></math>. Furthermore, with some regularity conditions imposed, we have</p>
+<p class="ltx_p">If <math id="I1.i1.p1.m1" class="ltx_Math" alttext="f_{\textbf{X}}(\boldsymbol{x}\mid\boldsymbol{\theta})" display="inline"><mrow><msub><mi>f</mi><mtext>𝐗</mtext></msub><mrow><mo stretchy="false">(</mo><mi>𝒙</mi><mo>∣</mo><mi>𝜽</mi><mo stretchy="false">)</mo></mrow></mrow></math> belongs to the <a class="nnexus_concept" href="http://planetmath.org/exponentialfamily">exponential family</a>, <math id="I1.i1.p1.m2" class="ltx_Math" alttext="I=\operatorname{E}\big{[}U^{\operatorname{T}}U\big{]}" display="inline"><mrow><mi>I</mi><mo>=</mo><mrow><mi mathvariant="normal">E</mi><mo>⁡</mo><mrow><mo maxsize="120%" minsize="120%">[</mo><mrow><msup><mi>U</mi><mi mathvariant="normal">T</mi></msup><mo>⁢</mo><mi>U</mi></mrow><mo maxsize="120%" minsize="120%">]</mo></mrow></mrow></mrow></math>. Furthermore, with some regularity conditions imposed, we have</p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -51,7 +51,7 @@
 <li id="I1.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I1.i2.p1" class="ltx_para">
-<p class="ltx_p">As an example, the normal distribution, <math id="I1.i2.p1.m1" class="ltx_Math" alttext="N(\mu,\sigma^{2})" display="inline"><mrow><mi>N</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>μ</mi><mo>,</mo><msup><mi>σ</mi><mn>2</mn></msup><mo stretchy="false">)</mo></mrow></mrow></math>, belongs to the exponential family and its log-likelihood function <math id="I1.i2.p1.m2" class="ltx_Math" alttext="\ell(\boldsymbol{\theta}\mid x)" display="inline"><mrow><mi mathvariant="normal">ℓ</mi><mrow><mo stretchy="false">(</mo><mi>𝜽</mi><mo>∣</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> is</p>
+<p class="ltx_p">As an example, the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">normal distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/NormalDistribution.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/normalrandomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, <math id="I1.i2.p1.m1" class="ltx_Math" alttext="N(\mu,\sigma^{2})" display="inline"><mrow><mi>N</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>μ</mi><mo>,</mo><msup><mi>σ</mi><mn>2</mn></msup><mo stretchy="false">)</mo></mrow></mrow></math>, belongs to the exponential family and its <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">log-likelihood function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Log-LikelihoodFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/likelihoodfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="I1.i2.p1.m2" class="ltx_Math" alttext="\ell(\boldsymbol{\theta}\mid x)" display="inline"><mrow><mi mathvariant="normal">ℓ</mi><mrow><mo stretchy="false">(</mo><mi>𝜽</mi><mo>∣</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> is</p>
 <table id="S0.Ex3" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -106,7 +106,7 @@
 <li id="I1.i3" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I1.i3.p1" class="ltx_para">
-<p class="ltx_p">Now, in linear regression model with constant variance <math id="I1.i3.p1.m1" class="ltx_Math" alttext="\sigma^{2}" display="inline"><msup><mi>σ</mi><mn>2</mn></msup></math>, it can be shown that the Fisher information matrix <math id="I1.i3.p1.m2" class="ltx_Math" alttext="I" display="inline"><mi>I</mi></math> is</p>
+<p class="ltx_p">Now, in <a class="nnexus_concept" href="http://planetmath.org/regressionmodel">linear regression model</a> with constant variance <math id="I1.i3.p1.m1" class="ltx_Math" alttext="\sigma^{2}" display="inline"><msup><mi>σ</mi><mn>2</mn></msup></math>, it can be shown that the Fisher information matrix <math id="I1.i3.p1.m2" class="ltx_Math" alttext="I" display="inline"><mi>I</mi></math> is</p>
 <table id="S0.Ex7" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -121,7 +121,7 @@
 <li id="I1.i4" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I1.i4.p1" class="ltx_para">
-<p class="ltx_p">In general, the Fisher information meansures how much “information” is known about a parameter <math id="I1.i4.p1.m1" class="ltx_Math" alttext="\theta" display="inline"><mi>θ</mi></math>. If <math id="I1.i4.p1.m2" class="ltx_Math" alttext="T" display="inline"><mi>T</mi></math> is an unbiased estimator of <math id="I1.i4.p1.m3" class="ltx_Math" alttext="\theta" display="inline"><mi>θ</mi></math>, it can be shown that</p>
+<p class="ltx_p">In general, the Fisher information meansures how much “information” is known about a parameter <math id="I1.i4.p1.m1" class="ltx_Math" alttext="\theta" display="inline"><mi>θ</mi></math>. If <math id="I1.i4.p1.m2" class="ltx_Math" alttext="T" display="inline"><mi>T</mi></math> is an <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">unbiased estimator</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/UnbiasedEstimator.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/bias"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of <math id="I1.i4.p1.m3" class="ltx_Math" alttext="\theta" display="inline"><mi>θ</mi></math>, it can be shown that</p>
 <table id="S0.Ex8" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -130,7 +130,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">This is known as the <em class="ltx_emph ltx_font_italic">Cramer-Rao inequality</em>, and the number <math id="I1.i4.p1.m4" class="ltx_Math" alttext="1/I(\theta)" display="inline"><mrow><mrow><mn>1</mn><mo>/</mo><mi>I</mi></mrow><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>θ</mi><mo stretchy="false">)</mo></mrow></mrow></math> is known as the <em class="ltx_emph ltx_font_italic">Cramer-Rao lower bound</em>. The smaller the variance of the estimate of <math id="I1.i4.p1.m5" class="ltx_Math" alttext="\theta" display="inline"><mi>θ</mi></math>, the more information we have on <math id="I1.i4.p1.m6" class="ltx_Math" alttext="\theta" display="inline"><mi>θ</mi></math>. If there is more than one parameter, the above can be generalized by saying that</p>
+<p class="ltx_p">This is known as the <em class="ltx_emph ltx_font_italic">Cramer-Rao inequality</em>, and the number <math id="I1.i4.p1.m4" class="ltx_Math" alttext="1/I(\theta)" display="inline"><mrow><mrow><mn>1</mn><mo>/</mo><mi>I</mi></mrow><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>θ</mi><mo stretchy="false">)</mo></mrow></mrow></math> is known as the <em class="ltx_emph ltx_font_italic">Cramer-Rao lower bound</em>. The smaller the variance of the <a class="nnexus_concept" href="http://planetmath.org/estimator">estimate</a> of <math id="I1.i4.p1.m5" class="ltx_Math" alttext="\theta" display="inline"><mi>θ</mi></math>, the more information we have on <math id="I1.i4.p1.m6" class="ltx_Math" alttext="\theta" display="inline"><mi>θ</mi></math>. If there is more than one parameter, the above can be generalized by saying that</p>
 <table id="S0.Ex9" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -139,7 +139,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">is positive semidefinite, where <math id="I1.i4.p1.m7" class="ltx_Math" alttext="I" display="inline"><mi>I</mi></math> is the Fisher information matrix.</p>
+<p class="ltx_p">is <a class="nnexus_concept" href="http://planetmath.org/positivesemidefinite">positive semidefinite</a>, where <math id="I1.i4.p1.m7" class="ltx_Math" alttext="I" display="inline"><mi>I</mi></math> is the Fisher information matrix.</p>
 </div>
 </li>
 </ul>
@@ -182,7 +182,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
 </tr>
 <tr class="ltx_tr">
-<td class="ltx_td ltx_align_left ltx_border_l">Classification</td>
+<td class="ltx_td ltx_align_left ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></td>
 <td class="ltx_td ltx_align_left ltx_border_r">msc 62H99</td>
 </tr>
 <tr class="ltx_tr">
