--- a/html/62J05-GaussMarkovTheorem.html
+++ b/html/62J05-GaussMarkovTheorem.html
@@ -18,10 +18,10 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">A <em class="ltx_emph ltx_font_italic">Gauss-Markov linear model</em> is a linear statistical model
-that satisfies all the conditions of a general linear model except
+<p class="ltx_p">A <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/gaussmarkovtheorem">Gauss-Markov linear model</a></em> is a linear <a class="nnexus_concept" href="http://planetmath.org/statisticalmodel">statistical model</a>
+that satisfies all the conditions of a <a class="nnexus_concept" href="http://planetmath.org/generallinearmodel">general linear model</a> except
 the normality of the error terms. Formally, if <math id="p1.m1" class="ltx_Math" alttext="\boldsymbol{Y}" display="inline"><mi>𝒀</mi></math> is
-an <math id="p1.m2" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math>-dimensional response variable vector, and
+an <math id="p1.m2" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math>-dimensional <a class="nnexus_concept" href="http://planetmath.org/datatypesinstatistics">response variable</a> vector, and
 <math id="p1.m3" class="ltx_Math" alttext="\boldsymbol{Z_{i}}=z_{i}(\boldsymbol{X})" display="inline"><mrow><msub><mi>𝒁</mi><mi>𝒊</mi></msub><mo>=</mo><mrow><msub><mi>z</mi><mi>i</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>𝑿</mi><mo stretchy="false">)</mo></mrow></mrow></mrow></math>, <math id="p1.m4" class="ltx_Math" alttext="i=1,\ldots,k" display="inline"><mrow><mi>i</mi><mo>=</mo><mrow><mn>1</mn><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><mi>k</mi></mrow></mrow></math> are the
 <math id="p1.m5" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math>-dimensional functions of the explanatory variable vector
 <math id="p1.m6" class="ltx_Math" alttext="\boldsymbol{X}" display="inline"><mi>𝑿</mi></math>, a Gauss-Markov linear model has the form:</p>
@@ -54,14 +54,14 @@ an <math id="p1.m2" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></ma
 <div id="p2" class="ltx_para">
 <p class="ltx_p">In other words, the observed responses <math id="p2.m1" class="ltx_Math" alttext="Y_{i}" display="inline"><msub><mi>Y</mi><mi>i</mi></msub></math>, <math id="p2.m2" class="ltx_Math" alttext="i=1,\ldots,m" display="inline"><mrow><mi>i</mi><mo>=</mo><mrow><mn>1</mn><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><mi>m</mi></mrow></mrow></math> are not
 assumed to be normally distributed, are not correlated with one
-another, and have a common variance
+another, and have a common <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">variance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Variance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/variance"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>
 <math id="p2.m3" class="ltx_Math" alttext="\operatorname{Var}[Y_{i}]=\sigma^{2}" display="inline"><mrow><mrow><mi>Var</mi><mo>⁡</mo><mrow><mo stretchy="false">[</mo><msub><mi>Y</mi><mi>i</mi></msub><mo stretchy="false">]</mo></mrow></mrow><mo>=</mo><msup><mi>σ</mi><mn>2</mn></msup></mrow></math>.</p>
 </div>
 <div id="p3" class="ltx_para">
 <p class="ltx_p"><span class="ltx_text ltx_font_bold">Gauss-Markov Theorem</span>. Suppose the response variable
 <math id="p3.m1" class="ltx_Math" alttext="\boldsymbol{Y}=(Y_{1},\ldots,Y_{m})" display="inline"><mrow><mi>𝒀</mi><mo>=</mo><mrow><mo stretchy="false">(</mo><msub><mi>Y</mi><mn>1</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>Y</mi><mi>m</mi></msub><mo stretchy="false">)</mo></mrow></mrow></math> and the explanatory variables
 <math id="p3.m2" class="ltx_Math" alttext="\boldsymbol{X}" display="inline"><mi>𝑿</mi></math> satisfy a Gauss-Markov linear model as described
-above. Consider any linear combination of the responses</p>
+above. Consider any <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">linear combination</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/LinearCombination.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/linearcombination"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of the responses</p>
 <table id="S0.EGx1" class="ltx_equationgroup ltx_eqn_eqnarray ltx_eqn_table">
 
 <tbody id="S0.E1"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -71,7 +71,7 @@ above. Consider any linear combination of the responses</p>
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(1)</span></td>
 </tr></tbody>
 </table>
-<p class="ltx_p">where <math id="p3.m3" class="ltx_Math" alttext="c_{i}\in\mathbb{R}" display="inline"><mrow><msub><mi>c</mi><mi>i</mi></msub><mo>∈</mo><mi>ℝ</mi></mrow></math>. If each <math id="p3.m4" class="ltx_Math" alttext="\mu_{i}" display="inline"><msub><mi>μ</mi><mi>i</mi></msub></math> is an estimator for response <math id="p3.m5" class="ltx_Math" alttext="Y_{i}" display="inline"><msub><mi>Y</mi><mi>i</mi></msub></math>, parameter <math id="p3.m6" class="ltx_Math" alttext="\theta" display="inline"><mi>θ</mi></math> of the form</p>
+<p class="ltx_p">where <math id="p3.m3" class="ltx_Math" alttext="c_{i}\in\mathbb{R}" display="inline"><mrow><msub><mi>c</mi><mi>i</mi></msub><mo>∈</mo><mi>ℝ</mi></mrow></math>. If each <math id="p3.m4" class="ltx_Math" alttext="\mu_{i}" display="inline"><msub><mi>μ</mi><mi>i</mi></msub></math> is an <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">estimator</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Estimator.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/estimator"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> for response <math id="p3.m5" class="ltx_Math" alttext="Y_{i}" display="inline"><msub><mi>Y</mi><mi>i</mi></msub></math>, <a class="nnexus_concept" href="http://planetmath.org/parametre">parameter</a> <math id="p3.m6" class="ltx_Math" alttext="\theta" display="inline"><mi>θ</mi></math> of the form</p>
 <table id="S0.EGx2" class="ltx_equationgroup ltx_eqn_eqnarray ltx_eqn_table">
 
 <tbody id="S0.E2"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -81,7 +81,7 @@ above. Consider any linear combination of the responses</p>
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(2)</span></td>
 </tr></tbody>
 </table>
-<p class="ltx_p">can be used as an estimator for <math id="p3.m7" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math>. Then, among all unbiased estimators for <math id="p3.m8" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> having form (2), the ordinary least square estimator (OLS)</p>
+<p class="ltx_p">can be used as an estimator for <math id="p3.m7" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math>. Then, among all <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">unbiased estimators</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/UnbiasedEstimator.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/bias"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> for <math id="p3.m8" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> having form (2), the ordinary least square estimator (OLS)</p>
 <table id="S0.EGx3" class="ltx_equationgroup ltx_eqn_eqnarray ltx_eqn_table">
 
 <tbody id="S0.E3"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -91,7 +91,7 @@ above. Consider any linear combination of the responses</p>
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(3)</span></td>
 </tr></tbody>
 </table>
-<p class="ltx_p">yields the smallest variance. In other words, the OLS estimator is the uniformly minimum variance unbiased estimator.</p>
+<p class="ltx_p">yields the smallest variance. In other words, the OLS estimator is the <a class="nnexus_concept" href="http://planetmath.org/meansquareerror">uniformly minimum variance unbiased</a> estimator.</p>
 </div>
 <div id="p4" class="ltx_para">
 <p class="ltx_p"><span class="ltx_text ltx_font_bold">Remark</span>. <math id="p4.m1" class="ltx_Math" alttext="\hat{\theta}" display="inline"><mover accent="true"><mi>θ</mi><mo stretchy="false">^</mo></mover></math> in equation (3) above is more
@@ -106,7 +106,7 @@ model.
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Gauss-Markov theorem</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">GaussMarkovTheorem</td>
 </tr>
 <tr class="ltx_tr">
@@ -135,7 +135,7 @@ model.
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Theorem</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/lemma">Theorem</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
