--- a/html/62J05-LinearPlexing.html
+++ b/html/62J05-LinearPlexing.html
@@ -19,13 +19,13 @@
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
 <p class="ltx_p">We have fixed <math id="p1.m1" class="ltx_Math" alttext="\alpha" display="inline"><mi>α</mi></math> as the maximum acceptable probability of commiting a
-type <math id="p1.m2" class="ltx_Math" alttext="I" display="inline"><mi>I</mi></math> error. But associated with each normalized test of significance is
+type <math id="p1.m2" class="ltx_Math" alttext="I" display="inline"><mi>I</mi></math> error. But associated with each normalized test of <a class="nnexus_concept" href="http://mathworld.wolfram.com/Significance.html">significance</a> is
 <math id="p1.m3" class="ltx_Math" alttext="\gamma" display="inline"><mi>γ</mi></math>, the probability of commiting a type <math id="p1.m4" class="ltx_Math" alttext="I" display="inline"><mi>I</mi></math> error.</p>
 </div>
 <div id="p2" class="ltx_para">
 <p class="ltx_p">Notice that as we make <math id="p2.m1" class="ltx_Math" alttext="\gamma" display="inline"><mi>γ</mi></math> smaller, the smaller the critical region
-becomes and thus the larger the value of the test statistic must be for the
-null hypothesis to be rejected.</p>
+becomes and thus the larger the value of the <a class="nnexus_concept" href="http://mathworld.wolfram.com/TestStatistic.html">test statistic</a> must be for the
+<a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">null hypothesis</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/NullHypothesis.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/hypothesistesting"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> to be rejected.</p>
 </div>
 <div id="p3" class="ltx_para">
 <p class="ltx_p">Find <math id="p3.m1" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math>, defined as the smallest <math id="p3.m2" class="ltx_Math" alttext="\gamma" display="inline"><mi>γ</mi></math> for which we can still reject
@@ -39,10 +39,10 @@ null hypothesis to be rejected.</p>
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Linear Plexing</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/linearplexing">Linear Plexing</a></td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">LinearPlexing</td>
 </tr>
 <tr class="ltx_tr">
@@ -71,7 +71,7 @@ null hypothesis to be rejected.</p>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l">Classification</th>
