--- a/html/62J10-CochransTheorem.html
+++ b/html/62J10-CochransTheorem.html
@@ -32,19 +32,19 @@
 <li id="I1.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">1.</span> 
 <div id="I1.i1.p1" class="ltx_para">
-<p class="ltx_p"><math id="I1.i1.p1.m1" class="ltx_Math" alttext="Q_{i}" display="inline"><msub><mi>Q</mi><mi>i</mi></msub></math> is a quadratic form</p>
+<p class="ltx_p"><math id="I1.i1.p1.m1" class="ltx_Math" alttext="Q_{i}" display="inline"><msub><mi>Q</mi><mi>i</mi></msub></math> is a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">quadratic form</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/QuadraticForm.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/quadraticform"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></p>
 </div>
 </li>
 <li id="I1.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">2.</span> 
 <div id="I1.i2.p1" class="ltx_para">
-<p class="ltx_p"><math id="I1.i2.p1.m1" class="ltx_Math" alttext="Q_{i}=\textbf{X}^{\operatorname{T}}\textbf{B}_{i}\textbf{X}" display="inline"><mrow><msub><mi>Q</mi><mi>i</mi></msub><mo>=</mo><mrow><msup><mtext>𝐗</mtext><mi mathvariant="normal">T</mi></msup><mo>⁢</mo><msub><mtext>𝐁</mtext><mi>i</mi></msub><mo>⁢</mo><mtext>𝐗</mtext></mrow></mrow></math>, where <math id="I1.i2.p1.m2" class="ltx_Math" alttext="\textbf{B}_{i}" display="inline"><msub><mtext>𝐁</mtext><mi>i</mi></msub></math> is a <math id="I1.i2.p1.m3" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math> by <math id="I1.i2.p1.m4" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math> square matrix</p>
+<p class="ltx_p"><math id="I1.i2.p1.m1" class="ltx_Math" alttext="Q_{i}=\textbf{X}^{\operatorname{T}}\textbf{B}_{i}\textbf{X}" display="inline"><mrow><msub><mi>Q</mi><mi>i</mi></msub><mo>=</mo><mrow><msup><mtext>𝐗</mtext><mi mathvariant="normal">T</mi></msup><mo>⁢</mo><msub><mtext>𝐁</mtext><mi>i</mi></msub><mo>⁢</mo><mtext>𝐗</mtext></mrow></mrow></math>, where <math id="I1.i2.p1.m2" class="ltx_Math" alttext="\textbf{B}_{i}" display="inline"><msub><mtext>𝐁</mtext><mi>i</mi></msub></math> is a <math id="I1.i2.p1.m3" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math> by <math id="I1.i2.p1.m4" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math> <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">square matrix</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/SquareMatrix.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/squarematrix"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></p>
 </div>
 </li>
 <li id="I1.i3" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">3.</span> 
 <div id="I1.i3.p1" class="ltx_para">
-<p class="ltx_p"><math id="I1.i3.p1.m1" class="ltx_Math" alttext="\textbf{B}_{i}" display="inline"><msub><mtext>𝐁</mtext><mi>i</mi></msub></math> is positive semidefinite
+<p class="ltx_p"><math id="I1.i3.p1.m1" class="ltx_Math" alttext="\textbf{B}_{i}" display="inline"><msub><mtext>𝐁</mtext><mi>i</mi></msub></math> is <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">positive semidefinite</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/positivesemidefinite1"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/positivesemidefinite"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>
 </p>
 </div>
 </li>
@@ -87,7 +87,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">This corollary is known as <em class="ltx_emph ltx_font_italic">Fisher’s theorem</em>.
+<p class="ltx_p">This <a class="nnexus_concept" href="http://planetmath.org/lemma">corollary</a> is known as <em class="ltx_emph ltx_font_italic">Fisher’s theorem</em>.
 </p>
 <table class="ltx_tabular ltx_align_right ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
@@ -96,7 +96,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Cochran’s theorem</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">CochransTheorem</td>
 </tr>
 <tr class="ltx_tr">
