--- a/html/62J10-MeanSquareError.html
+++ b/html/62J10-MeanSquareError.html
@@ -18,8 +18,8 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">The <em class="ltx_emph ltx_font_italic">mean square error</em> of an estimator <math id="p1.m1" class="ltx_Math" alttext="\hat{\theta}" display="inline"><mover accent="true"><mi>θ</mi><mo stretchy="false">^</mo></mover></math> of a
-parameter <math id="p1.m2" class="ltx_Math" alttext="\theta" display="inline"><mi>θ</mi></math> in a statistical model is defined as:</p>
+<p class="ltx_p">The <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/meansquareerror">mean square error</a></em> of an <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">estimator</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Estimator.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/estimator"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="p1.m1" class="ltx_Math" alttext="\hat{\theta}" display="inline"><mover accent="true"><mi>θ</mi><mo stretchy="false">^</mo></mover></math> of a
+<a class="nnexus_concept" href="http://planetmath.org/parametre">parameter</a> <math id="p1.m2" class="ltx_Math" alttext="\theta" display="inline"><mi>θ</mi></math> in a <a class="nnexus_concept" href="http://planetmath.org/statisticalmodel">statistical model</a> is defined as:</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -31,7 +31,7 @@ parameter <math id="p1.m2" class="ltx_Math" alttext="\theta" display="inline"><m
 </table>
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">From the definition of the variance
+<p class="ltx_p">From the <a class="nnexus_concept" href="http://planetmath.org/definition">definition</a> of the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">variance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Variance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/variance"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>
 <math id="p2.m1" class="ltx_Math" alttext="\operatorname{Var}[X]=\operatorname{E}[X^{2}]-\operatorname{E}[X]^{2}" display="inline"><mrow><mi>Var</mi><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow><mo>=</mo><mi mathvariant="normal">E</mi><mrow><mo stretchy="false">[</mo><msup><mi>X</mi><mn>2</mn></msup><mo stretchy="false">]</mo></mrow><mo>-</mo><mi mathvariant="normal">E</mi><msup><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow><mn>2</mn></msup></mrow></math>,
 we can express the mean square error in terms of the bias by
 expanding the right hand side above:</p>
@@ -46,7 +46,7 @@ expanding the right hand side above:</p>
 </table>
 </div>
 <div id="p3" class="ltx_para">
-<p class="ltx_p">If <math id="p3.m1" class="ltx_Math" alttext="\hat{\theta}" display="inline"><mover accent="true"><mi>θ</mi><mo stretchy="false">^</mo></mover></math> is an unbiased estimator, then its mean square
+<p class="ltx_p">If <math id="p3.m1" class="ltx_Math" alttext="\hat{\theta}" display="inline"><mover accent="true"><mi>θ</mi><mo stretchy="false">^</mo></mover></math> is an <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">unbiased estimator</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/UnbiasedEstimator.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/bias"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, then its mean square
 error is identical to its variance:
 <math id="p3.m2" class="ltx_Math" alttext="\operatorname{MSE}(\hat{\theta})=\operatorname{Var}[\hat{\theta}]" display="inline"><mrow><mrow><mi>MSE</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mover accent="true"><mi>θ</mi><mo stretchy="false">^</mo></mover><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mi>Var</mi><mo>⁡</mo><mrow><mo stretchy="false">[</mo><mover accent="true"><mi>θ</mi><mo stretchy="false">^</mo></mover><mo stretchy="false">]</mo></mrow></mrow></mrow></math>.
 An unbiased estimator such that <math id="p3.m3" class="ltx_Math" alttext="\operatorname{MSE}(\hat{\theta})" display="inline"><mrow><mi>MSE</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mover accent="true"><mi>θ</mi><mo stretchy="false">^</mo></mover><mo stretchy="false">)</mo></mrow></mrow></math>
@@ -54,12 +54,12 @@ is a minimum value among all unbiased estimators for <math id="p3.m4" class="ltx
 called a <em class="ltx_emph ltx_font_italic">minimum variance unbiased estimator</em>, abbreviated <em class="ltx_emph ltx_font_italic">MVUE</em>, or <em class="ltx_emph ltx_font_italic">uniformly minimum variance unbiased estimator</em>, abbreviated <em class="ltx_emph ltx_font_italic">UMVU</em> estimator.</p>
 </div>
 <div id="p4" class="ltx_para">
-<p class="ltx_p"><span class="ltx_text ltx_font_bold">Example</span>. Suppose <math id="p4.m1" class="ltx_Math" alttext="X_{1},X_{2},\ldots,X_{n}" display="inline"><mrow><msub><mi>X</mi><mn>1</mn></msub><mo>,</mo><msub><mi>X</mi><mn>2</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>X</mi><mi>n</mi></msub></mrow></math> are iid random
-variables (<math id="p4.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> independent measurements of the radius of a coin,
-etc…) from a normal distribution <math id="p4.m3" class="ltx_Math" alttext="N(\mu,\sigma^{2})" display="inline"><mrow><mi>N</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>μ</mi><mo>,</mo><msup><mi>σ</mi><mn>2</mn></msup><mo stretchy="false">)</mo></mrow></mrow></math> (for example,
+<p class="ltx_p"><span class="ltx_text ltx_font_bold">Example</span>. Suppose <math id="p4.m1" class="ltx_Math" alttext="X_{1},X_{2},\ldots,X_{n}" display="inline"><mrow><msub><mi>X</mi><mn>1</mn></msub><mo>,</mo><msub><mi>X</mi><mn>2</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>X</mi><mi>n</mi></msub></mrow></math> are iid <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">random
+variables</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/RandomVariable.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/randomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> (<math id="p4.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">independent</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/projectivebasis"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/independent"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> measurements of the radius of a coin,
+etc…) from a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">normal distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/NormalDistribution.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/normalrandomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="p4.m3" class="ltx_Math" alttext="N(\mu,\sigma^{2})" display="inline"><mrow><mi>N</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>μ</mi><mo>,</mo><msup><mi>σ</mi><mn>2</mn></msup><mo stretchy="false">)</mo></mrow></mrow></math> (for example,
 <math id="p4.m4" class="ltx_Math" alttext="\mu" display="inline"><mi>μ</mi></math> would be the true radius of the coin, and <math id="p4.m5" class="ltx_Math" alttext="\sigma^{2}" display="inline"><msup><mi>σ</mi><mn>2</mn></msup></math> would be
-the error component of the measurements). Suppose <math id="p4.m6" class="ltx_Math" alttext="\overline{X}" display="inline"><mover accent="true"><mi>X</mi><mo>¯</mo></mover></math>
-(<math id="p4.m7" class="ltx_Math" alttext="=\overline{X}_{n}" display="inline"><mrow><mi></mi><mo>=</mo><msub><mover accent="true"><mi>X</mi><mo>¯</mo></mover><mi>n</mi></msub></mrow></math>) is the sample mean. Then <math id="p4.m8" class="ltx_Math" alttext="\overline{X}" display="inline"><mover accent="true"><mi>X</mi><mo>¯</mo></mover></math> is an
+the error <a class="nnexus_concept" href="http://planetmath.org/connectedgraph">component</a> of the measurements). Suppose <math id="p4.m6" class="ltx_Math" alttext="\overline{X}" display="inline"><mover accent="true"><mi>X</mi><mo>¯</mo></mover></math>
+(<math id="p4.m7" class="ltx_Math" alttext="=\overline{X}_{n}" display="inline"><mrow><mi></mi><mo>=</mo><msub><mover accent="true"><mi>X</mi><mo>¯</mo></mover><mi>n</mi></msub></mrow></math>) is the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">sample mean</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/SampleMean.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/statistic"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>. Then <math id="p4.m8" class="ltx_Math" alttext="\overline{X}" display="inline"><mover accent="true"><mi>X</mi><mo>¯</mo></mover></math> is an
 unbiased estimator, so that</p>
 <table id="S0.Ex3" class="ltx_equation ltx_eqn_table">
 
@@ -82,7 +82,7 @@ unbiased estimator, so that</p>
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">mean square error</td>
 </tr>
 <tr class="ltx_tr">
-<td class="ltx_td ltx_align_left ltx_border_l">Canonical name</td>
+<td class="ltx_td ltx_align_left ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</td>
 <td class="ltx_td ltx_align_left ltx_border_r">MeanSquareError</td>
 </tr>
 <tr class="ltx_tr">
@@ -114,7 +114,7 @@ unbiased estimator, so that</p>
 <td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
 </tr>
 <tr class="ltx_tr">
-<td class="ltx_td ltx_align_left ltx_border_l">Classification</td>
+<td class="ltx_td ltx_align_left ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></td>
 <td class="ltx_td ltx_align_left ltx_border_r">msc 62J10</td>
 </tr>
 <tr class="ltx_tr">
