--- a/html/62J12-Overdispersion.html
+++ b/html/62J12-Overdispersion.html
@@ -20,15 +20,15 @@
 <br class="ltx_break">
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">When applying the generalized linear model or GLM to the real world, a phenomenon called <em class="ltx_emph ltx_font_italic">overdispersion</em> occurs when the observed variance of the data is larger than the predicted variance. This is particularly apparent in the case of a Poisson regression model, where</p>
+<p class="ltx_p">When applying the <a class="nnexus_concept" href="http://planetmath.org/generalizedlinearmodel">generalized linear model</a> or GLM to the real world, a phenomenon called <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/overdispersion">overdispersion</a></em> occurs when the observed <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">variance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Variance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/variance"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of the data is larger than the predicted variance. This is particularly apparent in the case of a Poisson regression model, where</p>
 <p class="ltx_p ltx_align_center">predicted variance = predicted mean,</p>
-<p class="ltx_p">or the binary logistic regression model, where</p>
+<p class="ltx_p">or the binary <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">logistic regression</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/LogisticRegression.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/logisticregression"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> model, where</p>
 <p class="ltx_p ltx_align_center">predicted variance = predicted mean(1- predicted mean).
 </p>
 <p class="ltx_p">A parameter, called the <em class="ltx_emph ltx_font_italic">dispersion parameter</em>, <math id="p2.m1" class="ltx_Math" alttext="\phi" display="inline"><mi>ϕ</mi></math>, is introducted to the model to lower this overdispersion effect.</p>
 </div>
 <div id="p3" class="ltx_para">
-<p class="ltx_p">The GLM, with the inclusion of this dispersion parameter, has the following density function:</p>
+<p class="ltx_p">The GLM, with the inclusion of this dispersion parameter, has the following <a class="nnexus_concept" href="http://planetmath.org/densityfunction">density function</a>:</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -40,7 +40,7 @@ i})}{a(\phi)}+c(y,\phi)]" display="block"><mrow><msub><mi>f</mi><msub><mi>Y</mi>
 </table>
 </div>
 <div id="p4" class="ltx_para">
-<p class="ltx_p">Dispersion parameters for some of the well known distributions from the exponential family are listed in the following table:</p>
+<p class="ltx_p">Dispersion parameters for some of the well known <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">distributions</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/distributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/probabilitydistributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> from the <a class="nnexus_concept" href="http://planetmath.org/exponentialfamily">exponential family</a> are listed in the following table:</p>
 </div>
 <div id="p5" class="ltx_para ltx_centering">
 <table class="ltx_tabular ltx_guessed_headers ltx_align_middle">
