--- a/html/62N99-HazardFunction.html
+++ b/html/62N99-HazardFunction.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">Let <math id="p1.m1" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> be a random variable with probability density function <math id="p1.m2" class="ltx_Math" alttext="f_{Y}(y)" display="inline"><mrow><msub><mi>f</mi><mi>Y</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow></math>. Then the <em class="ltx_emph ltx_font_italic">hazard function</em> <math id="p1.m3" class="ltx_Math" alttext="h(y)" display="inline"><mrow><mi>h</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow></math> is defined to be:</p>
+<p class="ltx_p">Let <math id="p1.m1" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> be a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">random variable</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/RandomVariable.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/randomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> with <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">probability density function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ProbabilityDensityFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/probabilitydistributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="p1.m2" class="ltx_Math" alttext="f_{Y}(y)" display="inline"><mrow><msub><mi>f</mi><mi>Y</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow></math>. Then the <em class="ltx_emph ltx_font_italic"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">hazard function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/HazardFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/hazardfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></em> <math id="p1.m3" class="ltx_Math" alttext="h(y)" display="inline"><mrow><mi>h</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow></math> is defined to be:</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -27,10 +27,10 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">where <math id="p1.m4" class="ltx_Math" alttext="S(y)" display="inline"><mrow><mi>S</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow></math> is the survivor function and <math id="p1.m5" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> is the survival time.</p>
+<p class="ltx_p">where <math id="p1.m4" class="ltx_Math" alttext="S(y)" display="inline"><mrow><mi>S</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow></math> is the <a class="nnexus_concept" href="http://planetmath.org/survivorfunction">survivor function</a> and <math id="p1.m5" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> is the survival time.</p>
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">The hazard function is the rate of probability of death (non survival) is changing at time <math id="p2.m1" class="ltx_Math" alttext="Y=y" display="inline"><mrow><mi>Y</mi><mo>=</mo><mi>y</mi></mrow></math>, given survival up to time <math id="p2.m2" class="ltx_Math" alttext="y" display="inline"><mi>y</mi></math>:</p>
+<p class="ltx_p">The hazard function is the rate of <a class="nnexus_concept" href="http://mathworld.wolfram.com/Probability.html">probability</a> of death (non survival) is changing at time <math id="p2.m1" class="ltx_Math" alttext="Y=y" display="inline"><mrow><mi>Y</mi><mo>=</mo><mi>y</mi></mrow></math>, given survival up to time <math id="p2.m2" class="ltx_Math" alttext="y" display="inline"><mi>y</mi></math>:</p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -64,19 +64,19 @@ The hazard functions for the three most widely used probability density function
 <li id="I1.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I1.i1.p1" class="ltx_para">
-<p class="ltx_p">The exponential distribution, with <math id="I1.i1.p1.m1" class="ltx_Math" alttext="h(y)=\gamma" display="inline"><mrow><mrow><mi>h</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mi>γ</mi></mrow></math>.</p>
+<p class="ltx_p">The <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">exponential distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ExponentialDistribution.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/exponentialrandomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, with <math id="I1.i1.p1.m1" class="ltx_Math" alttext="h(y)=\gamma" display="inline"><mrow><mrow><mi>h</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mi>γ</mi></mrow></math>.</p>
 </div>
 </li>
 <li id="I1.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I1.i2.p1" class="ltx_para">
-<p class="ltx_p">The Weibull distribution, with <math id="I1.i2.p1.m1" class="ltx_Math" alttext="h(y)=\gamma y^{\gamma-1}" display="inline"><mrow><mrow><mi>h</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mi>γ</mi><mo>⁢</mo><msup><mi>y</mi><mrow><mi>γ</mi><mo>-</mo><mn>1</mn></mrow></msup></mrow></mrow></math> using the standard Weibull distribution.</p>
+<p class="ltx_p">The <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Weibull distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/WeibullDistribution.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/weibullrandomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, with <math id="I1.i2.p1.m1" class="ltx_Math" alttext="h(y)=\gamma y^{\gamma-1}" display="inline"><mrow><mrow><mi>h</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mi>γ</mi><mo>⁢</mo><msup><mi>y</mi><mrow><mi>γ</mi><mo>-</mo><mn>1</mn></mrow></msup></mrow></mrow></math> using the standard Weibull distribution.</p>
 </div>
 </li>
 <li id="I1.i3" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I1.i3.p1" class="ltx_para">
-<p class="ltx_p">The extreme-value distribution, with <math id="I1.i3.p1.m1" class="ltx_Math" alttext="h(y)=\frac{1}{\beta}\operatorname{exp}(\frac{y-\alpha}{\beta})" display="inline"><mrow><mrow><mi>h</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mfrac><mn>1</mn><mi>β</mi></mfrac><mo>⁢</mo><mrow><mi>exp</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mfrac><mrow><mi>y</mi><mo>-</mo><mi>α</mi></mrow><mi>β</mi></mfrac><mo stretchy="false">)</mo></mrow></mrow></mrow></mrow></math>.</p>
+<p class="ltx_p">The extreme-value <a class="nnexus_concept" href="http://planetmath.org/distributionfunction">distribution</a>, with <math id="I1.i3.p1.m1" class="ltx_Math" alttext="h(y)=\frac{1}{\beta}\operatorname{exp}(\frac{y-\alpha}{\beta})" display="inline"><mrow><mrow><mi>h</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mfrac><mn>1</mn><mi>β</mi></mfrac><mo>⁢</mo><mrow><mi>exp</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mfrac><mrow><mi>y</mi><mo>-</mo><mi>α</mi></mrow><mi>β</mi></mfrac><mo stretchy="false">)</mo></mrow></mrow></mrow></mrow></math>.</p>
 </div>
 </li>
 </ul>
@@ -119,7 +119,7 @@ The hazard functions for the three most widely used probability density function
 <td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></th>
 <td class="ltx_td ltx_align_left ltx_border_r">msc 62N99</td>
 </tr>
 <tr class="ltx_tr">
