--- a/html/62N99-SurvivorFunction.html
+++ b/html/62N99-SurvivorFunction.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">Let <math id="p1.m1" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> be a random variable with cumulative probability distribution function <math id="p1.m2" class="ltx_Math" alttext="F_{Y}(y)" display="inline"><mrow><msub><mi>F</mi><mi>Y</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow></math>. Then the <em class="ltx_emph ltx_font_italic">survivor function</em> <math id="p1.m3" class="ltx_Math" alttext="S(y)" display="inline"><mrow><mi>S</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow></math> is defined to be:</p>
+<p class="ltx_p">Let <math id="p1.m1" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> be a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">random variable</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/RandomVariable.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/randomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> with cumulative <a class="nnexus_concept" href="http://planetmath.org/probabilitydistributionfunction">probability distribution function</a> <math id="p1.m2" class="ltx_Math" alttext="F_{Y}(y)" display="inline"><mrow><msub><mi>F</mi><mi>Y</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow></math>. Then the <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/survivorfunction">survivor function</a></em> <math id="p1.m3" class="ltx_Math" alttext="S(y)" display="inline"><mrow><mi>S</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow></math> is defined to be:</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -30,21 +30,21 @@
 <p class="ltx_p">The random variable <math id="p1.m4" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> is often called the <em class="ltx_emph ltx_font_italic">survival time</em>.</p>
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">The survivor function is the probability of survival beyond time <math id="p2.m1" class="ltx_Math" alttext="Y=y" display="inline"><mrow><mi>Y</mi><mo>=</mo><mi>y</mi></mrow></math>.</p>
+<p class="ltx_p">The survivor function is the <a class="nnexus_concept" href="http://mathworld.wolfram.com/Probability.html">probability</a> of survival beyond time <math id="p2.m1" class="ltx_Math" alttext="Y=y" display="inline"><mrow><mi>Y</mi><mo>=</mo><mi>y</mi></mrow></math>.</p>
 </div>
 <div id="p3" class="ltx_para">
-<p class="ltx_p"><span class="ltx_text ltx_font_bold">Examples.</span> The three most commonly used distribution functions for survival time are:</p>
+<p class="ltx_p"><span class="ltx_text ltx_font_bold">Examples.</span> The three most commonly used <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">distribution functions</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/DistributionFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/distributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> for survival time are:</p>
 <ol id="I1" class="ltx_enumerate">
 <li id="I1.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">1.</span> 
 <div id="I1.i1.p1" class="ltx_para">
-<p class="ltx_p">exponential distribution (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/ExponentialRandomVariable</span>), with <math id="I1.i1.p1.m1" class="ltx_Math" alttext="S(y)=\exp(-\gamma y)." display="inline"><mrow><mrow><mrow><mi>S</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mi>exp</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mrow><mo>-</mo><mrow><mi>γ</mi><mo>⁢</mo><mi>y</mi></mrow></mrow><mo stretchy="false">)</mo></mrow></mrow></mrow><mo>.</mo></mrow></math></p>
+<p class="ltx_p"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">exponential distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ExponentialDistribution.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/exponentialrandomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/ExponentialRandomVariable</span>), with <math id="I1.i1.p1.m1" class="ltx_Math" alttext="S(y)=\exp(-\gamma y)." display="inline"><mrow><mrow><mrow><mi>S</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mi>exp</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mrow><mo>-</mo><mrow><mi>γ</mi><mo>⁢</mo><mi>y</mi></mrow></mrow><mo stretchy="false">)</mo></mrow></mrow></mrow><mo>.</mo></mrow></math></p>
 </div>
 </li>
 <li id="I1.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">2.</span> 
 <div id="I1.i2.p1" class="ltx_para">
-<p class="ltx_p">Weibull distribution, with <math id="I1.i2.p1.m1" class="ltx_Math" alttext="S(y)=\exp(-y^{\gamma})" display="inline"><mrow><mrow><mi>S</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mi>exp</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mrow><mo>-</mo><msup><mi>y</mi><mi>γ</mi></msup></mrow><mo stretchy="false">)</mo></mrow></mrow></mrow></math> using the standard Weibull distribution.</p>
+<p class="ltx_p"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Weibull distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/WeibullDistribution.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/weibullrandomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, with <math id="I1.i2.p1.m1" class="ltx_Math" alttext="S(y)=\exp(-y^{\gamma})" display="inline"><mrow><mrow><mi>S</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mrow><mi>exp</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mrow><mo>-</mo><msup><mi>y</mi><mi>γ</mi></msup></mrow><mo stretchy="false">)</mo></mrow></mrow></mrow></math> using the standard Weibull distribution.</p>
 </div>
 </li>
 <li id="I1.i3" class="ltx_item" style="list-style-type:none;">
@@ -61,7 +61,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">survivor function</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">SurvivorFunction</td>
 </tr>
 <tr class="ltx_tr">
@@ -90,10 +90,10 @@
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></th>
 <td class="ltx_td ltx_align_left ltx_border_r">msc 62N99</td>
 </tr>
 <tr class="ltx_tr">
