--- a/html/62Q05-TableOfCriticalValuesOfChisquaredDistributions.html
+++ b/html/62Q05-TableOfCriticalValuesOfChisquaredDistributions.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">Below is a table of the critical values <math id="p1.m1" class="ltx_Math" alttext="c" display="inline"><mi>c</mi></math> of the chi-squared distribution (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/ChiSquaredRandomVariable</span>) corresponding to various degrees <math id="p1.m2" class="ltx_Math" alttext="d" display="inline"><mi>d</mi></math> of freedom (first column) and p-values <math id="p1.m3" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math> (first row in red).</p>
+<p class="ltx_p">Below is a table of the critical values <math id="p1.m1" class="ltx_Math" alttext="c" display="inline"><mi>c</mi></math> of the <a class="nnexus_concept" href="http://mathworld.wolfram.com/Chi-SquaredDistribution.html">chi-squared distribution</a> (<span class="ltx_text ltx_font_typewriter">http://planetmath.org/ChiSquaredRandomVariable</span>) corresponding to various degrees <math id="p1.m2" class="ltx_Math" alttext="d" display="inline"><mi>d</mi></math> of freedom (first column) and <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">p-values</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/P-Value.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/hypothesistesting"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="p1.m3" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math> (first row in red).</p>
 </div>
 <figure id="tab1" class="ltx_table">
 <table class="ltx_tabular">
@@ -532,13 +532,13 @@
 
 <br class="ltx_break"></p>
 <img src="chisquared0" id="p2.g1" class="ltx_graphics ltx_centering" alt="">
-<p class="ltx_p">where the curve is the probability density function of the chi-squared distribution and <math id="p2.m1" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math> is the darkened area.
+<p class="ltx_p">where the curve is the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">probability density function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ProbabilityDensityFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/probabilitydistributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of the chi-squared distribution and <math id="p2.m1" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math> is the darkened area.
 </p>
 <table class="ltx_tabular ltx_align_right ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">table of critical values of chi-squared distributions</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/tableofcriticalvaluesofchisquareddistributions">table of critical values of chi-squared distributions</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
