--- a/html/62D05-SystematicSampling.html
+++ b/html/62D05-SystematicSampling.html
@@ -18,8 +18,8 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">Systematic sampling is a method of sampling <math id="p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> items from a
-population of <math id="p1.m2" class="ltx_Math" alttext="N" display="inline"><mi>N</mi></math> items with the following sequence of procedures:</p>
+<p class="ltx_p"><a class="nnexus_concept" href="http://planetmath.org/systematicsampling">Systematic sampling</a> is a method of sampling <math id="p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> items from a
+<a class="nnexus_concept" href="http://mathworld.wolfram.com/Population.html">population</a> of <math id="p1.m2" class="ltx_Math" alttext="N" display="inline"><mi>N</mi></math> items with the following <a class="nnexus_concept" href="http://mathworld.wolfram.com/Sequence.html">sequence</a> of procedures:</p>
 <ol id="I1" class="ltx_enumerate">
 <li id="I1.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">1.</span> 
@@ -31,8 +31,8 @@ population of <math id="p1.m2" class="ltx_Math" alttext="N" display="inline"><mi
 <span class="ltx_tag ltx_tag_enumerate">2.</span> 
 <div id="I1.i2.p1" class="ltx_para">
 <p class="ltx_p">randomly select one item from the first <math id="I1.i2.p1.m1" class="ltx_Math" alttext="k" display="inline"><mi>k</mi></math> items in the
-population, where <math id="I1.i2.p1.m2" class="ltx_Math" alttext="k=\lceil N/n\rceil" display="inline"><mrow><mi>k</mi><mo>=</mo><mrow><mo stretchy="false">⌈</mo><mrow><mi>N</mi><mo>/</mo><mi>n</mi></mrow><mo stretchy="false">⌉</mo></mrow></mrow></math>, the smallest integer
-greater than or equal to <math id="I1.i2.p1.m3" class="ltx_Math" alttext="N/n" display="inline"><mrow><mi>N</mi><mo>/</mo><mi>n</mi></mrow></math>,</p>
+population, where <math id="I1.i2.p1.m2" class="ltx_Math" alttext="k=\lceil N/n\rceil" display="inline"><mrow><mi>k</mi><mo>=</mo><mrow><mo stretchy="false">⌈</mo><mrow><mi>N</mi><mo>/</mo><mi>n</mi></mrow><mo stretchy="false">⌉</mo></mrow></mrow></math>, the <a class="nnexus_concept" href="http://planetmath.org/ceiling">smallest integer
+greater than or equal to</a> <math id="I1.i2.p1.m3" class="ltx_Math" alttext="N/n" display="inline"><mrow><mi>N</mi><mo>/</mo><mi>n</mi></mrow></math>,</p>
 </div>
 </li>
 <li id="I1.i3" class="ltx_item" style="list-style-type:none;">
@@ -62,7 +62,7 @@ sample.
 <div id="I2.i1.p1" class="ltx_para">
 <p class="ltx_p">If <math id="I2.i1.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> divides <math id="I2.i1.p1.m2" class="ltx_Math" alttext="N" display="inline"><mi>N</mi></math>, then systematic sampling can be viewed as
 grouping the population into <math id="I2.i1.p1.m3" class="ltx_Math" alttext="k=N/n" display="inline"><mrow><mi>k</mi><mo>=</mo><mrow><mi>N</mi><mo>/</mo><mi>n</mi></mrow></mrow></math> strata, and picking one sample
-from each stratum. The difference between systematic sampling and
+from each <a class="nnexus_concept" href="http://planetmath.org/stratifiedsampling">stratum</a>. The <a class="nnexus_concept" href="http://planetmath.org/difference">difference</a> between systematic sampling and
 stratified sampling is that in systematic sampling, only the first
 sample is picked randomly, all other samples are picked based on the
 position of the first pick.</p>
@@ -72,12 +72,12 @@ position of the first pick.</p>
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I2.i2.p1" class="ltx_para">
 <p class="ltx_p">Again, if <math id="I2.i2.p1.m1" class="ltx_Math" alttext="n\mid N" display="inline"><mrow><mi>n</mi><mo>∣</mo><mi>N</mi></mrow></math>, one can view systematic sampling as a
-one-stage cluster sampling, where a primary sampling unit is defined
+<a class="nnexus_concept" href="http://planetmath.org/clustersampling">one-stage cluster sampling</a>, where a <a class="nnexus_concept" href="http://mathworld.wolfram.com/Primary.html">primary</a> sampling unit is defined
 as the set of units <math id="I2.i2.p1.m2" class="ltx_Math" alttext="x_{i},x_{i+k},\ldots,x_{i+(n-1)k}" display="inline"><mrow><msub><mi>x</mi><mi>i</mi></msub><mo>,</mo><msub><mi>x</mi><mrow><mi>i</mi><mo>+</mo><mi>k</mi></mrow></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>x</mi><mrow><mi>i</mi><mo>+</mo><mrow><mrow><mo stretchy="false">(</mo><mrow><mi>n</mi><mo>-</mo><mn>1</mn></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mi>k</mi></mrow></mrow></msub></mrow></math> in the
 population, where <math id="I2.i2.p1.m3" class="ltx_Math" alttext="k=N/n" display="inline"><mrow><mi>k</mi><mo>=</mo><mrow><mi>N</mi><mo>/</mo><mi>n</mi></mrow></mrow></math> and <math id="I2.i2.p1.m4" class="ltx_Math" alttext="1\leq i\leq k" display="inline"><mrow><mn>1</mn><mo>≤</mo><mi>i</mi><mo>≤</mo><mi>k</mi></mrow></math>. In this way, there
-are <math id="I2.i2.p1.m5" class="ltx_Math" alttext="k" display="inline"><mi>k</mi></math> primary sampling units. A simple random sample of one unit
+are <math id="I2.i2.p1.m5" class="ltx_Math" alttext="k" display="inline"><mi>k</mi></math> primary sampling units. A <a class="nnexus_concept" href="http://planetmath.org/simplerandomsample">simple random sample</a> of one unit
 can then be drawn from these <math id="I2.i2.p1.m6" class="ltx_Math" alttext="k" display="inline"><mi>k</mi></math> units. All of the items within the
-selected primary sample will then be the complete sample drawn by
+selected primary sample will then be the <a class="nnexus_concept" href="http://planetmath.org/ordersinanumberfield">complete</a> sample drawn by
 systematic sampling.</p>
 </div>
 </li>
