--- a/html/62E15-ExponentialRandomVariable.html
+++ b/html/62E15-ExponentialRandomVariable.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p"><math id="p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is a <em class="ltx_emph ltx_font_italic">exponential random variable</em> with parameter <math id="p1.m2" class="ltx_Math" alttext="\lambda&gt;0" display="inline"><mrow><mi>λ</mi><mo>&gt;</mo><mn>0</mn></mrow></math> if its probability density function is given for <math id="p1.m3" class="ltx_Math" alttext="x&gt;0" display="inline"><mrow><mi>x</mi><mo>&gt;</mo><mn>0</mn></mrow></math> by</p>
+<p class="ltx_p"><math id="p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is a <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/exponentialrandomvariable">exponential random variable</a></em> with <a class="nnexus_concept" href="http://planetmath.org/parametre">parameter</a> <math id="p1.m2" class="ltx_Math" alttext="\lambda&gt;0" display="inline"><mrow><mi>λ</mi><mo>&gt;</mo><mn>0</mn></mrow></math> if its <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">probability density function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ProbabilityDensityFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/probabilitydistributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> is given for <math id="p1.m3" class="ltx_Math" alttext="x&gt;0" display="inline"><mrow><mi>x</mi><mo>&gt;</mo><mn>0</mn></mrow></math> by</p>
 </div>
 <div id="p2" class="ltx_para">
 <table id="S0.EGx1" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
@@ -45,13 +45,13 @@
 <li id="I1.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">2.</span> 
 <div id="I1.i2.p1" class="ltx_para">
-<p class="ltx_p">The expected value of <math id="I1.i2.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is given by <math id="I1.i2.p1.m2" class="ltx_Math" alttext="E[X]=\frac{1}{\lambda}" display="inline"><mrow><mrow><mi>E</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow><mo>=</mo><mfrac><mn>1</mn><mi>λ</mi></mfrac></mrow></math></p>
+<p class="ltx_p">The <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">expected value</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ExpectedValue.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/expectedvalue"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of <math id="I1.i2.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is given by <math id="I1.i2.p1.m2" class="ltx_Math" alttext="E[X]=\frac{1}{\lambda}" display="inline"><mrow><mrow><mi>E</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow><mo>=</mo><mfrac><mn>1</mn><mi>λ</mi></mfrac></mrow></math></p>
 </div>
 </li>
 <li id="I1.i3" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">3.</span> 
 <div id="I1.i3.p1" class="ltx_para">
-<p class="ltx_p">The variance of <math id="I1.i3.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is given by <math id="I1.i3.p1.m2" class="ltx_Math" alttext="Var[X]=\frac{1}{\lambda^{2}}" display="inline"><mrow><mrow><mi>V</mi><mo>⁢</mo><mi>a</mi><mo>⁢</mo><mi>r</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow><mo>=</mo><mfrac><mn>1</mn><msup><mi>λ</mi><mn>2</mn></msup></mfrac></mrow></math></p>
+<p class="ltx_p">The <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">variance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Variance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/variance"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of <math id="I1.i3.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is given by <math id="I1.i3.p1.m2" class="ltx_Math" alttext="Var[X]=\frac{1}{\lambda^{2}}" display="inline"><mrow><mrow><mi>V</mi><mo>⁢</mo><mi>a</mi><mo>⁢</mo><mi>r</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow><mo>=</mo><mfrac><mn>1</mn><msup><mi>λ</mi><mn>2</mn></msup></mfrac></mrow></math></p>
 </div>
 </li>
 <li id="I1.i4" class="ltx_item" style="list-style-type:none;">
@@ -63,7 +63,7 @@
 <li id="I1.i5" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">5.</span> 
 <div id="I1.i5.p1" class="ltx_para">
-<p class="ltx_p">It is interesting to note that <math id="I1.i5.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is a gamma random variable with an <math id="I1.i5.p1.m2" class="ltx_Math" alttext="\alpha" display="inline"><mi>α</mi></math> parameter of 1.</p>
+<p class="ltx_p">It is interesting to note that <math id="I1.i5.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is a <a class="nnexus_concept" href="http://planetmath.org/gammarandomvariable">gamma random variable</a> with an <math id="I1.i5.p1.m2" class="ltx_Math" alttext="\alpha" display="inline"><mi>α</mi></math> parameter of 1.</p>
 </div>
 </li>
 </ol>
@@ -74,7 +74,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">exponential random variable</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">ExponentialRandomVariable</td>
 </tr>
 <tr class="ltx_tr">
@@ -103,10 +103,10 @@
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></th>
 <td class="ltx_td ltx_align_left ltx_border_r">msc 62E15</td>
 </tr>
 <tr class="ltx_tr">
@@ -123,7 +123,7 @@
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l">Synonym</th>
-<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r">exponential distribution</td>
+<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ExponentialDistribution.html">exponential distribution</a></td>
 </tr>
 </tbody>
 </table>
