--- a/html/62E15-HypergeometricRandomVariable.html
+++ b/html/62E15-HypergeometricRandomVariable.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p"><math id="p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is a <span class="ltx_text ltx_font_bold">hypergeometric random variable</span> with parameters <math id="p1.m2" class="ltx_Math" alttext="M,K,n" display="inline"><mrow><mi>M</mi><mo>,</mo><mi>K</mi><mo>,</mo><mi>n</mi></mrow></math> if
+<p class="ltx_p"><math id="p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is a <span class="ltx_text ltx_font_bold"><a class="nnexus_concept" href="http://planetmath.org/hypergeometricrandomvariable">hypergeometric random variable</a></span> with <a class="nnexus_concept" href="http://planetmath.org/parametre">parameters</a> <math id="p1.m2" class="ltx_Math" alttext="M,K,n" display="inline"><mrow><mi>M</mi><mo>,</mo><mi>K</mi><mo>,</mo><mi>n</mi></mrow></math> if
 <br class="ltx_break"></p>
 </div>
 <div id="p2" class="ltx_para">
@@ -68,19 +68,19 @@
 <li id="I2.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">1.</span> 
 <div id="I2.i1.p1" class="ltx_para">
-<p class="ltx_p"><math id="I2.i1.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> represents the number of “special” items (from the <math id="I2.i1.p1.m2" class="ltx_Math" alttext="K" display="inline"><mi>K</mi></math> special items) present on a sample of  <math id="I2.i1.p1.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> from a population with <math id="I2.i1.p1.m4" class="ltx_Math" alttext="M" display="inline"><mi>M</mi></math> items.</p>
+<p class="ltx_p"><math id="I2.i1.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> represents the number of “special” items (from the <math id="I2.i1.p1.m2" class="ltx_Math" alttext="K" display="inline"><mi>K</mi></math> special items) present on a sample of  <math id="I2.i1.p1.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> from a <a class="nnexus_concept" href="http://mathworld.wolfram.com/Population.html">population</a> with <math id="I2.i1.p1.m4" class="ltx_Math" alttext="M" display="inline"><mi>M</mi></math> items.</p>
 </div>
 </li>
 <li id="I2.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">2.</span> 
 <div id="I2.i2.p1" class="ltx_para">
-<p class="ltx_p">The expected value of <math id="I2.i2.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is noted as <math id="I2.i2.p1.m2" class="ltx_Math" alttext="E[X]=n\frac{K}{M}" display="inline"><mrow><mrow><mi>E</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow><mo>=</mo><mrow><mi>n</mi><mo>⁢</mo><mfrac><mi>K</mi><mi>M</mi></mfrac></mrow></mrow></math></p>
+<p class="ltx_p">The <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">expected value</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ExpectedValue.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/expectedvalue"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of <math id="I2.i2.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is noted as <math id="I2.i2.p1.m2" class="ltx_Math" alttext="E[X]=n\frac{K}{M}" display="inline"><mrow><mrow><mi>E</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow><mo>=</mo><mrow><mi>n</mi><mo>⁢</mo><mfrac><mi>K</mi><mi>M</mi></mfrac></mrow></mrow></math></p>
 </div>
 </li>
 <li id="I2.i3" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">3.</span> 
 <div id="I2.i3.p1" class="ltx_para">
-<p class="ltx_p">The variance of <math id="I2.i3.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is noted as <math id="I2.i3.p1.m2" class="ltx_Math" alttext="Var[X]=n\frac{K}{M}\frac{M-K}{M}\frac{M-n}{M-1}" display="inline"><mrow><mrow><mi>V</mi><mo>⁢</mo><mi>a</mi><mo>⁢</mo><mi>r</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow><mo>=</mo><mrow><mi>n</mi><mo>⁢</mo><mfrac><mi>K</mi><mi>M</mi></mfrac><mo>⁢</mo><mfrac><mrow><mi>M</mi><mo>-</mo><mi>K</mi></mrow><mi>M</mi></mfrac><mo>⁢</mo><mfrac><mrow><mi>M</mi><mo>-</mo><mi>n</mi></mrow><mrow><mi>M</mi><mo>-</mo><mn>1</mn></mrow></mfrac></mrow></mrow></math></p>
+<p class="ltx_p">The <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">variance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Variance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/variance"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of <math id="I2.i3.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is noted as <math id="I2.i3.p1.m2" class="ltx_Math" alttext="Var[X]=n\frac{K}{M}\frac{M-K}{M}\frac{M-n}{M-1}" display="inline"><mrow><mrow><mi>V</mi><mo>⁢</mo><mi>a</mi><mo>⁢</mo><mi>r</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow><mo>=</mo><mrow><mi>n</mi><mo>⁢</mo><mfrac><mi>K</mi><mi>M</mi></mfrac><mo>⁢</mo><mfrac><mrow><mi>M</mi><mo>-</mo><mi>K</mi></mrow><mi>M</mi></mfrac><mo>⁢</mo><mfrac><mrow><mi>M</mi><mo>-</mo><mi>n</mi></mrow><mrow><mi>M</mi><mo>-</mo><mn>1</mn></mrow></mfrac></mrow></mrow></math></p>
 </div>
 </li>
 </ol>
@@ -89,8 +89,8 @@
 <p class="ltx_p">Approximation techniques:</p>
 </div>
 <div id="p10" class="ltx_para">
-<p class="ltx_p">If <math id="p10.m1" class="ltx_Math" alttext="{K\choose 2}&lt;&lt;n,M-K+1-n" display="inline"><mrow><mrow><mo>(</mo><mfrac linethickness="0pt"><mi>K</mi><mn>2</mn></mfrac><mo>)</mo></mrow><mo>≪</mo><mrow><mi>n</mi><mo>,</mo><mrow><mrow><mrow><mi>M</mi><mo>-</mo><mi>K</mi></mrow><mo>+</mo><mn>1</mn></mrow><mo>-</mo><mi>n</mi></mrow></mrow></mrow></math> then <math id="p10.m2" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> can be approximated as a <span class="ltx_text ltx_font_bold">binomial random variable</span> with parameters <math id="p10.m3" class="ltx_Math" alttext="n=K" display="inline"><mrow><mi>n</mi><mo>=</mo><mi>K</mi></mrow></math> and <math id="p10.m4" class="ltx_Math" alttext="p=\frac{M-K+1-n}{M-K+1}" display="inline"><mrow><mi>p</mi><mo>=</mo><mfrac><mrow><mrow><mrow><mi>M</mi><mo>-</mo><mi>K</mi></mrow><mo>+</mo><mn>1</mn></mrow><mo>-</mo><mi>n</mi></mrow><mrow><mrow><mi>M</mi><mo>-</mo><mi>K</mi></mrow><mo>+</mo><mn>1</mn></mrow></mfrac></mrow></math>.
-This approximation simplifies the distribution by looking at a system with replacement for large values of <math id="p10.m5" class="ltx_Math" alttext="M" display="inline"><mi>M</mi></math> and <math id="p10.m6" class="ltx_Math" alttext="K" display="inline"><mi>K</mi></math>.
+<p class="ltx_p">If <math id="p10.m1" class="ltx_Math" alttext="{K\choose 2}&lt;&lt;n,M-K+1-n" display="inline"><mrow><mrow><mo>(</mo><mfrac linethickness="0pt"><mi>K</mi><mn>2</mn></mfrac><mo>)</mo></mrow><mo>≪</mo><mrow><mi>n</mi><mo>,</mo><mrow><mrow><mrow><mi>M</mi><mo>-</mo><mi>K</mi></mrow><mo>+</mo><mn>1</mn></mrow><mo>-</mo><mi>n</mi></mrow></mrow></mrow></math> then <math id="p10.m2" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> can be approximated as a <span class="ltx_text ltx_font_bold">binomial <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">random variable</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/RandomVariable.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/randomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></span> with parameters <math id="p10.m3" class="ltx_Math" alttext="n=K" display="inline"><mrow><mi>n</mi><mo>=</mo><mi>K</mi></mrow></math> and <math id="p10.m4" class="ltx_Math" alttext="p=\frac{M-K+1-n}{M-K+1}" display="inline"><mrow><mi>p</mi><mo>=</mo><mfrac><mrow><mrow><mrow><mi>M</mi><mo>-</mo><mi>K</mi></mrow><mo>+</mo><mn>1</mn></mrow><mo>-</mo><mi>n</mi></mrow><mrow><mrow><mi>M</mi><mo>-</mo><mi>K</mi></mrow><mo>+</mo><mn>1</mn></mrow></mfrac></mrow></math>.
+This approximation simplifies the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/distributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/probabilitydistributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> by looking at a system with replacement for large values of <math id="p10.m5" class="ltx_Math" alttext="M" display="inline"><mi>M</mi></math> and <math id="p10.m6" class="ltx_Math" alttext="K" display="inline"><mi>K</mi></math>.
 </p>
 <table class="ltx_tabular ltx_align_right ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
@@ -99,7 +99,7 @@ This approximation simplifies the distribution by looking at a system with repla
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">hypergeometric random variable</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">HypergeometricRandomVariable</td>
 </tr>
 <tr class="ltx_tr">
@@ -128,7 +128,7 @@ This approximation simplifies the distribution by looking at a system with repla
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
@@ -140,7 +140,7 @@ This approximation simplifies the distribution by looking at a system with repla
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l">Synonym</th>
-<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r">hypergeometric distribution</td>
+<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r"><a class="nnexus_concept" href="http://mathworld.wolfram.com/HypergeometricDistribution.html">hypergeometric distribution</a></td>
 </tr>
 </tbody>
 </table>
