--- a/html/62E15-LognormalRandomVariable.html
+++ b/html/62E15-LognormalRandomVariable.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p"><math id="p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is a <em class="ltx_emph ltx_font_italic">lognormal random variable</em> with parameters <math id="p1.m2" class="ltx_Math" alttext="\mu\in\mathbb{R}" display="inline"><mrow><mi>μ</mi><mo>∈</mo><mi>ℝ</mi></mrow></math> and <math id="p1.m3" class="ltx_Math" alttext="\sigma^{2}&gt;0" display="inline"><mrow><msup><mi>σ</mi><mn>2</mn></msup><mo>&gt;</mo><mn>0</mn></mrow></math> if its probability density function is given for <math id="p1.m4" class="ltx_Math" alttext="x&gt;0" display="inline"><mrow><mi>x</mi><mo>&gt;</mo><mn>0</mn></mrow></math> by</p>
+<p class="ltx_p"><math id="p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is a <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/lognormalrandomvariable">lognormal random variable</a></em> with parameters <math id="p1.m2" class="ltx_Math" alttext="\mu\in\mathbb{R}" display="inline"><mrow><mi>μ</mi><mo>∈</mo><mi>ℝ</mi></mrow></math> and <math id="p1.m3" class="ltx_Math" alttext="\sigma^{2}&gt;0" display="inline"><mrow><msup><mi>σ</mi><mn>2</mn></msup><mo>&gt;</mo><mn>0</mn></mrow></math> if its <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">probability density function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ProbabilityDensityFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/probabilitydistributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> is given for <math id="p1.m4" class="ltx_Math" alttext="x&gt;0" display="inline"><mrow><mi>x</mi><mo>&gt;</mo><mn>0</mn></mrow></math> by</p>
 </div>
 <div id="p2" class="ltx_para">
 <table id="S0.EGx1" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
@@ -40,7 +40,7 @@
 <li id="I1.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">1.</span> 
 <div id="I1.i1.p1" class="ltx_para">
-<p class="ltx_p"><math id="I1.i1.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is a random variable such that <math id="I1.i1.p1.m2" class="ltx_Math" alttext="\ln(X)" display="inline"><mrow><mi>ln</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow></mrow></math> is a normal random variable with mean <math id="I1.i1.p1.m3" class="ltx_Math" alttext="\mu" display="inline"><mi>μ</mi></math> and variance <math id="I1.i1.p1.m4" class="ltx_Math" alttext="\sigma^{2}" display="inline"><msup><mi>σ</mi><mn>2</mn></msup></math>.</p>
+<p class="ltx_p"><math id="I1.i1.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">random variable</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/RandomVariable.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/randomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> such that <math id="I1.i1.p1.m2" class="ltx_Math" alttext="\ln(X)" display="inline"><mrow><mi>ln</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow></mrow></math> is a <a class="nnexus_concept" href="http://planetmath.org/normalrandomvariable">normal random variable</a> with mean <math id="I1.i1.p1.m3" class="ltx_Math" alttext="\mu" display="inline"><mi>μ</mi></math> and <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">variance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Variance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/variance"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="I1.i1.p1.m4" class="ltx_Math" alttext="\sigma^{2}" display="inline"><msup><mi>σ</mi><mn>2</mn></msup></math>.</p>
 </div>
 </li>
 <li id="I1.i2" class="ltx_item" style="list-style-type:none;">
@@ -101,7 +101,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></th>
 <td class="ltx_td ltx_align_left ltx_border_r">msc 62E15</td>
 </tr>
 <tr class="ltx_tr">
