--- a/html/62E15-NegativeBinomialRandomVariable.html
+++ b/html/62E15-NegativeBinomialRandomVariable.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p"><math id="p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is a <em class="ltx_emph ltx_font_italic">negative binomial random variable</em> with parameters <math id="p1.m2" class="ltx_Math" alttext="r" display="inline"><mi>r</mi></math> and <math id="p1.m3" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math> if
+<p class="ltx_p"><math id="p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is a <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/negativebinomialrandomvariable">negative binomial random variable</a></em> with <a class="nnexus_concept" href="http://planetmath.org/parametre">parameters</a> <math id="p1.m2" class="ltx_Math" alttext="r" display="inline"><mi>r</mi></math> and <math id="p1.m3" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math> if
 <br class="ltx_break"></p>
 </div>
 <div id="p2" class="ltx_para">
@@ -62,7 +62,7 @@
 <li id="I2.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">1.</span> 
 <div id="I2.i1.p1" class="ltx_para">
-<p class="ltx_p">If <math id="I2.i1.p1.m1" class="ltx_Math" alttext="r\in\mathbb{N}" display="inline"><mrow><mi>r</mi><mo>∈</mo><mi>ℕ</mi></mrow></math>, <math id="I2.i1.p1.m2" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> represents the number of failed Bernoulli trials before the <math id="I2.i1.p1.m3" class="ltx_Math" alttext="r" display="inline"><mi>r</mi></math>th success. Note that if <math id="I2.i1.p1.m4" class="ltx_Math" alttext="r=1" display="inline"><mrow><mi>r</mi><mo>=</mo><mn>1</mn></mrow></math> the variable is a geometric random variable.</p>
+<p class="ltx_p">If <math id="I2.i1.p1.m1" class="ltx_Math" alttext="r\in\mathbb{N}" display="inline"><mrow><mi>r</mi><mo>∈</mo><mi>ℕ</mi></mrow></math>, <math id="I2.i1.p1.m2" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> <a class="nnexus_concept" href="http://planetmath.org/representablefunctor">represents</a> the number of failed Bernoulli trials before the <math id="I2.i1.p1.m3" class="ltx_Math" alttext="r" display="inline"><mi>r</mi></math>th success. Note that if <math id="I2.i1.p1.m4" class="ltx_Math" alttext="r=1" display="inline"><mrow><mi>r</mi><mo>=</mo><mn>1</mn></mrow></math> the <a class="nnexus_concept" href="http://planetmath.org/variable">variable</a> is a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">geometric random variable</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/geometricdistribution"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/geometricrandomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>.</p>
 </div>
 </li>
 <li id="I2.i2" class="ltx_item" style="list-style-type:none;">
@@ -92,7 +92,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">negative binomial random variable</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">NegativeBinomialRandomVariable</td>
 </tr>
 <tr class="ltx_tr">
@@ -121,7 +121,7 @@
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
@@ -137,7 +137,7 @@
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l">Synonym</th>
-<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r">negative binomial distribution</td>
+<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r"><a class="nnexus_concept" href="http://mathworld.wolfram.com/NegativeBinomialDistribution.html">negative binomial distribution</a></td>
 </tr>
 </tbody>
 </table>
