--- a/html/62E15-NegativeHypergeometricRandomVariable.html
+++ b/html/62E15-NegativeHypergeometricRandomVariable.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p"><math id="p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is a <span class="ltx_text ltx_font_bold">negative hypergeometric random variable</span> with parameters <math id="p1.m2" class="ltx_Math" alttext="W,B,b" display="inline"><mrow><mi>W</mi><mo>,</mo><mi>B</mi><mo>,</mo><mi>b</mi></mrow></math> if</p>
+<p class="ltx_p"><math id="p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is a <span class="ltx_text ltx_font_bold"><a class="nnexus_concept" href="http://planetmath.org/negativehypergeometricrandomvariable">negative hypergeometric random variable</a></span> with <a class="nnexus_concept" href="http://planetmath.org/parametre">parameters</a> <math id="p1.m2" class="ltx_Math" alttext="W,B,b" display="inline"><mrow><mi>W</mi><mo>,</mo><mi>B</mi><mo>,</mo><mi>b</mi></mrow></math> if</p>
 </div>
 <div id="p2" class="ltx_para">
 <p class="ltx_p"><math id="p2.m1" class="ltx_Math" alttext="f_{X}(x)=\frac{{x+b-1\choose x}{W+B-b-x\choose W-x}}{{W+B\choose W}}" display="inline"><mrow><mrow><msub><mi>f</mi><mi>X</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow><mo>=</mo><mfrac><mrow><mrow><mo>(</mo><mfrac linethickness="0pt"><mrow><mrow><mi>x</mi><mo>+</mo><mi>b</mi></mrow><mo>-</mo><mn>1</mn></mrow><mi>x</mi></mfrac><mo>)</mo></mrow><mo>⁢</mo><mrow><mo>(</mo><mfrac linethickness="0pt"><mrow><mrow><mi>W</mi><mo>+</mo><mi>B</mi></mrow><mo>-</mo><mi>b</mi><mo>-</mo><mi>x</mi></mrow><mrow><mi>W</mi><mo>-</mo><mi>x</mi></mrow></mfrac><mo>)</mo></mrow></mrow><mrow><mo>(</mo><mfrac linethickness="0pt"><mrow><mi>W</mi><mo>+</mo><mi>B</mi></mrow><mi>W</mi></mfrac><mo>)</mo></mrow></mfrac></mrow></math>, <math id="p2.m2" class="ltx_Math" alttext="x=\{0,1,...,W\}" display="inline"><mrow><mi>x</mi><mo>=</mo><mrow><mo stretchy="false">{</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><mi>W</mi><mo stretchy="false">}</mo></mrow></mrow></math></p>
@@ -62,19 +62,19 @@
 <li id="I2.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">1.</span> 
 <div id="I2.i1.p1" class="ltx_para">
-<p class="ltx_p"><math id="I2.i1.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> represents the number of “special” items (from the <math id="I2.i1.p1.m2" class="ltx_Math" alttext="W" display="inline"><mi>W</mi></math> special items) present before the <math id="I2.i1.p1.m3" class="ltx_Math" alttext="b" display="inline"><mi>b</mi></math>th object from a population with <math id="I2.i1.p1.m4" class="ltx_Math" alttext="B" display="inline"><mi>B</mi></math> items.</p>
+<p class="ltx_p"><math id="I2.i1.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> <a class="nnexus_concept" href="http://planetmath.org/representablefunctor">represents</a> the number of “special” items (from the <math id="I2.i1.p1.m2" class="ltx_Math" alttext="W" display="inline"><mi>W</mi></math> special items) present before the <math id="I2.i1.p1.m3" class="ltx_Math" alttext="b" display="inline"><mi>b</mi></math>th object from a <a class="nnexus_concept" href="http://mathworld.wolfram.com/Population.html">population</a> with <math id="I2.i1.p1.m4" class="ltx_Math" alttext="B" display="inline"><mi>B</mi></math> items.</p>
 </div>
 </li>
 <li id="I2.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">2.</span> 
 <div id="I2.i2.p1" class="ltx_para">
-<p class="ltx_p">The expected value of <math id="I2.i2.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is noted as <math id="I2.i2.p1.m2" class="ltx_Math" alttext="E[X]=\frac{Wb}{B+1}" display="inline"><mrow><mrow><mi>E</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow><mo>=</mo><mfrac><mrow><mi>W</mi><mo>⁢</mo><mi>b</mi></mrow><mrow><mi>B</mi><mo>+</mo><mn>1</mn></mrow></mfrac></mrow></math></p>
+<p class="ltx_p">The <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">expected value</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ExpectedValue.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/expectedvalue"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of <math id="I2.i2.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is noted as <math id="I2.i2.p1.m2" class="ltx_Math" alttext="E[X]=\frac{Wb}{B+1}" display="inline"><mrow><mrow><mi>E</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow><mo>=</mo><mfrac><mrow><mi>W</mi><mo>⁢</mo><mi>b</mi></mrow><mrow><mi>B</mi><mo>+</mo><mn>1</mn></mrow></mfrac></mrow></math></p>
 </div>
 </li>
 <li id="I2.i3" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">3.</span> 
 <div id="I2.i3.p1" class="ltx_para">
-<p class="ltx_p">The variance of <math id="I2.i3.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is noted as <math id="I2.i3.p1.m2" class="ltx_Math" alttext="Var[X]=\frac{Wb(B-b+1)(W+B+1)}{(B+2)(B+1)^{2}}" display="inline"><mrow><mrow><mi>V</mi><mo>⁢</mo><mi>a</mi><mo>⁢</mo><mi>r</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow><mo>=</mo><mfrac><mrow><mi>W</mi><mo>⁢</mo><mi>b</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mrow><mi>B</mi><mo>-</mo><mi>b</mi></mrow><mo>+</mo><mn>1</mn></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mi>W</mi><mo>+</mo><mi>B</mi><mo>+</mo><mn>1</mn></mrow><mo stretchy="false">)</mo></mrow></mrow><mrow><mrow><mo stretchy="false">(</mo><mrow><mi>B</mi><mo>+</mo><mn>2</mn></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><msup><mrow><mo stretchy="false">(</mo><mrow><mi>B</mi><mo>+</mo><mn>1</mn></mrow><mo stretchy="false">)</mo></mrow><mn>2</mn></msup></mrow></mfrac></mrow></math></p>
+<p class="ltx_p">The <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">variance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Variance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/variance"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of <math id="I2.i3.p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is noted as <math id="I2.i3.p1.m2" class="ltx_Math" alttext="Var[X]=\frac{Wb(B-b+1)(W+B+1)}{(B+2)(B+1)^{2}}" display="inline"><mrow><mrow><mi>V</mi><mo>⁢</mo><mi>a</mi><mo>⁢</mo><mi>r</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow><mo>=</mo><mfrac><mrow><mi>W</mi><mo>⁢</mo><mi>b</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mrow><mi>B</mi><mo>-</mo><mi>b</mi></mrow><mo>+</mo><mn>1</mn></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mi>W</mi><mo>+</mo><mi>B</mi><mo>+</mo><mn>1</mn></mrow><mo stretchy="false">)</mo></mrow></mrow><mrow><mrow><mo stretchy="false">(</mo><mrow><mi>B</mi><mo>+</mo><mn>2</mn></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><msup><mrow><mo stretchy="false">(</mo><mrow><mi>B</mi><mo>+</mo><mn>1</mn></mrow><mo stretchy="false">)</mo></mrow><mn>2</mn></msup></mrow></mfrac></mrow></math></p>
 </div>
 </li>
 </ol>
@@ -83,8 +83,8 @@
 <p class="ltx_p">Approximation techniques:</p>
 </div>
 <div id="p10" class="ltx_para">
-<p class="ltx_p">If <math id="p10.m1" class="ltx_Math" alttext="{x\choose 2}&lt;&lt;W" display="inline"><mrow><mrow><mo>(</mo><mfrac linethickness="0pt"><mi>x</mi><mn>2</mn></mfrac><mo>)</mo></mrow><mo>≪</mo><mi>W</mi></mrow></math> and <math id="p10.m2" class="ltx_Math" alttext="{b\choose 2}&lt;&lt;B" display="inline"><mrow><mrow><mo>(</mo><mfrac linethickness="0pt"><mi>b</mi><mn>2</mn></mfrac><mo>)</mo></mrow><mo>≪</mo><mi>B</mi></mrow></math> then <math id="p10.m3" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> can be approximated as a <span class="ltx_text ltx_font_bold">negative binomial random variable</span> with parameters <math id="p10.m4" class="ltx_Math" alttext="r=b" display="inline"><mrow><mi>r</mi><mo>=</mo><mi>b</mi></mrow></math> and <math id="p10.m5" class="ltx_Math" alttext="p=\frac{W}{W+B}" display="inline"><mrow><mi>p</mi><mo>=</mo><mfrac><mi>W</mi><mrow><mi>W</mi><mo>+</mo><mi>B</mi></mrow></mfrac></mrow></math>.
-This approximation simplifies the distribution by looking at a system with replacement for large values of <math id="p10.m6" class="ltx_Math" alttext="W" display="inline"><mi>W</mi></math> and <math id="p10.m7" class="ltx_Math" alttext="B" display="inline"><mi>B</mi></math>.
+<p class="ltx_p">If <math id="p10.m1" class="ltx_Math" alttext="{x\choose 2}&lt;&lt;W" display="inline"><mrow><mrow><mo>(</mo><mfrac linethickness="0pt"><mi>x</mi><mn>2</mn></mfrac><mo>)</mo></mrow><mo>≪</mo><mi>W</mi></mrow></math> and <math id="p10.m2" class="ltx_Math" alttext="{b\choose 2}&lt;&lt;B" display="inline"><mrow><mrow><mo>(</mo><mfrac linethickness="0pt"><mi>b</mi><mn>2</mn></mfrac><mo>)</mo></mrow><mo>≪</mo><mi>B</mi></mrow></math> then <math id="p10.m3" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> can be approximated as a <span class="ltx_text ltx_font_bold"><a class="nnexus_concept" href="http://planetmath.org/negativebinomialrandomvariable">negative binomial random variable</a></span> with parameters <math id="p10.m4" class="ltx_Math" alttext="r=b" display="inline"><mrow><mi>r</mi><mo>=</mo><mi>b</mi></mrow></math> and <math id="p10.m5" class="ltx_Math" alttext="p=\frac{W}{W+B}" display="inline"><mrow><mi>p</mi><mo>=</mo><mfrac><mi>W</mi><mrow><mi>W</mi><mo>+</mo><mi>B</mi></mrow></mfrac></mrow></math>.
+This approximation simplifies the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/distributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/probabilitydistributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> by looking at a system with replacement for large values of <math id="p10.m6" class="ltx_Math" alttext="W" display="inline"><mi>W</mi></math> and <math id="p10.m7" class="ltx_Math" alttext="B" display="inline"><mi>B</mi></math>.
 </p>
 <table class="ltx_tabular ltx_align_right ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
@@ -93,7 +93,7 @@ This approximation simplifies the distribution by looking at a system with repla
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">negative hypergeometric random variable</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">NegativeHypergeometricRandomVariable</td>
 </tr>
 <tr class="ltx_tr">
@@ -122,7 +122,7 @@ This approximation simplifies the distribution by looking at a system with repla
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
