--- a/html/62E15-ProofOfExpectedValueOfTheHypergeometricDistribution.html
+++ b/html/62E15-ProofOfExpectedValueOfTheHypergeometricDistribution.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">We will first prove a useful property of binomial coefficients. We know</p>
+<p class="ltx_p">We will first prove a useful property of <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">binomial coefficients</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/BinomialCoefficient.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/binomialcoefficient"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>. We know</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -38,7 +38,7 @@
 <td rowspan="1" class="ltx_eqn_cell ltx_eqn_eqno ltx_align_middle ltx_align_right"><span class="ltx_tag ltx_tag_equation ltx_align_right">(1)</span></td>
 </tr>
 </table>
-<p class="ltx_p">Now we can start with the definition of the expected value:</p>
+<p class="ltx_p">Now we can start with the definition of the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">expected value</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ExpectedValue.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/expectedvalue"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>:</p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -76,7 +76,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">The sum in this equation is <math id="p1.m4" class="ltx_Math" alttext="1" display="inline"><mn>1</mn></math> as it is the sum over all probabilities of a hypergeometric distribution. Therefore we have</p>
+<p class="ltx_p">The sum in this equation is <math id="p1.m4" class="ltx_Math" alttext="1" display="inline"><mn>1</mn></math> as it is the sum over all <a class="nnexus_concept" href="http://mathworld.wolfram.com/Probability.html">probabilities</a> of a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">hypergeometric distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/HypergeometricDistribution.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/hypergeometricrandomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>. Therefore we have</p>
 <table id="S0.Ex6" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -124,7 +124,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r">Proof</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l">Classification</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></th>
 <td class="ltx_td ltx_align_left ltx_border_b ltx_border_r">msc 62E15</td>
 </tr>
 </tbody>
