--- a/html/62E15-PropertiesOfPoissonRandomVariables.html
+++ b/html/62E15-PropertiesOfPoissonRandomVariables.html
@@ -23,13 +23,13 @@
 <h6 class="ltx_title ltx_runin ltx_font_bold ltx_title_theorem">
 <span class="ltx_tag ltx_tag_theorem">Proposition 1</span>.</h6>
 <div id="Thmprop1.p1" class="ltx_para">
-<p class="ltx_p"><span class="ltx_text ltx_font_italic">If <math id="Thmprop1.p1.m1" class="ltx_Math" alttext="X_{1},X_{2}" display="inline"><mrow><msub><mi>X</mi><mn mathvariant="normal">1</mn></msub><mo mathvariant="normal">,</mo><msub><mi>X</mi><mn mathvariant="normal">2</mn></msub></mrow></math> are independent Poisson random variables with parameters <math id="Thmprop1.p1.m2" class="ltx_Math" alttext="\lambda_{1},\lambda_{2}" display="inline"><mrow><msub><mi>λ</mi><mn mathvariant="normal">1</mn></msub><mo mathvariant="normal">,</mo><msub><mi>λ</mi><mn mathvariant="normal">2</mn></msub></mrow></math>, then <math id="Thmprop1.p1.m3" class="ltx_Math" alttext="X_{1}+X_{2}" display="inline"><mrow><msub><mi>X</mi><mn mathvariant="normal">1</mn></msub><mo mathvariant="normal">+</mo><msub><mi>X</mi><mn mathvariant="normal">2</mn></msub></mrow></math> is a Poisson random variable with parameter <math id="Thmprop1.p1.m4" class="ltx_Math" alttext="\lambda_{1}+\lambda_{2}" display="inline"><mrow><msub><mi>λ</mi><mn mathvariant="normal">1</mn></msub><mo mathvariant="normal">+</mo><msub><mi>λ</mi><mn mathvariant="normal">2</mn></msub></mrow></math>.</span></p>
+<p class="ltx_p"><span class="ltx_text ltx_font_italic">If <math id="Thmprop1.p1.m1" class="ltx_Math" alttext="X_{1},X_{2}" display="inline"><mrow><msub><mi>X</mi><mn mathvariant="normal">1</mn></msub><mo mathvariant="normal">,</mo><msub><mi>X</mi><mn mathvariant="normal">2</mn></msub></mrow></math> are <a class="nnexus_concept" href="http://planetmath.org/independent">independent</a> <a class="nnexus_concept" href="http://planetmath.org/poissonrandomvariable">Poisson random variables</a> with parameters <math id="Thmprop1.p1.m2" class="ltx_Math" alttext="\lambda_{1},\lambda_{2}" display="inline"><mrow><msub><mi>λ</mi><mn mathvariant="normal">1</mn></msub><mo mathvariant="normal">,</mo><msub><mi>λ</mi><mn mathvariant="normal">2</mn></msub></mrow></math>, then <math id="Thmprop1.p1.m3" class="ltx_Math" alttext="X_{1}+X_{2}" display="inline"><mrow><msub><mi>X</mi><mn mathvariant="normal">1</mn></msub><mo mathvariant="normal">+</mo><msub><mi>X</mi><mn mathvariant="normal">2</mn></msub></mrow></math> is a Poisson random variable with parameter <math id="Thmprop1.p1.m4" class="ltx_Math" alttext="\lambda_{1}+\lambda_{2}" display="inline"><mrow><msub><mi>λ</mi><mn mathvariant="normal">1</mn></msub><mo mathvariant="normal">+</mo><msub><mi>λ</mi><mn mathvariant="normal">2</mn></msub></mrow></math>.</span></p>
 </div>
 </div>
 <div class="ltx_proof">
 <h6 class="ltx_title ltx_runin ltx_font_italic ltx_title_proof">Proof.</h6>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">Let <math id="p2.m1" class="ltx_Math" alttext="X:=X_{1}+X_{2}" display="inline"><mrow><mi>X</mi><mo>:=</mo><mrow><msub><mi>X</mi><mn>1</mn></msub><mo>+</mo><msub><mi>X</mi><mn>2</mn></msub></mrow></mrow></math> and <math id="p2.m2" class="ltx_Math" alttext="\lambda:=\lambda_{1}+\lambda_{2}" display="inline"><mrow><mi>λ</mi><mo>:=</mo><mrow><msub><mi>λ</mi><mn>1</mn></msub><mo>+</mo><msub><mi>λ</mi><mn>2</mn></msub></mrow></mrow></math>, let us calculate the distribution function of <math id="p2.m3" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>:</p>
+<p class="ltx_p">Let <math id="p2.m1" class="ltx_Math" alttext="X:=X_{1}+X_{2}" display="inline"><mrow><mi>X</mi><mo>:=</mo><mrow><msub><mi>X</mi><mn>1</mn></msub><mo>+</mo><msub><mi>X</mi><mn>2</mn></msub></mrow></mrow></math> and <math id="p2.m2" class="ltx_Math" alttext="\lambda:=\lambda_{1}+\lambda_{2}" display="inline"><mrow><mi>λ</mi><mo>:=</mo><mrow><msub><mi>λ</mi><mn>1</mn></msub><mo>+</mo><msub><mi>λ</mi><mn>2</mn></msub></mrow></mrow></math>, let us calculate the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">distribution function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/DistributionFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/distributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of <math id="p2.m3" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>:</p>
 <table id="S0.EGx1" class="ltx_equationgroup ltx_eqn_eqnarray ltx_eqn_table">
 
 <tr id="S0.Ex4" class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -71,19 +71,19 @@ _{1}+\lambda_{2})^{i}=\sum_{i=0}^{x}\frac{e^{-\lambda}}{i!}\lambda^{i}." display
 </div>
 </div>
 <div id="p3" class="ltx_para">
-<p class="ltx_p">As a corollary, any sum of independent Poisson random variables is Poisson, with parameter the sum of the parameters from the independent random variables.</p>
+<p class="ltx_p">As a corollary, any sum of independent Poisson random variables is Poisson, with parameter the sum of the parameters from the independent <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">random variables</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/RandomVariable.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/randomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>.</p>
 </div>
 <div id="Thmprop2" class="ltx_theorem ltx_theorem_prop">
 <h6 class="ltx_title ltx_runin ltx_font_bold ltx_title_theorem">
 <span class="ltx_tag ltx_tag_theorem">Proposition 2</span>.</h6>
 <div id="Thmprop2.p1" class="ltx_para">
-<p class="ltx_p"><span class="ltx_text ltx_font_italic">A Poisson random variable is infinitely divisible.</span></p>
+<p class="ltx_p"><span class="ltx_text ltx_font_italic">A Poisson random variable is <a class="nnexus_concept" href="http://planetmath.org/infinitelydivisiblerandomvariable">infinitely divisible</a>.</span></p>
 </div>
 </div>
 <div class="ltx_proof">
 <h6 class="ltx_title ltx_runin ltx_font_italic ltx_title_proof">Proof.</h6>
 <div id="p4" class="ltx_para">
-<p class="ltx_p">Let <math id="p4.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> be a Poisson random variable with parameter <math id="p4.m2" class="ltx_Math" alttext="\lambda" display="inline"><mi>λ</mi></math>. Let <math id="p4.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> be any positive integer. Let <math id="p4.m4" class="ltx_Math" alttext="X_{1},\ldots,X_{n}" display="inline"><mrow><msub><mi>X</mi><mn>1</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>X</mi><mi>n</mi></msub></mrow></math> be independent identically distributed Poisson random variables with parameter <math id="p4.m5" class="ltx_Math" alttext="\frac{\lambda}{n}" display="inline"><mfrac><mi>λ</mi><mi>n</mi></mfrac></math>. Then the sum of these random variables is easily seen to be Poisson, with parameter <math id="p4.m6" class="ltx_Math" alttext="\lambda" display="inline"><mi>λ</mi></math>, and is therefore identically distributed as <math id="p4.m7" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>.
+<p class="ltx_p">Let <math id="p4.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> be a Poisson random variable with parameter <math id="p4.m2" class="ltx_Math" alttext="\lambda" display="inline"><mi>λ</mi></math>. Let <math id="p4.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> be any <a class="nnexus_concept" href="http://mathworld.wolfram.com/PositiveInteger.html">positive integer</a>. Let <math id="p4.m4" class="ltx_Math" alttext="X_{1},\ldots,X_{n}" display="inline"><mrow><msub><mi>X</mi><mn>1</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>X</mi><mi>n</mi></msub></mrow></math> be <a class="nnexus_concept" href="http://planetmath.org/independentidenticallydistributed">independent identically distributed</a> Poisson random variables with parameter <math id="p4.m5" class="ltx_Math" alttext="\frac{\lambda}{n}" display="inline"><mfrac><mi>λ</mi><mi>n</mi></mfrac></math>. Then the sum of these random variables is easily seen to be Poisson, with parameter <math id="p4.m6" class="ltx_Math" alttext="\lambda" display="inline"><mi>λ</mi></math>, and is therefore identically distributed as <math id="p4.m7" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>.
 ∎</p>
 </div>
 </div>
@@ -92,7 +92,7 @@ _{1}+\lambda_{2})^{i}=\sum_{i=0}^{x}\frac{e^{-\lambda}}{i!}\lambda^{i}." display
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">properties of Poisson random variables</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/propertiesofpoissonrandomvariables">properties of Poisson random variables</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
