--- a/html/62E15-UnitNormalLossFunction.html
+++ b/html/62E15-UnitNormalLossFunction.html
@@ -27,7 +27,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">where <math id="p1.m2" class="ltx_Math" alttext="c" display="inline"><mi>c</mi></math> is a constant and <math id="p1.m3" class="ltx_Math" alttext="f(.)" display="inline"><mrow><mi>f</mi><mrow><mo stretchy="false">(</mo><mo>.</mo><mo stretchy="false">)</mo></mrow></mrow></math> is the normal probability distribution function.
+<p class="ltx_p">where <math id="p1.m2" class="ltx_Math" alttext="c" display="inline"><mi>c</mi></math> is a constant and <math id="p1.m3" class="ltx_Math" alttext="f(.)" display="inline"><mrow><mi>f</mi><mrow><mo stretchy="false">(</mo><mo>.</mo><mo stretchy="false">)</mo></mrow></mrow></math> is the normal <a class="nnexus_concept" href="http://planetmath.org/probabilitydistributionfunction">probability distribution function</a>.
 
 <br class="ltx_break">An alternative computational formula for <math id="p1.m4" class="ltx_Math" alttext="UNL" display="inline"><mrow><mi>U</mi><mo>⁢</mo><mi>N</mi><mo>⁢</mo><mi>L</mi></mrow></math> is the following:</p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
@@ -38,8 +38,8 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">where <math id="p1.m5" class="ltx_Math" alttext="f(.)" display="inline"><mrow><mi>f</mi><mrow><mo stretchy="false">(</mo><mo>.</mo><mo stretchy="false">)</mo></mrow></mrow></math> and <math id="p1.m6" class="ltx_Math" alttext="F(.)" display="inline"><mrow><mi>F</mi><mrow><mo stretchy="false">(</mo><mo>.</mo><mo stretchy="false">)</mo></mrow></mrow></math> are the probability distribution function and cumulative distribution function
-for Standard Normal Distribution respectively.
+<p class="ltx_p">where <math id="p1.m5" class="ltx_Math" alttext="f(.)" display="inline"><mrow><mi>f</mi><mrow><mo stretchy="false">(</mo><mo>.</mo><mo stretchy="false">)</mo></mrow></mrow></math> and <math id="p1.m6" class="ltx_Math" alttext="F(.)" display="inline"><mrow><mi>F</mi><mrow><mo stretchy="false">(</mo><mo>.</mo><mo stretchy="false">)</mo></mrow></mrow></math> are the probability distribution function and <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">cumulative distribution function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/CumulativeDistributionFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/distributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/cumulativedistributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>
+for <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Standard Normal Distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/StandardNormalDistribution.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/normalrandomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> respectively.
 
 <br class="ltx_break"><span class="ltx_text ltx_font_bold">Remark.</span>
 This function has an extensive use in Risk Analysis and the Theory of Blackjack.
@@ -48,7 +48,7 @@ This function has an extensive use in Risk Analysis and the Theory of Blackjack.
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">unit normal loss function</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/unitnormallossfunction">unit normal loss function</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
@@ -83,7 +83,7 @@ This function has an extensive use in Risk Analysis and the Theory of Blackjack.
 <td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l">Classification</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></th>
 <td class="ltx_td ltx_align_left ltx_border_b ltx_border_r">msc 62E15</td>
 </tr>
 </tbody>
