--- a/html/62H99-RandomVector.html
+++ b/html/62H99-RandomVector.html
@@ -18,9 +18,9 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">A <em class="ltx_emph ltx_font_italic">random vector</em> is a finite-dimensional formal vector of
-random variables. The random vector can be written either as a
-column or row of random variables, depending on its context and use.
+<p class="ltx_p">A <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/randomvector">random vector</a></em> is a <a class="nnexus_concept" href="http://planetmath.org/dimensionvectorspace">finite-dimensional</a> formal vector of
+<a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">random variables</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/RandomVariable.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/randomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>. The random vector can be written either as a
+column or row of random variables, depending on its <a class="nnexus_concept" href="http://planetmath.org/conceptlattice">context</a> and use.
 So if <math id="p1.m1" class="ltx_Math" alttext="X_{1},X_{2},\ldots,X_{n}" display="inline"><mrow><msub><mi>X</mi><mn>1</mn></msub><mo>,</mo><msub><mi>X</mi><mn>2</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>X</mi><mi>n</mi></msub></mrow></math> are random variables, then</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
@@ -34,15 +34,15 @@ X_{n}\end{pmatrix}=(X_{1},X_{2},\ldots,X_{n})^{\operatorname{T}}" display="block
 </tr>
 </table>
 <p class="ltx_p">is a
-random (column) vector. Similarly, one defines a <em class="ltx_emph ltx_font_italic">random
-matrix</em> to be a formal matrix whose entries are all random
+random (column) vector. Similarly, one defines a <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://mathworld.wolfram.com/RandomMatrix.html">random
+matrix</a></em> to be a formal matrix whose entries are all random
 variables. The size of a random vector and the size of a
-random matrix are assumed to be finite fixed constants.</p>
+random matrix are assumed to be finite fixed <a class="nnexus_concept" href="http://planetmath.org/logicallanguage">constants</a>.</p>
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">The <em class="ltx_emph ltx_font_italic">distribution of a random vector</em>
-<math id="p2.m1" class="ltx_Math" alttext="\textbf{X}=(X_{1},X_{2},\ldots,X_{n})" display="inline"><mrow><mtext>𝐗</mtext><mo>=</mo><mrow><mo stretchy="false">(</mo><msub><mi>X</mi><mn>1</mn></msub><mo>,</mo><msub><mi>X</mi><mn>2</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>X</mi><mi>n</mi></msub><mo stretchy="false">)</mo></mrow></mrow></math> is defined to be the joint
-distribution of its coordinates <math id="p2.m2" class="ltx_Math" alttext="X_{1},\ldots,X_{n}" display="inline"><mrow><msub><mi>X</mi><mn>1</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>X</mi><mi>n</mi></msub></mrow></math>:</p>
+<p class="ltx_p">The <em class="ltx_emph ltx_font_italic"><a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/distributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/probabilitydistributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of a random vector</em>
+<math id="p2.m1" class="ltx_Math" alttext="\textbf{X}=(X_{1},X_{2},\ldots,X_{n})" display="inline"><mrow><mtext>𝐗</mtext><mo>=</mo><mrow><mo stretchy="false">(</mo><msub><mi>X</mi><mn>1</mn></msub><mo>,</mo><msub><mi>X</mi><mn>2</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>X</mi><mi>n</mi></msub><mo stretchy="false">)</mo></mrow></mrow></math> is defined to be the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">joint
+distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/jointdiscretedensityfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/jointcontinuousdensityfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of its <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">coordinates</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/coordinatevector"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/frame"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="p2.m2" class="ltx_Math" alttext="X_{1},\ldots,X_{n}" display="inline"><mrow><msub><mi>X</mi><mn>1</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>X</mi><mi>n</mi></msub></mrow></math>:</p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -56,7 +56,7 @@ distribution of its matrix components.</p>
 </div>
 <div id="p3" class="ltx_para">
 <p class="ltx_p">Let <math id="p3.m1" class="ltx_Math" alttext="\textbf{X}=(X_{1},X_{2},\ldots,X_{n})" display="inline"><mrow><mtext>𝐗</mtext><mo>=</mo><mrow><mo stretchy="false">(</mo><msub><mi>X</mi><mn>1</mn></msub><mo>,</mo><msub><mi>X</mi><mn>2</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>X</mi><mi>n</mi></msub><mo stretchy="false">)</mo></mrow></mrow></math> be a random vector. If
-<math id="p3.m2" class="ltx_Math" alttext="\operatorname{E}[X_{i}]" display="inline"><mrow><mi mathvariant="normal">E</mi><mo>⁡</mo><mrow><mo stretchy="false">[</mo><msub><mi>X</mi><mi>i</mi></msub><mo stretchy="false">]</mo></mrow></mrow></math> exists (<math id="p3.m3" class="ltx_Math" alttext="&lt;\infty" display="inline"><mrow><mi></mi><mo>&lt;</mo><mi mathvariant="normal">∞</mi></mrow></math>) for each <math id="p3.m4" class="ltx_Math" alttext="i" display="inline"><mi>i</mi></math>, then the expectation of
+<math id="p3.m2" class="ltx_Math" alttext="\operatorname{E}[X_{i}]" display="inline"><mrow><mi mathvariant="normal">E</mi><mo>⁡</mo><mrow><mo stretchy="false">[</mo><msub><mi>X</mi><mi>i</mi></msub><mo stretchy="false">]</mo></mrow></mrow></math> exists (<math id="p3.m3" class="ltx_Math" alttext="&lt;\infty" display="inline"><mrow><mi></mi><mo>&lt;</mo><mi mathvariant="normal">∞</mi></mrow></math>) for each <math id="p3.m4" class="ltx_Math" alttext="i" display="inline"><mi>i</mi></math>, then the <a class="nnexus_concept" href="http://planetmath.org/expectedvalue">expectation</a> of
 <span class="ltx_text ltx_markedasmath ltx_font_bold">X</span>, called the <em class="ltx_emph ltx_font_italic">mean vector</em> and denoted by
 <math id="p3.m6" class="ltx_Math" alttext="\mathbf{E}[\textbf{X}]" display="inline"><mrow><mi>𝐄</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mtext>𝐗</mtext><mo stretchy="false">]</mo></mrow></mrow></math>, is defined to be:</p>
 <table id="S0.Ex3" class="ltx_equation ltx_eqn_table">
@@ -71,13 +71,13 @@ distribution of its matrix components.</p>
 <p class="ltx_p">Clearly <math id="p3.m7" class="ltx_Math" alttext="\mathbf{E}[\textbf{X}]^{T}=\mathbf{E}[\textbf{X}^{T}]" display="inline"><mrow><mrow><mi>𝐄</mi><mo>⁢</mo><msup><mrow><mo stretchy="false">[</mo><mtext>𝐗</mtext><mo stretchy="false">]</mo></mrow><mi>T</mi></msup></mrow><mo>=</mo><mrow><mi>𝐄</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><msup><mtext>𝐗</mtext><mi>T</mi></msup><mo stretchy="false">]</mo></mrow></mrow></mrow></math>. The
 expectation of a random matrix is similarly defined. Note that the
 definitions of expectations can also be defined via measure theory. Then,
-using Fubini’s Theorem, one can show that the two sets of definitions coincide.</p>
+using Fubini’s <a class="nnexus_concept" href="http://mathworld.wolfram.com/Theorem.html">Theorem</a>, one can show that the two sets of definitions coincide.</p>
 </div>
 <div id="p4" class="ltx_para">
 <p class="ltx_p">Again, let <math id="p4.m1" class="ltx_Math" alttext="\textbf{X}=(X_{1},X_{2},\ldots,X_{n})^{T}" display="inline"><mrow><mtext>𝐗</mtext><mo>=</mo><msup><mrow><mo stretchy="false">(</mo><msub><mi>X</mi><mn>1</mn></msub><mo>,</mo><msub><mi>X</mi><mn>2</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>X</mi><mi>n</mi></msub><mo stretchy="false">)</mo></mrow><mi>T</mi></msup></mrow></math> be a random vector.
 If <math id="p4.m2" class="ltx_Math" alttext="\boldsymbol{\mu}" display="inline"><mi>𝝁</mi></math>=<math id="p4.m3" class="ltx_Math" alttext="\mathbf{E}[\textbf{X}]" display="inline"><mrow><mi>𝐄</mi><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mtext>𝐗</mtext><mo stretchy="false">]</mo></mrow></mrow></math> is defined and
 <math id="p4.m4" class="ltx_Math" alttext="\operatorname{E}[X_{i}X_{j}]" display="inline"><mrow><mi mathvariant="normal">E</mi><mo>⁡</mo><mrow><mo stretchy="false">[</mo><mrow><msub><mi>X</mi><mi>i</mi></msub><mo>⁢</mo><msub><mi>X</mi><mi>j</mi></msub></mrow><mo stretchy="false">]</mo></mrow></mrow></math> are defined for all <math id="p4.m5" class="ltx_Math" alttext="1\leq i,j\leq n" display="inline"><mrow><mrow><mn>1</mn><mo>≤</mo><mi>i</mi></mrow><mo>,</mo><mrow><mi>j</mi><mo>≤</mo><mi>n</mi></mrow></mrow></math>, then the
-variance of <span class="ltx_text ltx_markedasmath ltx_font_bold">X</span>, denoted by <math id="p4.m7" class="ltx_Math" alttext="\textbf{Var}[\textbf{X}]" display="inline"><mrow><mtext>𝐕𝐚𝐫</mtext><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mtext>𝐗</mtext><mo stretchy="false">]</mo></mrow></mrow></math>, is
+<a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">variance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Variance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/variance"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of <span class="ltx_text ltx_markedasmath ltx_font_bold">X</span>, denoted by <math id="p4.m7" class="ltx_Math" alttext="\textbf{Var}[\textbf{X}]" display="inline"><mrow><mtext>𝐕𝐚𝐫</mtext><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mtext>𝐗</mtext><mo stretchy="false">]</mo></mrow></mrow></math>, is
 defined to be:</p>
 <table id="S0.Ex4" class="ltx_equation ltx_eqn_table">
 
@@ -88,7 +88,7 @@ defined to be:</p>
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">It is not hard to see that <math id="p4.m8" class="ltx_Math" alttext="\textbf{Var}[\textbf{X}]" display="inline"><mrow><mtext>𝐕𝐚𝐫</mtext><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mtext>𝐗</mtext><mo stretchy="false">]</mo></mrow></mrow></math> is an <math id="p4.m9" class="ltx_Math" alttext="n\times n" display="inline"><mrow><mi>n</mi><mo>×</mo><mi>n</mi></mrow></math> symmetric matrix and it is equal to the covariance matrix of the
+<p class="ltx_p">It is not hard to see that <math id="p4.m8" class="ltx_Math" alttext="\textbf{Var}[\textbf{X}]" display="inline"><mrow><mtext>𝐕𝐚𝐫</mtext><mo>⁢</mo><mrow><mo stretchy="false">[</mo><mtext>𝐗</mtext><mo stretchy="false">]</mo></mrow></mrow></math> is an <math id="p4.m9" class="ltx_Math" alttext="n\times n" display="inline"><mrow><mi>n</mi><mo>×</mo><mi>n</mi></mrow></math> <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">symmetric matrix</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/SymmetricMatrix.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/symmetricmatrix"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> and it is equal to the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">covariance matrix</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/CovarianceMatrix.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/covariancematrix"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of the
 <math id="p4.m10" class="ltx_Math" alttext="X_{i}" display="inline"><msub><mi>X</mi><mi>i</mi></msub></math>’s.</p>
 </div>
 <div id="p5" class="ltx_para">
@@ -122,7 +122,7 @@ defined to be:</p>
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">If the <math id="I1.i2.p1.m1" class="ltx_Math" alttext="{X_{i}}" display="inline"><msub><mi>X</mi><mi>i</mi></msub></math>’s are <em class="ltx_emph ltx_font_italic">iid</em> (independent identically distributed), with variance <math id="I1.i2.p1.m2" class="ltx_Math" alttext="\boldsymbol{\sigma}^{2}" display="inline"><msup><mi>𝝈</mi><mn>2</mn></msup></math>, then</p>
+<p class="ltx_p">If the <math id="I1.i2.p1.m1" class="ltx_Math" alttext="{X_{i}}" display="inline"><msub><mi>X</mi><mi>i</mi></msub></math>’s are <em class="ltx_emph ltx_font_italic">iid</em> (<a class="nnexus_concept" href="http://planetmath.org/independentidenticallydistributed">independent identically distributed</a>), with variance <math id="I1.i2.p1.m2" class="ltx_Math" alttext="\boldsymbol{\sigma}^{2}" display="inline"><msup><mi>𝝈</mi><mn>2</mn></msup></math>, then</p>
 <table id="S0.Ex7" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
