--- a/html/62J10-GeneralLinearModel.html
+++ b/html/62J10-GeneralLinearModel.html
@@ -20,22 +20,22 @@
 <br class="ltx_break">
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">In statistical modeling of <math id="p2.m1" class="ltx_Math" alttext="N" display="inline"><mi>N</mi></math> data observations (<math id="p2.m2" class="ltx_Math" alttext="N&lt;\infty" display="inline"><mrow><mi>N</mi><mo>&lt;</mo><mi mathvariant="normal">∞</mi></mrow></math>), two types of variables are usually defined. One is the response variable or variate, usually denoted by <math id="p2.m3" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math>, and the other is the explanatory variable or covariate <math id="p2.m4" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>. While there is only one response variable, there may be one or more than one explanatory variables. The response variable is considered random, where as the explanatory variable(s) may or may not be random.
+<p class="ltx_p">In statistical modeling of <math id="p2.m1" class="ltx_Math" alttext="N" display="inline"><mi>N</mi></math> data <a class="nnexus_concept" href="http://planetmath.org/datatypesinstatistics">observations</a> (<math id="p2.m2" class="ltx_Math" alttext="N&lt;\infty" display="inline"><mrow><mi>N</mi><mo>&lt;</mo><mi mathvariant="normal">∞</mi></mrow></math>), two types of variables are usually defined. One is the response variable or <a class="nnexus_concept" href="http://mathworld.wolfram.com/Variate.html">variate</a>, usually denoted by <math id="p2.m3" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math>, and the other is the explanatory variable or covariate <math id="p2.m4" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math>. While there is only one response variable, there may be one or more than one explanatory variables. The response variable is considered random, where as the explanatory variable(s) may or may not be random.
 </p>
 </div>
 <div id="p3" class="ltx_para">
-<p class="ltx_p">Based on the above setup, a <em class="ltx_emph ltx_font_italic">general linear model</em>, or <em class="ltx_emph ltx_font_italic">normal linear model</em>, is a statistical model with the following assumptions:</p>
+<p class="ltx_p">Based on the above setup, a <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/generallinearmodel">general linear model</a></em>, or <em class="ltx_emph ltx_font_italic">normal linear model</em>, is a <a class="nnexus_concept" href="http://planetmath.org/statisticalmodel">statistical model</a> with the following <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">assumptions</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/deduction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/derivationsinnaturaldeduction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>:</p>
 <ol id="I1" class="ltx_enumerate">
 <li id="I1.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">1.</span> 
 <div id="I1.i1.p1" class="ltx_para">
-<p class="ltx_p">the response variable <math id="I1.i1.p1.m1" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> is a continuous random variable</p>
+<p class="ltx_p">the response variable <math id="I1.i1.p1.m1" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> is a <a class="nnexus_concept" href="http://planetmath.org/randomvariable">continuous random variable</a></p>
 </div>
 </li>
 <li id="I1.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">2.</span> 
 <div id="I1.i2.p1" class="ltx_para">
-<p class="ltx_p">the response variable <math id="I1.i2.p1.m1" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> can be expressed as a linear combination of functions <math id="I1.i2.p1.m2" class="ltx_Math" alttext="z_{i}(\textbf{X})" display="inline"><mrow><msub><mi>z</mi><mi>i</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mtext>𝐗</mtext><mo stretchy="false">)</mo></mrow></mrow></math>, of the explanatory variables, plus a random error term <math id="I1.i2.p1.m3" class="ltx_Math" alttext="\varepsilon" display="inline"><mi>ε</mi></math>:</p>
+<p class="ltx_p">the response variable <math id="I1.i2.p1.m1" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> can be expressed as a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">linear combination</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/LinearCombination.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/linearcombination"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> of <a class="nnexus_concept" href="http://planetmath.org/function">functions</a> <math id="I1.i2.p1.m2" class="ltx_Math" alttext="z_{i}(\textbf{X})" display="inline"><mrow><msub><mi>z</mi><mi>i</mi></msub><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mtext>𝐗</mtext><mo stretchy="false">)</mo></mrow></mrow></math>, of the explanatory variables, plus a random error term <math id="I1.i2.p1.m3" class="ltx_Math" alttext="\varepsilon" display="inline"><mi>ε</mi></math>:</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -44,19 +44,19 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">The portion of <math id="I1.i2.p1.m4" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> without the error term is known as the <em class="ltx_emph ltx_font_italic">systematic component</em> of <math id="I1.i2.p1.m5" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math>.</p>
+<p class="ltx_p">The portion of <math id="I1.i2.p1.m4" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> without the error term is known as the <em class="ltx_emph ltx_font_italic">systematic <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">component</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Component.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/connectedgraph"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/coordinatevector"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/frame"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></em> of <math id="I1.i2.p1.m5" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math>.</p>
 </div>
 </li>
 <li id="I1.i3" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">3.</span> 
 <div id="I1.i3.p1" class="ltx_para">
-<p class="ltx_p">the error component and the systematic component are independent</p>
+<p class="ltx_p">the error component and the systematic component are <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">independent</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/projectivebasis"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/independent"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></p>
 </div>
 </li>
 <li id="I1.i4" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">4.</span> 
 <div id="I1.i4.p1" class="ltx_para">
-<p class="ltx_p">random error variables <math id="I1.i4.p1.m1" class="ltx_Math" alttext="\varepsilon_{i}" display="inline"><msub><mi>ε</mi><mi>i</mi></msub></math> for the <math id="I1.i4.p1.m2" class="ltx_Math" alttext="N" display="inline"><mi>N</mi></math> observations are iid normal with mean 0 and variance <math id="I1.i4.p1.m3" class="ltx_Math" alttext="\sigma^{2}" display="inline"><msup><mi>σ</mi><mn>2</mn></msup></math></p>
+<p class="ltx_p">random error variables <math id="I1.i4.p1.m1" class="ltx_Math" alttext="\varepsilon_{i}" display="inline"><msub><mi>ε</mi><mi>i</mi></msub></math> for the <math id="I1.i4.p1.m2" class="ltx_Math" alttext="N" display="inline"><mi>N</mi></math> observations are iid normal with mean 0 and <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">variance</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Variance.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/variance"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="I1.i4.p1.m3" class="ltx_Math" alttext="\sigma^{2}" display="inline"><msup><mi>σ</mi><mn>2</mn></msup></math></p>
 </div>
 </li>
 </ol>
@@ -67,7 +67,7 @@
 <li id="I2.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I2.i1.p1" class="ltx_para">
-<p class="ltx_p">Conditioning on the explanatory variables, the random variables <math id="I2.i1.p1.m1" class="ltx_Math" alttext="Y_{i}" display="inline"><msub><mi>Y</mi><mi>i</mi></msub></math> corresponding to the individual responses are independent, normally distributed, with mean</p>
+<p class="ltx_p">Conditioning on the explanatory variables, the <a class="nnexus_concept" href="http://mathworld.wolfram.com/RandomVariable.html">random variables</a> <math id="I2.i1.p1.m1" class="ltx_Math" alttext="Y_{i}" display="inline"><msub><mi>Y</mi><mi>i</mi></msub></math> corresponding to the <a class="nnexus_concept" href="http://mathworld.wolfram.com/Individual.html">individual</a> responses are independent, normally distributed, with mean</p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -83,13 +83,13 @@
 <li id="I2.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I2.i2.p1" class="ltx_para">
-<p class="ltx_p">A linear regression model is a special case of the general linear model where all explanatory variables are assumed to be continuous.</p>
+<p class="ltx_p">A <a class="nnexus_concept" href="http://planetmath.org/regressionmodel">linear regression model</a> is a special case of the general linear model where all explanatory variables are assumed to be <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">continuous</a><sup style="display: none;"><a class="nnexus_concept" href="http://planetmath.org/classesofordinalsandenumeratingfunctions"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a><a class="nnexus_concept" href="http://planetmath.org/continuous"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>.</p>
 </div>
 </li>
 <li id="I2.i3" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I2.i3.p1" class="ltx_para">
-<p class="ltx_p"><em class="ltx_emph ltx_font_italic">Analysis of variance</em> model, or <em class="ltx_emph ltx_font_italic">ANOVA</em>, is another special case of the general linear model, where all of the explantory variables are categorical in nature (for example, gender, marital status, etc..).</p>
+<p class="ltx_p"><em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://mathworld.wolfram.com/AnalysisofVariance.html">Analysis of variance</a></em> model, or <em class="ltx_emph ltx_font_italic">ANOVA</em>, is another special case of the general linear model, where all of the explantory variables are <a class="nnexus_concept" href="http://planetmath.org/categoricalquantumlmlogicalgebras">categorical</a> in nature (for example, gender, marital status, etc..).</p>
 </div>
 </li>
 <li id="I2.i4" class="ltx_item" style="list-style-type:none;">
@@ -101,7 +101,7 @@
 <li id="I2.i5" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_itemize">•</span> 
 <div id="I2.i5.p1" class="ltx_para">
-<p class="ltx_p">The general linear model is a special case of the <em class="ltx_emph ltx_font_italic">generalized linear model</em>, where the assumption that the response variable <math id="I2.i5.p1.m1" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> has a normal distribution is dropped.</p>
+<p class="ltx_p">The general linear model is a special case of the <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/generalizedlinearmodel">generalized linear model</a></em>, where the assumption that the response variable <math id="I2.i5.p1.m1" class="ltx_Math" alttext="Y" display="inline"><mi>Y</mi></math> has a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">normal distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/NormalDistribution.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/normalrandomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> is dropped.</p>
 </div>
 </li>
 </ul>
@@ -144,7 +144,7 @@
 <td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
 </tr>
 <tr class="ltx_tr">
-<td class="ltx_td ltx_align_left ltx_border_l">Classification</td>
+<td class="ltx_td ltx_align_left ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></td>
 <td class="ltx_td ltx_align_left ltx_border_r">msc 62J10</td>
 </tr>
 <tr class="ltx_tr">
