--- a/html/62N99-WeibullRandomVariable.html
+++ b/html/62N99-WeibullRandomVariable.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p"><math id="p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is a <em class="ltx_emph ltx_font_italic">Weibull random variable</em> if it has a probability density function, given by</p>
+<p class="ltx_p"><math id="p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is a <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/weibullrandomvariable">Weibull random variable</a></em> if it has a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">probability density function</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ProbabilityDensityFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/probabilitydistributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup>, given by</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -28,10 +28,10 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">where <math id="p1.m2" class="ltx_Math" alttext="\alpha,\gamma,\mu\in\mathbb{R}" display="inline"><mrow><mrow><mi>α</mi><mo>,</mo><mi>γ</mi><mo>,</mo><mi>μ</mi></mrow><mo>∈</mo><mi>ℝ</mi></mrow></math>, <math id="p1.m3" class="ltx_Math" alttext="\alpha,\gamma&gt;0" display="inline"><mrow><mrow><mi>α</mi><mo>,</mo><mi>γ</mi></mrow><mo>&gt;</mo><mn>0</mn></mrow></math> and <math id="p1.m4" class="ltx_Math" alttext="x\geq\mu" display="inline"><mrow><mi>x</mi><mo>≥</mo><mi>μ</mi></mrow></math>. <math id="p1.m5" class="ltx_Math" alttext="\alpha" display="inline"><mi>α</mi></math> is the <em class="ltx_emph ltx_font_italic">scale parameter</em>, <math id="p1.m6" class="ltx_Math" alttext="\gamma" display="inline"><mi>γ</mi></math> is the <em class="ltx_emph ltx_font_italic">shape parameter</em>, and <math id="p1.m7" class="ltx_Math" alttext="\mu" display="inline"><mi>μ</mi></math> is the <em class="ltx_emph ltx_font_italic">location parameter</em>.</p>
+<p class="ltx_p">where <math id="p1.m2" class="ltx_Math" alttext="\alpha,\gamma,\mu\in\mathbb{R}" display="inline"><mrow><mrow><mi>α</mi><mo>,</mo><mi>γ</mi><mo>,</mo><mi>μ</mi></mrow><mo>∈</mo><mi>ℝ</mi></mrow></math>, <math id="p1.m3" class="ltx_Math" alttext="\alpha,\gamma&gt;0" display="inline"><mrow><mrow><mi>α</mi><mo>,</mo><mi>γ</mi></mrow><mo>&gt;</mo><mn>0</mn></mrow></math> and <math id="p1.m4" class="ltx_Math" alttext="x\geq\mu" display="inline"><mrow><mi>x</mi><mo>≥</mo><mi>μ</mi></mrow></math>. <math id="p1.m5" class="ltx_Math" alttext="\alpha" display="inline"><mi>α</mi></math> is the <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://planetmath.org/typeofadistributionfunction">scale parameter</a></em>, <math id="p1.m6" class="ltx_Math" alttext="\gamma" display="inline"><mi>γ</mi></math> is the <em class="ltx_emph ltx_font_italic">shape parameter</em>, and <math id="p1.m7" class="ltx_Math" alttext="\mu" display="inline"><mi>μ</mi></math> is the <em class="ltx_emph ltx_font_italic">location parameter</em>.</p>
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">Notation for <math id="p2.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> having a Weibull distribution is <math id="p2.m2" class="ltx_Math" alttext="X\sim\mbox{Wei}(\alpha,\gamma,\mu)" display="inline"><mrow><mi>X</mi><mo>∼</mo><mrow><mtext>Wei</mtext><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>α</mi><mo>,</mo><mi>γ</mi><mo>,</mo><mi>μ</mi><mo stretchy="false">)</mo></mrow></mrow></mrow></math>. Usually, the location and scale parameters are dropped by the transformation</p>
+<p class="ltx_p">Notation for <math id="p2.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> having a <a class="nnexus_concept" href="http://mathworld.wolfram.com/WeibullDistribution.html">Weibull distribution</a> is <math id="p2.m2" class="ltx_Math" alttext="X\sim\mbox{Wei}(\alpha,\gamma,\mu)" display="inline"><mrow><mi>X</mi><mo>∼</mo><mrow><mtext>Wei</mtext><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>α</mi><mo>,</mo><mi>γ</mi><mo>,</mo><mi>μ</mi><mo stretchy="false">)</mo></mrow></mrow></mrow></math>. Usually, the location and scale parameters are dropped by the transformation</p>
 <table id="S0.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -40,7 +40,7 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">so that <math id="p2.m3" class="ltx_Math" alttext="Y\sim\mbox{Wei}(\gamma):=\mbox{Wei}(1,\gamma,0)" display="inline"><mrow><mi>Y</mi><mo>∼</mo><mrow><mtext>Wei</mtext><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>γ</mi><mo stretchy="false">)</mo></mrow></mrow><mo>:=</mo><mrow><mtext>Wei</mtext><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mn>1</mn><mo>,</mo><mi>γ</mi><mo>,</mo><mn>0</mn><mo stretchy="false">)</mo></mrow></mrow></mrow></math>. The resulting distribution is called the <em class="ltx_emph ltx_font_italic">standard Weibull</em>, or <em class="ltx_emph ltx_font_italic">Rayleigh distribution</em>:</p>
+<p class="ltx_p">so that <math id="p2.m3" class="ltx_Math" alttext="Y\sim\mbox{Wei}(\gamma):=\mbox{Wei}(1,\gamma,0)" display="inline"><mrow><mi>Y</mi><mo>∼</mo><mrow><mtext>Wei</mtext><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>γ</mi><mo stretchy="false">)</mo></mrow></mrow><mo>:=</mo><mrow><mtext>Wei</mtext><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mn>1</mn><mo>,</mo><mi>γ</mi><mo>,</mo><mn>0</mn><mo stretchy="false">)</mo></mrow></mrow></mrow></math>. The resulting <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/1.16#SS1.p5"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://planetmath.org/distributionfunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> is called the <em class="ltx_emph ltx_font_italic">standard Weibull</em>, or <em class="ltx_emph ltx_font_italic"><a class="nnexus_concept" href="http://mathworld.wolfram.com/RayleighDistribution.html">Rayleigh distribution</a></em>:</p>
 <table id="S0.Ex3" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -57,7 +57,7 @@ Given a standard Weibull distribution <math id="p3.m1" class="ltx_Math" alttext=
 <li id="I1.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">1.</span> 
 <div id="I1.i1.p1" class="ltx_para">
-<p class="ltx_p"><math id="I1.i1.p1.m1" class="ltx_Math" alttext="\operatorname{E}[X]=\Gamma(\frac{\gamma+1}{\gamma})" display="inline"><mrow><mrow><mi mathvariant="normal">E</mi><mo>⁡</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow><mo>=</mo><mrow><mi mathvariant="normal">Γ</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mfrac><mrow><mi>γ</mi><mo>+</mo><mn>1</mn></mrow><mi>γ</mi></mfrac><mo stretchy="false">)</mo></mrow></mrow></mrow></math>, where <math id="I1.i1.p1.m2" class="ltx_Math" alttext="\Gamma" display="inline"><mi mathvariant="normal">Γ</mi></math> is the gamma function</p>
+<p class="ltx_p"><math id="I1.i1.p1.m1" class="ltx_Math" alttext="\operatorname{E}[X]=\Gamma(\frac{\gamma+1}{\gamma})" display="inline"><mrow><mrow><mi mathvariant="normal">E</mi><mo>⁡</mo><mrow><mo stretchy="false">[</mo><mi>X</mi><mo stretchy="false">]</mo></mrow></mrow><mo>=</mo><mrow><mi mathvariant="normal">Γ</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mfrac><mrow><mi>γ</mi><mo>+</mo><mn>1</mn></mrow><mi>γ</mi></mfrac><mo stretchy="false">)</mo></mrow></mrow></mrow></math>, where <math id="I1.i1.p1.m2" class="ltx_Math" alttext="\Gamma" display="inline"><mi mathvariant="normal">Γ</mi></math> is the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">gamma function</a><sup style="display: none;"><a class="nnexus_concept" href="http://dlmf.nist.gov/5#PT2"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://dlmf.nist.gov/5.2#E1"><img src="http://dlmf.nist.gov/style/DLMF-16.png" alt="Dlmf"></img></a><a class="nnexus_concept" href="http://mathworld.wolfram.com/GammaFunction.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/gammafunction"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup></p>
 </div>
 </li>
 <li id="I1.i2" class="ltx_item" style="list-style-type:none;">
@@ -83,7 +83,7 @@ Given a standard Weibull distribution <math id="p3.m1" class="ltx_Math" alttext=
 <li id="I1.i5" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_enumerate">5.</span> 
 <div id="I1.i5.p1" class="ltx_para">
-<p class="ltx_p"><math id="I1.i5.p1.m1" class="ltx_Math" alttext="X\sim\mbox{Wei}(\alpha,\gamma,0)" display="inline"><mrow><mi>X</mi><mo>∼</mo><mrow><mtext>Wei</mtext><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>α</mi><mo>,</mo><mi>γ</mi><mo>,</mo><mn>0</mn><mo stretchy="false">)</mo></mrow></mrow></mrow></math> iff <math id="I1.i5.p1.m2" class="ltx_Math" alttext="X^{\gamma}\sim\mbox{Exp}(\alpha^{\gamma})" display="inline"><mrow><msup><mi>X</mi><mi>γ</mi></msup><mo>∼</mo><mrow><mtext>Exp</mtext><mo>⁢</mo><mrow><mo stretchy="false">(</mo><msup><mi>α</mi><mi>γ</mi></msup><mo stretchy="false">)</mo></mrow></mrow></mrow></math>, the exponential distribution with parameter <math id="I1.i5.p1.m3" class="ltx_Math" alttext="\alpha^{\gamma}" display="inline"><msup><mi>α</mi><mi>γ</mi></msup></math></p>
+<p class="ltx_p"><math id="I1.i5.p1.m1" class="ltx_Math" alttext="X\sim\mbox{Wei}(\alpha,\gamma,0)" display="inline"><mrow><mi>X</mi><mo>∼</mo><mrow><mtext>Wei</mtext><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>α</mi><mo>,</mo><mi>γ</mi><mo>,</mo><mn>0</mn><mo stretchy="false">)</mo></mrow></mrow></mrow></math> iff <math id="I1.i5.p1.m2" class="ltx_Math" alttext="X^{\gamma}\sim\mbox{Exp}(\alpha^{\gamma})" display="inline"><mrow><msup><mi>X</mi><mi>γ</mi></msup><mo>∼</mo><mrow><mtext>Exp</mtext><mo>⁢</mo><mrow><mo stretchy="false">(</mo><msup><mi>α</mi><mi>γ</mi></msup><mo stretchy="false">)</mo></mrow></mrow></mrow></math>, the <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">exponential distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/ExponentialDistribution.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/exponentialrandomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> with <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">parameter</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Parameter.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/parametre"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> <math id="I1.i5.p1.m3" class="ltx_Math" alttext="\alpha^{\gamma}" display="inline"><msup><mi>α</mi><mi>γ</mi></msup></math></p>
 </div>
 </li>
 </ol>
@@ -99,7 +99,7 @@ The Weibull distribution is often used to model reliability or lifetime of  such
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Weibull random variable</td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">WeibullRandomVariable</td>
 </tr>
 <tr class="ltx_tr">
@@ -128,10 +128,10 @@ The Weibull distribution is often used to model reliability or lifetime of  such
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://mathworld.wolfram.com/Classification.html">Classification</a></th>
 <td class="ltx_td ltx_align_left ltx_border_r">msc 62N99</td>
 </tr>
 <tr class="ltx_tr">
