--- a/html/62P05-LawOfRareEvents.html
+++ b/html/62P05-LawOfRareEvents.html
@@ -18,7 +18,7 @@
 
 <div id="p1" class="ltx_para">
 <br class="ltx_break">
-<p class="ltx_p">Let <math id="p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> be distributed as <math id="p1.m2" class="ltx_Math" alttext="Bin(n,p)" display="inline"><mrow><mi>B</mi><mo>⁢</mo><mi>i</mi><mo>⁢</mo><mi>n</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>n</mi><mo>,</mo><mi>p</mi><mo stretchy="false">)</mo></mrow></mrow></math>, a binomial random variable with parameters <math id="p1.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> and <math id="p1.m4" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math>. Suppose</p>
+<p class="ltx_p">Let <math id="p1.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> be distributed as <math id="p1.m2" class="ltx_Math" alttext="Bin(n,p)" display="inline"><mrow><mi>B</mi><mo>⁢</mo><mi>i</mi><mo>⁢</mo><mi>n</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>n</mi><mo>,</mo><mi>p</mi><mo stretchy="false">)</mo></mrow></mrow></math>, a binomial <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">random variable</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/RandomVariable.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/randomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> with <a class="nnexus_concept" href="http://planetmath.org/parametre">parameters</a> <math id="p1.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> and <math id="p1.m4" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math>. Suppose</p>
 <table id="S0.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -27,10 +27,10 @@
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </table>
-<p class="ltx_p">where <math id="p1.m5" class="ltx_Math" alttext="\lambda" display="inline"><mi>λ</mi></math> is a positive real constant, then <math id="p1.m6" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is asymptotically distributed as <math id="p1.m7" class="ltx_Math" alttext="Poisson(\lambda)" display="inline"><mrow><mi>P</mi><mo>⁢</mo><mi>o</mi><mo>⁢</mo><mi>i</mi><mo>⁢</mo><mi>s</mi><mo>⁢</mo><mi>s</mi><mo>⁢</mo><mi>o</mi><mo>⁢</mo><mi>n</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>λ</mi><mo stretchy="false">)</mo></mrow></mrow></math>, a Poisson distribution with parameter <math id="p1.m8" class="ltx_Math" alttext="\lambda" display="inline"><mi>λ</mi></math>.</p>
+<p class="ltx_p">where <math id="p1.m5" class="ltx_Math" alttext="\lambda" display="inline"><mi>λ</mi></math> is a <a class="nnexus_concept" href="http://planetmath.org/positive">positive</a> real constant, then <math id="p1.m6" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> is asymptotically distributed as <math id="p1.m7" class="ltx_Math" alttext="Poisson(\lambda)" display="inline"><mrow><mi>P</mi><mo>⁢</mo><mi>o</mi><mo>⁢</mo><mi>i</mi><mo>⁢</mo><mi>s</mi><mo>⁢</mo><mi>s</mi><mo>⁢</mo><mi>o</mi><mo>⁢</mo><mi>n</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>λ</mi><mo stretchy="false">)</mo></mrow></mrow></math>, a <a class="nnexus_concepts" href="javascript:void(0)" onclick="this.nextSibling.style.display='inline'">Poisson distribution</a><sup style="display: none;"><a class="nnexus_concept" href="http://mathworld.wolfram.com/PoissonDistribution.html"><img src="http://mathworld.wolfram.com/favicon_mathworld.png" alt="Mathworld"></img></a><a class="nnexus_concept" href="http://planetmath.org/poissonrandomvariable"><img src="http://planetmath.org/sites/default/files/fab-favicon.ico" alt="Planetmath"></img></a></sup> with parameter <math id="p1.m8" class="ltx_Math" alttext="\lambda" display="inline"><mi>λ</mi></math>.</p>
 </div>
 <div id="p2" class="ltx_para">
-<p class="ltx_p">Basically, when the size of the population <math id="p2.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is very large and the occurrence of certain <em class="ltx_emph ltx_font_italic">event</em> <math id="p2.m2" class="ltx_Math" alttext="A" display="inline"><mi>A</mi></math> is rare, where <math id="p2.m3" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math>, the probability of <math id="p2.m4" class="ltx_Math" alttext="A" display="inline"><mi>A</mi></math> is very small, the binomial random variable <math id="p2.m5" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> can be approximated by a Poisson random variable.</p>
+<p class="ltx_p">Basically, when the size of the <a class="nnexus_concept" href="http://mathworld.wolfram.com/Population.html">population</a> <math id="p2.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is very large and the occurrence of certain <em class="ltx_emph ltx_font_italic">event</em> <math id="p2.m2" class="ltx_Math" alttext="A" display="inline"><mi>A</mi></math> is rare, where <math id="p2.m3" class="ltx_Math" alttext="p" display="inline"><mi>p</mi></math>, the <a class="nnexus_concept" href="http://mathworld.wolfram.com/Probability.html">probability</a> of <math id="p2.m4" class="ltx_Math" alttext="A" display="inline"><mi>A</mi></math> is very small, the binomial random variable <math id="p2.m5" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> can be approximated by a Poisson random variable.</p>
 </div>
 <div id="p3" class="ltx_para">
 <p class="ltx_p"><span class="ltx_text ltx_font_bold">Sketch of Proof.</span> Let <math id="p3.m1" class="ltx_Math" alttext="X\sim Bin(n,p)" display="inline"><mrow><mi>X</mi><mo>∼</mo><mrow><mi>B</mi><mo>⁢</mo><mi>i</mi><mo>⁢</mo><mi>n</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>n</mi><mo>,</mo><mi>p</mi><mo stretchy="false">)</mo></mrow></mrow></mrow></math>. So</p>
@@ -104,7 +104,7 @@
 </table>
 </div>
 <div id="p4" class="ltx_para">
-<p class="ltx_p"><span class="ltx_text ltx_font_bold">Example.</span> Suppose in a given year, the number of fatal automobile accidents has a binomial distribution for a particular insuarance company with five hundred automobile insurance policies. On average, there is one policy out of the five hundred that will be involved in a fatal crash. What is the probability that there will be no fatal accidents (out of five hundred policies) in any particular year?</p>
+<p class="ltx_p"><span class="ltx_text ltx_font_bold">Example.</span> Suppose in a given year, the number of fatal automobile accidents has a <a class="nnexus_concept" href="http://mathworld.wolfram.com/BinomialDistribution.html">binomial distribution</a> for a particular insuarance company with five <a class="nnexus_concept" href="http://planetmath.org/decimalplace">hundred</a> automobile insurance policies. On average, there is one policy out of the five hundred that will be involved in a fatal crash. What is the probability that there will be no fatal accidents (out of five hundred policies) in any particular year?</p>
 </div>
 <div id="p5" class="ltx_para">
 <p class="ltx_p"><span class="ltx_text ltx_font_bold">Solution.</span> If <math id="p5.m1" class="ltx_Math" alttext="X" display="inline"><mi>X</mi></math> be the number of fatal accidents in a year from a population of 500 auto policies, then <math id="p5.m2" class="ltx_Math" alttext="X\sim Bin(n,p)" display="inline"><mrow><mi>X</mi><mo>∼</mo><mrow><mi>B</mi><mo>⁢</mo><mi>i</mi><mo>⁢</mo><mi>n</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>n</mi><mo>,</mo><mi>p</mi><mo stretchy="false">)</mo></mrow></mrow></mrow></math> with <math id="p5.m3" class="ltx_Math" alttext="n=500" display="inline"><mrow><mi>n</mi><mo>=</mo><mn>500</mn></mrow></math> and <math id="p5.m4" class="ltx_Math" alttext="p=1/500" display="inline"><mrow><mi>p</mi><mo>=</mo><mrow><mn>1</mn><mo>/</mo><mn>500</mn></mrow></mrow></math>. <math id="p5.m5" class="ltx_Math" alttext="\lambda=500\times 1/500=1" display="inline"><mrow><mi>λ</mi><mo>=</mo><mrow><mrow><mn>500</mn><mo>×</mo><mn>1</mn></mrow><mo>/</mo><mn>500</mn></mrow><mo>=</mo><mn>1</mn></mrow></math> and so</p>
@@ -129,10 +129,10 @@
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_t">Title</th>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">law of rare events</td>
+<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t"><a class="nnexus_concept" href="http://planetmath.org/lawofrareevents">law of rare events</a></td>
 </tr>
 <tr class="ltx_tr">
-<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Canonical name</th>
+<th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l"><a class="nnexus_concept" href="http://planetmath.org/canonical">Canonical</a> name</th>
 <td class="ltx_td ltx_align_left ltx_border_r">LawOfRareEvents</td>
 </tr>
 <tr class="ltx_tr">
@@ -161,7 +161,7 @@
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Entry type</th>
-<td class="ltx_td ltx_align_left ltx_border_r">Definition</td>
+<td class="ltx_td ltx_align_left ltx_border_r"><a class="nnexus_concept" href="http://planetmath.org/definition">Definition</a></td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l">Classification</th>
@@ -177,7 +177,7 @@
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_b ltx_border_l">Synonym</th>
-<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r">Poisson theorem</td>
+<td class="ltx_td ltx_align_left ltx_border_b ltx_border_r"><a class="nnexus_concept" href="http://mathworld.wolfram.com/PoissonTheorem.html">Poisson theorem</a></td>
 </tr>
 </tbody>
 </table>
